--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "تنطفئ إضاءة جميع الرموز الرئيسية ويبدأ الحرف \"P\" في الوميض، وشبكة هذا الجهاز مفتوحة الآن للإقران لمدة 3 دقائق.\nانقر فوق Next للمتابعة.",
     "cooling_config_wifi_step1": "اضبط الجهاز على ظروف التشغيل العادية. انقر مع الاستمرار على رمز Wi-Fi لمدة 3 ثوانٍ حتى تسمع صوت تنبيه. سيبدأ رمز Wi-Fi في الوميض. لقد دخلت إلى قائمة اتصال الشبكة.",
     "cooling_config_wifi_step2": "إذا تم عرض \"02\"، تخطي هذه الخطوة.\nإذا تم عرض \"0\"، فانقر فوق مفتاح التبريد/التجميد المكثف لتمكين Wi-Fi على الجهاز.\nستعرض الشاشة الرقم \"01\" لفترة وجيزة وتتغير إلى \"02\" تلقائيًا.",
-    "cooling_config_wifi_step3": "انتقل باستخدام مفاتيح الأسهم وحدد \"S\".\nقم بتأكيد \"S\" بالضغط على مفتاح التبريد/التجميد المكثف.\nسيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للاتصال لمدة 3 دقائق.",
+    "cooling_config_wifi_step3": "انتقل باستخدام مفاتيح الأسهم وحدد \"S\".\nقم بتأكيد \"S\" بالضغط على مفتاح التبريد/التجميد المكثف.\nسيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للاتصال لمدة 5 دقائق.",
     "cooling_config_wifi_step1_pair": "اضبط الجهاز على ظروف التشغيل العادية. انقر مع الاستمرار على رمز Wi-Fi لمدة 3 ثوانٍ حتى تسمع صوت تنبيه. سيبدأ رمز Wi-Fi في الوميض وسيظهر \"05\". لقد دخلت إلى قائمة اتصال الشبكة.",
     "cooling_config_wifi_step2_pair": "انتقل باستخدام مفاتيح الأسهم واختر \"P\". أكِّد \"P\" بالضغط على مفتاح التبريد/التجميد المكثف. سيبدأ مفتاح التبريد/التجميد المكثف في الوميض. شبكة الجهاز مفتوحة الآن للإقران لمدة 3 دقائق. انقر فوق \"التالي\" للمتابعة.",
     "dw_config_wifi_step1": "قم بتشغيل الجهاز. انتقل باستخدام مفاتيح الأسهم إلى الإعدادات. اضغط على أيقونة القائمة للدخول إلى الإعدادات.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والهواء الساخن، مما يقلل من وقت الطهي. تُستخدم هذه الوظيفة لطهي رغيف اللحم والبطاطس والمعجنات والكعك.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والشواية والمروحة، مما يقلل من وقت الطهي. مناسب لطهي البطاطس المشوية والدجاج المشوي وقطع اللحم الصغيرة.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والحرارة العلوية والسفلية والمروحة. وهذا يقلل من وقت الطهي. مناسب لطهي الفطائر والخبز وقطع اللحم الكبيرة.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والحرارة العلوية والمروحة، مما يقلل من وقت الطهي. مناسب لطهي الخضروات والأطعمة المجمدة مثل اللازانيا. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والحرارة العلوية والمروحة، مما يقلل من وقت الطهي. مناسب لطهي الخضروات والأطعمة المجمدة مثل اللازانيا. ",
+    "CL_DV_RF_display_brightness_setting_tips": "اضبط سطوع شاشة الثلاجة لديك.",
+    "CL_DV_RF_modes_tips": "يمكن ضبط أوضاع خاصة لمناسبات مختلفة. حدد الأوضاع التي يجب تنشيطها. لا يمكن استخدام أوضاع متعددة في نفس الوقت.",
+    "CL_DV_RF_eco_mode_desc": "عند تمكين الوضع الاقتصادي، سيتم ضبط درجة حرارة الثلاجة والمجمدة على درجات الحرارة الأكثر كفاءة في استخدام الطاقة.",
+    "CL_DV_RF_holiday_mode_desc": "عند تمكين وضع العطلة، يتم ضبط درجة حرارة الحجرة العلوية على 15 درجة مئوية. ويظل المجمد في مكانه عند درجة الحرارة المضبوطة سابقًا.",
+    "CL_DV_RF_party_mode_desc": "عند تفعيل وضع الحفلة، سيتم تبريد جميع المقصورات إلى الحد الأقصى. سيتم تعطيل وضع الحفلة تلقائيًا بعد 24 ساعة.",
+    "CL_DV_RF_cleaning_mode_desc": "يسمح وضع التنظيف بتنظيف حجرة التبريد بشكل مريح.",
+    "CL_DV_RF_sabbath_mode_desc": "سيتم تنشيط وضع السبت لمدة 72 ساعة. اضغط على * لمدة 3 ثوانٍ لإلغاء تنشيطه أثناء هذه الدورة. يتكرر وضع السبت أسبوعيًا.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "اضغط لفترة طويلة على زر \"المؤقت\" لبدء تكوين الشبكة، وعندما يومض مؤشر WIFI، يمكنك توصيل WIFI. بعد 3 دقائق، سيتم إلغاء الحالة إذا لم يكن هناك تكوين للشبكة، وكان ضوء المؤشر مطفأ. إذا كنت بحاجة إلى إعادة توصيل WIFI، فاضغط لفترة طويلة على زر \"المؤقت\" لبدء تكوين الشبكة مرة أخرى، وسيومض مؤشر WIFI مرة أخرى.",
+    "CL_DV_DW_washing_progress": "جاري الغسيل...",
+    "CL_DV_DW_washing_in_running": "الغسيل في ## قيد التشغيل",
+    "CL_DV_DW_washing_paused": "تم إيقاف الغسيل",
+    "CL_DV_DW_washing_in_paused": "تم إيقاف الغسيل في ## مؤقتًا",
+    "CL_DV_RF_set_this_temperature": "ضبط هذه درجة الحرارة",
+    "CL_DV_TD_drying_in_progress": "جاري التجفيف...",
+    "CL_DV_TD_drying_in_x_is_running": "جاري تجفيف في ##",
+    "CL_DV_TD_drying_in_x_is_paused": "تم إيقاف التجفيف في ## مؤقتًا",
+    "CL_DV_TD_drying_in_x_complete": "تم الانتهاء من التجفيف في ##",
+    "CL_DV_TD_drying_done": "التجفيف انتهى",
+    "CL_DV_WM_washing_in_complete": "تم الانتهاء من الغسيل في ##",
+    "CL_DV_RF_switch_to_eco_mode": "التبديل إلى وضع ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "بسبب عدم نشاط الجهاز، ننصحك بالتبديل إلى الوضع الاقتصادي.",
+    "CL_DV_RF_start_eco_mode": "بدء وضع ECO",
+    "CL_CF_AS_support": "يدعم",
+    "CL_DV_OV_remote_start": "بدء التشغيل عن بعد",
+    "CL_DV_OV_remote_start_enable_tips": "لتفعيل التشغيل عن بعد، يرجى تأكيد تشغيل الفرن بالضغط على المقبض.",
+    "CL_CF_CO_device_runs_normal": "جهازك يعمل بحالة طبيعية.",
+    "CL_CF_CO_device_needs_attention": "الجهاز يحتاج إلى الاهتمام.",
+    "CL_DV_RF_next_cleaning_will_be": "التنظيف القادم سيكون **",
+    "CL_DV_RF_last_clean_was": "آخر عملية تنظيف كانت **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "الجهاز يحتاج إلى الاهتمام.",
+    "CL_CF_AS_run_normal_condition": "جهازك يعمل بحالة طبيعية.",
+    "CL_DV_WM_offline_content1": "تحقق مما إذا كان جهازك موصولًا ومشغّلًا.",
+    "CL_DV_WM_offline_content2": "تأكد من أن خزانتك متصلة بشبكة لاسلكية محلية.",
+    "CL_DV_WM_offline_content3": "تحقق من قوة إشارة الواي فاي الخاصة بك. إذا كانت الإشارة ضعيفة، فقد يكون الراوتر بعيدًا جدًا عن الخزانة.",
+    "CL_DV_WM_offline_title": "جهازك غير متصل بالإنترنت",
+    "CL_CF_FM_create_recipe": "إنشاء الوصفة"
 }
