--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Osvětlení všech ikon tlačítek sa zapne a \"P\"\nzačnou blikat; síť tohoto zařízení\nje nyní na 5 minut otevřená pro připojení. \nPro pokračování klikněte na NEXT.",
     "cooling_config_wifi_step1": "Nastavte spotřebič na normální provoz.\nDotkněte se ikony Wi-Fi asi na 3\nsekundy.\nSymbol Wi-Fi začne blikat a na displeji se zobrazí '0'\n. Otevřeli jste nabídku síťového\npřipojení.",
     "cooling_config_wifi_step2": "Pokud chcete povolit Wi-Fi na zařízení, dotkněte se\ntlačítka intenzivního chlazení nebo tlačítka mrazení. Na \ndispleji se krátce zobrazí '01' a automaticky se změní na \n'02' .\nWi-Fi je připravená pro připojení.",
-    "cooling_config_wifi_step3": "Pomocí tlačítek se šípkami vyberte 'S'.\nPotvrďte 'S' dotknutím se tlačítka intenzivního\nchlazení nebo tlačítka mrazení.\nTlačítko intenzivního chlazení nebo tlačítko mrazení začne\nblikat; síť tohto zařízení je\nnyní na 3 minut otevřená na připojení.\nPro pokračování klikněte na NEXT.",
+    "cooling_config_wifi_step3": "Pomocí tlačítek se šípkami vyberte 'S'.\nPotvrďte 'S' dotknutím se tlačítka intenzivního\nchlazení nebo tlačítka mrazení.\nTlačítko intenzivního chlazení nebo tlačítko mrazení začne\nblikat; síť tohto zařízení je\nnyní na 5 minut otevřená na připojení.\nPro pokračování klikněte na NEXT.",
     "cooling_config_wifi_step1_pair": "Nastavte spotřebič na normální provoz.\nDotkněte se ikony Wi-Fi asi na 3\nsekundy.\nSymbol Wi-Fi začne blikat a na displeji se zobrazí '0'\n. Otevřeli jste nabídku síťového\npřipojení.",
     "cooling_config_wifi_step2_pair": "Navigujte pomocí šipek a vyberte \"P\". Potvrďte „P“ klepnutím na tlačítko intenzivního chlazení/zmrazování. Tlačítko intenzivního chlazení/zmrazování začne blikat. Síť zařízení je nyní otevřena pro spárování po dobu 3 minut. Pokračujte kliknutím na NEXT.",
     "dw_config_wifi_step1": "Zapněte (ON) spotřebič. Navigujte pomocí tlačítek se šipkami\npro nastavení. Stlačením ikony MENU přejdete\ndo nastavení.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "KONTRAST DISPLEJE",
     "washer_atag_detergent_tab": "Mycí prostředek TAB",
     "send_and_start": "ODESLAT A SPUSTIT",
-    "language_english_gb": "ANGLIČTINA_VB (EN)",
+    "language_english_gb": "ANGLIČTINA VB (EN)",
     "language_swedish": "Švédština (SV)",
     "language_danish": "Dánština (DA)",
     "language_norwegian": "Norština (NO)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Pokrm se vaří kombinací mikrovln a horkého vzduchu. Tím se zkrátí doba vaření. Tato funkce se používá k pečení sekané, brambor, pečiva a koláčů.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Pokrm se připravuje kombinací mikrovlnné trouby, grilu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro přípravu zapékaných brambor, kuřecí pečeně a menších kousků masa.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Pokrm se vaří kombinací mikrovlnné trouby, horního a spodního ohřevu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro pečení dortů, chleba a větších kusů masa.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Pokrm se připravuje kombinací mikrovlnné trouby, horního ohřevu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro vaření zeleniny a mražených potravin, jako jsou lasagne. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Pokrm se připravuje kombinací mikrovlnné trouby, horního ohřevu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro vaření zeleniny a mražených potravin, jako jsou lasagne. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Nastavte jas displeje vaší chladničky.",
+    "CL_DV_RF_modes_tips": "Speciální režimy lze nastavit pro různé příležitosti. Rozhodněte, které režimy by měly být aktivní. Nelze použít více režimů současně.",
+    "CL_DV_RF_eco_mode_desc": "Když je povolen ekologický režim, teplota chladničky a mrazničky se nastaví na energeticky nejúčinnější teploty.",
+    "CL_DV_RF_holiday_mode_desc": "Když je povolen režim dovolené, teplota horního oddílu je nastavena na 15 °C. Mraznička zůstane v původní poloze.",
+    "CL_DV_RF_party_mode_desc": "Když je zapnutý režim párty, všechny oddíly přejdou na maximální chlazení. Párty režim bude automaticky deaktivován po 24 hodinách.",
+    "CL_DV_RF_cleaning_mode_desc": "Režim čištění umožňuje pohodlné čištění chladicího oddělení. ",
+    "CL_DV_RF_sabbath_mode_desc": "Sabbath režim bude aktivní po dobu 72 hodin.\nStisknutím * na 3 sekundy jej během tohoto cyklu deaktivujete. Opakuje se týdně.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Dlouhým stisknutím tlačítka „Timer“ spustíte konfiguraci sítě, když indikátor WIFI bliká. můžete připojit WIFI. Po 3 minutách bude stav zrušen, pokud neexistuje žádná konfigurace sítě, a kontrolka zhasne. Pokud potřebujete znovu připojit WIFI, dlouhým stisknutím tlačítka „Timer“ spusťte konfiguraci sítě znovu, indikátor WIFI bude znovu blikat.",
+    "CL_DV_DW_washing_progress": "Probíhá praní...",
+    "CL_DV_DW_washing_in_running": "Praní v ## běží",
+    "CL_DV_DW_washing_paused": "Mytí pozastaveno",
+    "CL_DV_DW_washing_in_paused": "Praní v ## bylo pozastaveno",
+    "CL_DV_RF_set_this_temperature": "Nastavte tuto teplotu",
+    "CL_DV_TD_drying_in_progress": "Probíhá sušení...",
+    "CL_DV_TD_drying_in_x_is_running": "Sušení v ## běží",
+    "CL_DV_TD_drying_in_x_is_paused": "Sušení v ## bylo pozastaveno",
+    "CL_DV_TD_drying_in_x_complete": "Sušení v ## bylo dokončeno",
+    "CL_DV_TD_drying_done": "Sušení je hotovo",
+    "CL_DV_WM_washing_in_complete": "Praní v ## bylo dokončeno",
+    "CL_DV_RF_switch_to_eco_mode": "Přepněte do režimu ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Z důvodu nečinnosti spotřebiče doporučujeme přepnout do režimu ECO.",
+    "CL_DV_RF_start_eco_mode": "Spusťte režim ECO",
+    "CL_CF_AS_support": "Podpora",
+    "CL_DV_OV_remote_start": "START NA DÁLKU",
+    "CL_DV_OV_remote_start_enable_tips": "Pro aktivaci dálkového startu potvrďte na troubě stisknutím knoflíku.",
+    "CL_CF_CO_device_runs_normal": "Vaše zařízení běží v normálním stavu.",
+    "CL_CF_CO_device_needs_attention": "Zařízení vyžaduje pozornost.",
+    "CL_DV_RF_next_cleaning_will_be": "Příští úklid bude **",
+    "CL_DV_RF_last_clean_was": "Poslední úklid byl **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Zařízení vyžaduje pozornost.",
+    "CL_CF_AS_run_normal_condition": "Vaše zařízení běží v normálním stavu.",
+    "CL_DV_WM_offline_content1": "Zkontrolujte, zda je váš spotřebič zapojen a napájení je zapnuté.",
+    "CL_DV_WM_offline_content2": "Ujistěte se, že je váš skříň připojena k místní bezdrátové síti.",
+    "CL_DV_WM_offline_content3": "Zkontrolujte sílu signálu WiFi. Pokud je signál slabý, může to být způsobeno tím, že je router příliš daleko od skříně.",
+    "CL_DV_WM_offline_title": "Vaše zařízení je offline",
+    "CL_CF_FM_create_recipe": "Vytvořte recept"
 }
