--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Belysningen af alle nøgleikoner slukkes, og\"P\"\nbegynder at blinke. Apparatets netværk\ner nu åbent for oprettelse af forbindelse til, i 5 minutter.\nKlik på NÆSTE for at fortsætte.",
     "cooling_config_wifi_step1": "Sæt apparatet til normal drift.\nTryk på Wi-Fi-ikonet i ca. tre\nsekunder.\nWi-Fi-symbolet begynder at blinke og'0'\nvises på displayet. Du gik ind i\nnetværksforbindelsesmenuen.",
     "cooling_config_wifi_step2": "For at aktivere Wi-Fi på apparatet skal du trykke på den\nintensive køle- eller frysetast.\nDisplayet vil kort blive vist'01'og ændres\n'02'automatisk.\nWi-Fi er klar til tilslutning.",
-    "cooling_config_wifi_step3": "Naviger med piletasterne og vælg \"S\".\nBekræft \"S\" ved at trykke på tasten intensiv køling/frysning.\nTasten for intensiv køling/frysning begynder at blinke. Enhedens netværk er nu åbent for tilslutning i 3 minutter.",
+    "cooling_config_wifi_step3": "Naviger med piletasterne og vælg \"S\".\nBekræft \"S\" ved at trykke på tasten intensiv køling/frysning.\nTasten for intensiv køling/frysning begynder at blinke. Enhedens netværk er nu åbent for tilslutning i 5 minutter.",
     "cooling_config_wifi_step1_pair": "Sæt apparatet til normal drift.\nTryk på Wi-Fi-ikonet i ca. tre\nsekunder.\nWi-Fi-symbolet begynder at blinke og'0'\nvises på displayet. Du gik ind i\nnetværksforbindelsesmenuen.",
     "cooling_config_wifi_step2_pair": "Naviger med piletasterne og vælg \"P\". Bekræft \"P\" ved at trykke på tasten intensiv køling/frysning. Tasten for intensiv køling/frysning begynder at blinke. Enhedens netværk er nu åbent for parring i 3 minutter. Klik på NÆSTE for at fortsætte.",
     "dw_config_wifi_step1": "TÆND apparatet. Naviger med\npiletasterne til indstillinger. Tryk på MENU-ikonet for at komme ind i\nindstillingerne.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "DISPLAY KONTRAST",
     "washer_atag_detergent_tab": "Vaskemiddel TAB",
     "send_and_start": "SEND & START",
-    "language_english_gb": "ENGELSK_SB (EN)",
+    "language_english_gb": "ENGELSK SB (EN)",
     "language_swedish": "SVENSK (SV)",
     "language_danish": "DANSK (DA)",
     "language_norwegian": "NORSK (NEJ)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIENSK (IT)",
     "language_dutch": "HOLLANDSK (NL)",
     "language_french": "FRANSK (FR)",
-    "language_english_us": "ENGELSK USA (DA)",
+    "language_english_us": "ENGELSK USA (EN)",
     "language_spanish": "SPANSK (ES)",
     "language_russian": "RUSSISK (RU)",
     "language_traditional_chinese": "TRADITIONEL KINESISK (ZH)",
     "language_polish": "POLSK (PL)",
     "language_japanese": "JAPANSK (JA)",
-    "language_english_au": "ENGLISH_AU (DA)",
+    "language_english_au": "ENGLISH AU (EN)",
     "language_slovenian": "SLOVENISK (SL)",
     "language_estonian": "ESTISK (ET)",
     "language_latvian": "LETLAND (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Retten tilberedes med en kombination af mikrobølger og varmluft. Det forkorter tilberedningstiden. Denne funktion bruges til tilberedning af farsbrød, kartofler, wienerbrød og kager.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Retten tilberedes med en kombination af mikrobølger, grill og blæser. Det forkorter tilberedningstiden. Velegnet til tilberedning af kartoffelgratin, kyllingesteg og små kødudskæringer.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Retten tilberedes med en kombination af mikrobølger, overvarme og undervarme. Det forkorter tilberedningstiden. Velegnet til tilberedning af tærter, brød og store kødudskæringer.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Retten tilberedes med en kombination af mikrobølger, overvarme og blæser. Det forkorter tilberedningstiden. Velegnet til tilberedning af grøntsager og frosne retter som lasagne."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Retten tilberedes med en kombination af mikrobølger, overvarme og blæser. Det forkorter tilberedningstiden. Velegnet til tilberedning af grøntsager og frosne retter som lasagne.",
+    "CL_DV_RF_display_brightness_setting_tips": "Indstil lysstyrken på dit køleskabs display.",
+    "CL_DV_RF_modes_tips": "Specialtilstande kan indstilles til forskellige lejligheder. Beslut hvilke tilstande der skal være aktive. Flere tilstande kan ikke bruges på samme tid.",
+    "CL_DV_RF_eco_mode_desc": "Når øko-tilstand er aktiveret, indstilles temperaturen på køler og fryser til de mest energieffektive temperaturer.",
+    "CL_DV_RF_holiday_mode_desc": "Når ferietilstand er aktiveret, er temperaturen i det øverste rum indstillet til 15°C. Fryseren forbliver i dets tidligere sæt.",
+    "CL_DV_RF_party_mode_desc": "Når festtilstand er aktiveret, vil alle rum gå til maksimal køling. Festtilstand deaktiveres automatisk efter 24 timer.",
+    "CL_DV_RF_cleaning_mode_desc": "Rengøringstilstand muliggør komfortabel rengøring af kølerummet. ",
+    "CL_DV_RF_sabbath_mode_desc": "Sabbatstilstand vil være aktiv i 72 timer.\nTryk på * i 3 sekunder for at deaktivere den under denne cyklus. Gentages ugentligt.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Tryk længe på \"Timer\"-knappen for at starte netværkskonfigurationen, når WIFI-indikatoren blinker. du kan tilslutte WIFI. Efter 3 minutter vil status blive annulleret, hvis der ikke er nogen netværkskonfiguration, og indikatorlyset er slukket. Hvis du har brug for at tilslutte WIFI igen, skal du trykke længe på \"Timer\"-knappen for at starte netværkskonfigurationen igen, WIFI-indikatoren vil blinke igen.",
+    "CL_DV_DW_washing_progress": "Vaske i gang...",
+    "CL_DV_DW_washing_in_running": "Vask i ## kører",
+    "CL_DV_DW_washing_paused": "Vask stoppet",
+    "CL_DV_DW_washing_in_paused": "Vask i ## er blevet sat på pause",
+    "CL_DV_RF_set_this_temperature": "Indstil denne temperatur",
+    "CL_DV_TD_drying_in_progress": "Tørring i gang...",
+    "CL_DV_TD_drying_in_x_is_running": "Tørring i ## kører",
+    "CL_DV_TD_drying_in_x_is_paused": "Tørring i ## er blevet sat på pause",
+    "CL_DV_TD_drying_in_x_complete": "Tørring i ## er afsluttet",
+    "CL_DV_TD_drying_done": "Tørring er færdig",
+    "CL_DV_WM_washing_in_complete": "Vask i ## er afsluttet",
+    "CL_DV_RF_switch_to_eco_mode": "Skift til ECO-tilstand",
+    "CL_DV_RF_switch_to_eco_mode_tips": "På grund af inaktivitet på apparatet anbefaler vi, at du skifter til ECO-tilstand.",
+    "CL_DV_RF_start_eco_mode": "Start ECO-tilstand",
+    "CL_CF_AS_support": "Støtte",
+    "CL_DV_OV_remote_start": "FJERNSTART",
+    "CL_DV_OV_remote_start_enable_tips": "For at aktivere fjernstart skal du bekræfte på ovnen ved at trykke på knappen.",
+    "CL_CF_CO_device_runs_normal": "Din enhed kører i normal tilstand.",
+    "CL_CF_CO_device_needs_attention": "Enheden har brug for opmærksomhed.",
+    "CL_DV_RF_next_cleaning_will_be": "Næste rengøring vil være **",
+    "CL_DV_RF_last_clean_was": "Sidste rengøring var **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Enheden har brug for opmærksomhed.",
+    "CL_CF_AS_run_normal_condition": "Din enhed kører i normal tilstand.",
+    "CL_DV_WM_offline_content1": "Tjek, om dit apparat er tilsluttet, og om strømmen er tændt.",
+    "CL_DV_WM_offline_content2": "Sørg for, at dit skab er tilsluttet til et lokalt trådløst netværk.",
+    "CL_DV_WM_offline_content3": "Tjek styrken af dit WiFi-signal. Hvis signalet er svagt, kan det være, fordi routeren er for langt væk fra skabet.",
+    "CL_DV_WM_offline_title": "Din enhed er offline",
+    "CL_CF_FM_create_recipe": "Opret opskrift"
 }
