--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -33,7 +33,7 @@
     "setting_room_location_desc": "Standort für Raum verwenden, der auch in Ihrem Benutzerkonto hinterlegt ist.",
     "street": "STRASSE",
     "setting_postal_code": "POSTLEITZAHL",
-    "city": "STADT",
+    "city": "ORT",
     "setting_open_tickets": "GEÖFFNETE TICKET",
     "setting_select_appliance": "Gerät auswählen",
     "setting_title": "TITEL",
@@ -129,7 +129,7 @@
     "app_update_update": "Aktualisieren",
     "app_update_later": "SPÄTER",
     "app_update_do_not_ask_me_again": "Nicht noch einmal fragen",
-    "ac_separated_air_conditioner": "Geteilte Klimaanlage",
+    "ac_separated_air_conditioner": "Split Klimaanlage",
     "ac_mobile_air_conditioner": "Tragbare Klimaanlage",
     "ac_commercial_air_conditioner": "Kommerzielle Klimaanlage",
     "ac_window_machine": "Fensterklimaanlage",
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Die Beleuchtung aller Tastensymbole erlischt und \"S\" beginnt zu blinken. Das Netzwerk dieses Geräts ist nun für 5 Minuten zum Verbinden geöffnet. Klicken Sie auf WEITER, um fortzufahren.",
     "cooling_config_wifi_step1": "Versetzen Sie das Gerät in den Normalbetrieb.\nBerühren Sie das Wi-Fi-Symbol für ca. 3\nSekunden.\nDas Wi-Fi-Symbol beginnt zu blinken und '0'\nerscheint im Display. Sie haben das\n Netzwerkverbindungsmenü aufgerufen.",
     "cooling_config_wifi_step2": "Um Wi-Fi am Gerät zu aktivieren, berühren Sie die\nTaste für intensives Kühlen oder Einfrieren. Das\nDisplay zeigt kurz '01' und wechselt automatisch zu\n'02'.\nWi-Fi ist bereit für die Verbindung.",
-    "cooling_config_wifi_step3": "Navigieren Sie mit den Pfeiltasten, um 'S' auszuwählen.\nBestätigen Sie 'S' durch Berühren der Intensivkühl- oder Gefriertaste.\nDie Intensivkühl- oder Gefriertaste beginnt\nzu blinken; das Netzwerk dieser Appliance\nist jetzt für 3 Minuten zum Herstellen einer Verbindung geöffnet.\nKlicken Sie auf WEITER, um fortzufahren.",
+    "cooling_config_wifi_step3": "Navigieren Sie mit den Pfeiltasten, um 'S' auszuwählen.\nBestätigen Sie 'S' durch Berühren der Intensivkühl- oder Gefriertaste.\nDie Intensivkühl- oder Gefriertaste beginnt\nzu blinken; das Netzwerk dieser Appliance\nist jetzt für 5 Minuten zum Herstellen einer Verbindung geöffnet.\nKlicken Sie auf WEITER, um fortzufahren.",
     "cooling_config_wifi_step1_pair": "Versetzen Sie das Gerät in den Normalbetrieb.\nBerühren Sie das Wi-Fi-Symbol für ca. 3\nSekunden.\nDas Wi-Fi-Symbol beginnt zu blinken und '0'\nerscheint im Display. Sie haben das\n Netzwerkverbindungsmenü aufgerufen.",
     "cooling_config_wifi_step2_pair": "Navigieren Sie mit den Pfeiltasten und wählen Sie „P“. Bestätigen Sie „P“ durch Antippen der Intensivkühl-/Gefriertaste. Die Intensivkühl-/Gefriertaste beginnt zu blinken. Das Gerätenetzwerk ist nun für 3 Minuten zum Koppeln geöffnet. Klicken Sie auf WEITER, um fortzufahren.",
     "dw_config_wifi_step1": "Schalten Sie das Gerät EIN. Navigieren Sie mit den Pfeiltasten\nzu den Einstellungen. Drücken Sie das MENU-Symbol, um\ndie Einstellungen einzugeben.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "ANZEIGE KONTRAST",
     "washer_atag_detergent_tab": "Geschirrspüler TAB",
     "send_and_start": "SENDEN & STARTEN",
-    "language_english_gb": "ENGLISCH_GB (EN)",
+    "language_english_gb": "ENGLISCH GB (EN)",
     "language_swedish": "SCHWEDISCH (SV)",
     "language_danish": "Dänisch (DA)",
     "language_norwegian": "NORWEGISCH (NO)",
@@ -1820,7 +1820,7 @@
     "native_language_tips": "Diese Einstellung ändert nicht die Sprache der Anwendung. Es wird nur für Kommunikationszwecke verwendet.",
     "password_change": "Passwortänderung",
     "mr": "Herr.",
-    "ms": "MS.",
+    "ms": "Frau.",
     "remove_device": "Gerät entfernen",
     "check_bucket": "Überprüfen Sie den Eimer",
     "anti_crease": "Knitterschutz",
@@ -2538,7 +2538,7 @@
     "device_all_notification_tips": "Sie erhalten alle gerätebezogenen Aktualisierungen, Benachrichtigungen, die Ihre Aufmerksamkeit erfordern, Marketingwarnungen und alle anderen relevanten Benachrichtigungen innerhalb von ConnectLife.",
     "device_urgent_nmotification_tips": "Sie erhalten nur die Benachrichtigungen, die sofortige Aufmerksamkeit erfordern. Diese Einstellung stellt sicher, dass Sie sofort über wichtige Aktualisierungen und zeitkritische Angelegenheiten informiert werden.",
     "device_none_notification_tips": "Sie erhalten keine Benachrichtigungen, einschließlich aller gerätebezogenen Aktualisierungen sowie dringender Benachrichtigungen, die sofortige Aufmerksamkeit erfordern.",
-    "ac_duct_type": "Kanal-Klimagerät",
+    "ac_duct_type": "Kanal Klimaanlage",
     "duct_silent": "Leise",
     "timer_name_not_less_2_length": "Timer Name nicht weniger als 2 Länge",
     "push_notifications_settings_tips": "Empfangen Sie Benachrichtigungen und Warnungen als Push-Benachrichtigungen auf Ihrem Telefon, auch wenn Sie die ConnectLife-App nicht aktiv nutzen.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Das Gericht wird mit einer Kombination aus Mikrowelle und Heißluft gegart. Dadurch verkürzt sich die Garzeit. Diese Funktion eignet sich zum Garen von Hackbraten, Kartoffeln, Gebäck und Kuchen.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Das Gericht wird mit einer Kombination aus Mikrowelle, Grill und Umluft gegart. Dadurch verkürzt sich die Garzeit. Geeignet zum Garen von Kartoffelgratin, Hähnchenbraten und kleineren Fleischstücken.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Das Gericht wird mit einer Kombination aus Mikrowelle, Ober- und Unterhitze sowie Umluft gegart. Dadurch verkürzt sich die Garzeit. Geeignet zum Garen von Kuchen, Brot und größeren Fleischstücken.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Das Gericht wird mit einer Kombination aus Mikrowelle, Oberhitze und Umluft gegart. Dadurch verkürzt sich die Garzeit. Geeignet zum Garen von Gemüse und Tiefkühlkost wie Lasagne."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Das Gericht wird mit einer Kombination aus Mikrowelle, Oberhitze und Umluft gegart. Dadurch verkürzt sich die Garzeit. Geeignet zum Garen von Gemüse und Tiefkühlkost wie Lasagne.",
+    "CL_DV_RF_display_brightness_setting_tips": "Stellen Sie die Helligkeit Ihres Kühlschrankdisplays ein.",
+    "CL_DV_RF_modes_tips": "Für verschiedene Anlässe können spezielle Modi eingestellt werden. Entscheiden Sie, welche Modi aktiv sein sollen. Mehrere Modi können nicht gleichzeitig verwendet werden.",
+    "CL_DV_RF_eco_mode_desc": "Wenn der Öko-Modus aktiviert ist, wird die Temperatur von Kühl- und Gefrierschrank auf die energieeffizienteste Temperatur eingestellt.",
+    "CL_DV_RF_holiday_mode_desc": "Bei aktiviertem Urlaubsmodus wird die Temperatur des oberen Fachs auf 15°C eingestellt. Das Gefrierfach bleibt auf der vorherigen Einstellung.",
+    "CL_DV_RF_party_mode_desc": "Wenn der Partymodus aktiviert ist, werden alle Fächer auf maximale Kühlung eingestellt. Der Partymodus wird nach 24 Stunden automatisch deaktiviert.",
+    "CL_DV_RF_cleaning_mode_desc": "Der Reinigungsmodus ermöglicht eine bequeme Reinigung des Kühlraums.",
+    "CL_DV_RF_sabbath_mode_desc": "Der Sabbat-Modus ist 72 Stunden lang aktiv.\nDrücken Sie 3 Sekunden lang *, um ihn während dieses Zyklus zu deaktivieren. Wird wöchentlich wiederholt.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Drücken Sie lange auf die Taste „Timer“, um die Netzwerkkonfiguration zu starten. Wenn die WLAN-Anzeige blinkt, können Sie eine Verbindung zum WLAN herstellen. Nach 3 Minuten wird der Status gelöscht, wenn keine Netzwerkkonfiguration vorliegt, und die Anzeige leuchtet nicht. Wenn Sie eine erneute Verbindung zum WLAN herstellen müssen, drücken Sie lange auf die Taste „Timer“, um die Netzwerkkonfiguration erneut zu starten. Die WLAN-Anzeige blinkt erneut.",
+    "CL_DV_DW_washing_progress": "Waschvorgang läuft...",
+    "CL_DV_DW_washing_in_running": "Wäsche in ## läuft",
+    "CL_DV_DW_washing_paused": "Waschvorgang unterbrochen",
+    "CL_DV_DW_washing_in_paused": "Das Waschen in ## wurde pausiert",
+    "CL_DV_RF_set_this_temperature": "Stellen Sie diese Temperatur ein",
+    "CL_DV_TD_drying_in_progress": "Trocknung läuft...",
+    "CL_DV_TD_drying_in_x_is_running": "Trocknen in ## läuft",
+    "CL_DV_TD_drying_in_x_is_paused": "Das Trocknen in ## wurde pausiert",
+    "CL_DV_TD_drying_in_x_complete": "Die Trocknung in ## ist abgeschlossen",
+    "CL_DV_TD_drying_done": "Die Kleidung ist schon trocken",
+    "CL_DV_WM_washing_in_complete": "Der Waschvorgang in ## ist abgeschlossen",
+    "CL_DV_RF_switch_to_eco_mode": "In den ECO-Modus wechseln",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Aufgrund der Inaktivität des Geräts empfehlen wir Ihnen, in den ECO-Modus zu wechseln.",
+    "CL_DV_RF_start_eco_mode": "ECO-Modus starten",
+    "CL_CF_AS_support": "Unterstützung",
+    "CL_DV_OV_remote_start": "FERNGESTEUERTER START",
+    "CL_DV_OV_remote_start_enable_tips": "Um den Fernstart zu aktivieren, bestätigen Sie bitte am Backofen durch Drücken des Drehknopfes.",
+    "CL_CF_CO_device_runs_normal": "Ihr Gerät läuft im Normalzustand.",
+    "CL_CF_CO_device_needs_attention": "Das Gerät benötigt Aufmerksamkeit.",
+    "CL_DV_RF_next_cleaning_will_be": "Die nächste Reinigung ist **",
+    "CL_DV_RF_last_clean_was": "Letzte Reinigung war **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Das Gerät benötigt Aufmerksamkeit.",
+    "CL_CF_AS_run_normal_condition": "Ihr Gerät läuft im Normalzustand.",
+    "CL_DV_WM_offline_content1": "Überprüfen Sie, ob Ihr Gerät eingesteckt ist und die Stromversorgung eingeschaltet ist.",
+    "CL_DV_WM_offline_content2": "Stellen Sie sicher, dass Ihr Schrank mit einem lokalen WLAN-Netzwerk verbunden ist.",
+    "CL_DV_WM_offline_content3": "Überprüfen Sie die Stärke Ihres WLAN-Signals. Wenn das Signal schwach ist, könnte es sein, dass der Router zu weit vom Schrank entfernt ist.",
+    "CL_DV_WM_offline_title": "Ihr Gerät ist offline",
+    "CL_CF_FM_create_recipe": "Rezept erstellen"
 }
