--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Ο φωτισμός όλων των εικονιδίων πλήκτρων σβήνει και το \"S\" αρχίζει να αναβοσβήνει, το δίκτυο αυτής της συσκευής είναι πλέον ανοιχτό για σύνδεση, για 5 λεπτά. Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
     "cooling_config_wifi_step1": "Ρυθμίστε τη συσκευή σε κανονική λειτουργία. Αγγίξτε το εικονίδιο Wi-Fi για περίπου 3 δευτερόλεπτα. Το σύμβολο Wi-Fi αρχίζει να αναβοσβήνει και το '0' εμφανίζεται στην οθόνη. Μπήκατε στο μενού σύνδεσης δικτύου.",
     "cooling_config_wifi_step2": "Για να ενεργοποιήσετε το Wi-Fi στη συσκευή, αγγίξτε το πλήκτρο εντατικής ψύξης ή κατάψυξης. Η οθόνη θα εμφανίσει σύντομα το '01' και θα αλλάξει αυτόματα σε '02'. Το Wi-Fi είναι έτοιμο για σύνδεση.",
-    "cooling_config_wifi_step3": "Πλοηγηθείτε με τα πλήκτρα βέλους και επιλέξτε \"S\".\nΕπιβεβαιώστε το \"S\" πατώντας το πλήκτρο εντατικής ψύξης/κατάψυξης.\nΤο πλήκτρο εντατικής ψύξης/κατάψυξης θα αρχίσει να αναβοσβήνει. Το δίκτυο της συσκευής είναι πλέον ανοιχτό για σύνδεση για 3 λεπτά.",
+    "cooling_config_wifi_step3": "Πλοηγηθείτε με τα πλήκτρα βέλους και επιλέξτε \"S\".\nΕπιβεβαιώστε το \"S\" πατώντας το πλήκτρο εντατικής ψύξης/κατάψυξης.\nΤο πλήκτρο εντατικής ψύξης/κατάψυξης θα αρχίσει να αναβοσβήνει. Το δίκτυο της συσκευής είναι πλέον ανοιχτό για σύνδεση για 5 λεπτά.",
     "cooling_config_wifi_step1_pair": "Ρυθμίστε τη συσκευή σε κανονική λειτουργία. Αγγίξτε το εικονίδιο Wi-Fi για περίπου 3 δευτερόλεπτα. Το σύμβολο Wi-Fi αρχίζει να αναβοσβήνει και το '0' εμφανίζεται στην οθόνη. Μπήκατε στο μενού σύνδεσης δικτύου.",
     "cooling_config_wifi_step2_pair": "Πλοηγηθείτε με τα πλήκτρα βέλους και επιλέξτε \"P\". Επιβεβαιώστε το \"P\" πατώντας το πλήκτρο εντατικής ψύξης/κατάψυξης. Το πλήκτρο εντατικής ψύξης/κατάψυξης θα αρχίσει να αναβοσβήνει. Το δίκτυο συσκευών είναι πλέον ανοιχτό για σύζευξη για 3 λεπτά. Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
     "dw_config_wifi_step1": "Ενεργοποιήστε τη συσκευή. Πλοηγηθείτε με τα πλήκτρα βέλους στις ρυθμίσεις. Πατήστε το εικονίδιο MENU για να εισέλθετε στις ρυθμίσεις.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "ΕΜΦΑΝΙΣΗ ΑΝΤΙΘΕΣΗ",
     "washer_atag_detergent_tab": "Απορρυπαντικό TAB",
     "send_and_start": "ΑΠΟΣΤΟΛΗ & ΕΚΚΙΝΗΣΗ",
-    "language_english_gb": "ΑΓΓΛΙΚΑ_ΜΒ (EN)",
+    "language_english_gb": "ΑΓΓΛΙΚΑ ΜΒ (EN)",
     "language_swedish": "ΣΟΥΗΔΙΚΑ (SV)",
     "language_danish": "Δανέζικα (DA)",
     "language_norwegian": "ΝΟΡΒΗΓΙΚΑ (NO)",
@@ -1007,7 +1007,7 @@
     "language_italian": "ΙΤΑΛΙΚΑ (IT)",
     "language_dutch": "ΟΛΛΑΝΔΙΚΑ (NL)",
     "language_french": "ΓΑΛΛΙΚΑ (FR)",
-    "language_english_us": "ΑΓΓΛΙΚΑ_ΜΑΣ (EN)",
+    "language_english_us": "ΑΓΓΛΙΚΑ ΜΑΣ (EN)",
     "language_spanish": "Ισπανικά (ES)",
     "language_russian": "ΡΩΣΙΚΑ (RU)",
     "language_traditional_chinese": "ΠΑΡΑΔΟΣΙΑΚΑ_ΚΙΝΕΖΙΚΑ (ZH)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Το πιάτο μαγειρεύεται με συνδυασμό φούρνου μικροκυμάτων και ζεστού αέρα. Αυτό μειώνει τον χρόνο μαγειρέματος. Αυτή η λειτουργία χρησιμοποιείται για το μαγείρεμα φραντζολών κρέατος, πατάτας, ζαχαροπλαστικής και κέικ.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Το πιάτο μαγειρεύεται με συνδυασμό φούρνου μικροκυμάτων, γκριλ και ανεμιστήρα. Αυτό μειώνει τον χρόνο μαγειρέματος. Κατάλληλο για μαγείρεμα γκρατέν πατάτας, ψητό κοτόπουλο και μικρότερα κομμάτια κρέατος.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Το πιάτο μαγειρεύεται με συνδυασμό φούρνου μικροκυμάτων, πάνω και κάτω θερμότητας και ανεμιστήρα. Αυτό μειώνει τον χρόνο μαγειρέματος. Κατάλληλο για μαγείρεμα τάρτων, ψωμιού και μεγαλύτερων κομματιών κρέατος.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Το πιάτο μαγειρεύεται με συνδυασμό φούρνου μικροκυμάτων, υψηλής θερμοκρασίας και ανεμιστήρα. Αυτό μειώνει τον χρόνο μαγειρέματος. Κατάλληλο για μαγείρεμα λαχανικών και κατεψυγμένων τροφίμων όπως λαζάνια. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Το πιάτο μαγειρεύεται με συνδυασμό φούρνου μικροκυμάτων, υψηλής θερμοκρασίας και ανεμιστήρα. Αυτό μειώνει τον χρόνο μαγειρέματος. Κατάλληλο για μαγείρεμα λαχανικών και κατεψυγμένων τροφίμων όπως λαζάνια. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Ρυθμίστε τη φωτεινότητα της οθόνης του ψυγείου σας.",
+    "CL_DV_RF_modes_tips": "Οι ειδικοί τρόποι λειτουργίας μπορούν να ρυθμιστούν για διαφορετικές περιστάσεις. Αποφασίστε ποιες λειτουργίες πρέπει να είναι ενεργές. Δεν είναι δυνατή η ταυτόχρονη χρήση πολλών λειτουργιών.",
+    "CL_DV_RF_eco_mode_desc": "Όταν είναι ενεργοποιημένη η λειτουργία eco, η θερμοκρασία του ψυγείου και του καταψύκτη θα ρυθμιστεί στις πιο ενεργειακά αποδοτικές θερμοκρασίες.",
+    "CL_DV_RF_holiday_mode_desc": "Όταν είναι ενεργοποιημένη η λειτουργία διακοπών, η θερμοκρασία του επάνω διαμερίσματος ρυθμίζεται στους 15°C. Ο καταψύκτης παραμένει μέσα στο προηγούμενο σετ.",
+    "CL_DV_RF_party_mode_desc": "Όταν είναι ενεργοποιημένη η λειτουργία πάρτι, όλα τα διαμερίσματα θα περάσουν στη μέγιστη ψύξη. Η λειτουργία πάρτι θα απενεργοποιηθεί αυτόματα μετά από 24 ώρες.",
+    "CL_DV_RF_cleaning_mode_desc": "Η λειτουργία καθαρισμού επιτρέπει τον άνετο καθαρισμό του θαλάμου ψύξης.",
+    "CL_DV_RF_sabbath_mode_desc": "Η λειτουργία Sabbath θα είναι ενεργή για 72 ώρες. Πατήστε * για 3 δευτερόλεπτα για να απενεργοποιήσετε κατά τη διάρκεια αυτού του κύκλου. Η λειτουργία Sabbath επαναλαμβάνεται κάθε εβδομάδα.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Πατήστε παρατεταμένα το κουμπί «Χρονόμετρο» για να ξεκινήσει η διαμόρφωση δικτύου, όταν η ένδειξη WIFI αναβοσβήνει. μπορείτε να συνδέσετε το WIFI. Μετά από 3 λεπτά, η κατάσταση θα ακυρωθεί εάν δεν υπάρχει διαμόρφωση δικτύου και η ενδεικτική λυχνία είναι σβηστή. Εάν πρέπει να συνδέσετε ξανά το WIFI, πατήστε παρατεταμένα το κουμπί «Timer» για να ξεκινήσει ξανά η διαμόρφωση δικτύου, η ένδειξη WIFI θα αναβοσβήσει ξανά.",
+    "CL_DV_DW_washing_progress": "Πλύσιμο σε εξέλιξη...",
+    "CL_DV_DW_washing_in_running": "Το πλύσιμο στο ## τρέχει",
+    "CL_DV_DW_washing_paused": "Το πλύσιμο σταμάτησε",
+    "CL_DV_DW_washing_in_paused": "Το πλύσιμο στο ## έχει διακοπεί",
+    "CL_DV_RF_set_this_temperature": "Ρυθμίστε αυτή τη θερμοκρασία",
+    "CL_DV_TD_drying_in_progress": "Στέγνωμα σε εξέλιξη...",
+    "CL_DV_TD_drying_in_x_is_running": "Το στέγνωμα στο ## εκτελείται",
+    "CL_DV_TD_drying_in_x_is_paused": "Το στέγνωμα στο ## έχει διακοπεί",
+    "CL_DV_TD_drying_in_x_complete": "Η ξήρανση στο ## έχει ολοκληρωθεί",
+    "CL_DV_TD_drying_done": "Το στέγνωμα έχει γίνει",
+    "CL_DV_WM_washing_in_complete": "Το πλύσιμο στο ## ολοκληρώθηκε",
+    "CL_DV_RF_switch_to_eco_mode": "Μετάβαση σε λειτουργία ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Λόγω αδράνειας της συσκευής, σας συνιστούμε να μεταβείτε στη λειτουργία ECO.",
+    "CL_DV_RF_start_eco_mode": "Ξεκινήστε τη λειτουργία ECO",
+    "CL_CF_AS_support": "Υποστήριξη",
+    "CL_DV_OV_remote_start": "ΑΠΟΣΤΟΛΗ ΕΚΚΙΝΗΣΗ",
+    "CL_DV_OV_remote_start_enable_tips": "Για να ενεργοποιήσετε την απομακρυσμένη εκκίνηση, επιβεβαιώστε τον φούρνο πατώντας το κουμπί.",
+    "CL_CF_CO_device_runs_normal": "Η συσκευή σας λειτουργεί σε κανονική κατάσταση.",
+    "CL_CF_CO_device_needs_attention": "Η συσκευή θέλει προσοχή.",
+    "CL_DV_RF_next_cleaning_will_be": "Ο επόμενος καθαρισμός θα είναι **",
+    "CL_DV_RF_last_clean_was": "Ο τελευταίος καθαρισμός ήταν **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Η συσκευή θέλει προσοχή.",
+    "CL_CF_AS_run_normal_condition": "Η συσκευή σας λειτουργεί σε κανονική κατάσταση.",
+    "CL_DV_WM_offline_content1": "Ελέγξτε εάν η συσκευή σας είναι συνδεδεμένη και η τροφοδοσία είναι ενεργοποιημένη.",
+    "CL_DV_WM_offline_content2": "Βεβαιωθείτε ότι ο ντουλάπι σας είναι συνδεδεμένος σε ένα τοπικό ασύρματο δίκτυο.",
+    "CL_DV_WM_offline_content3": "Ελέγξτε την ισχύ του σήματος WiFi. Εάν το σήμα είναι ασθενές, μπορεί να οφείλεται στο γεγονός ότι ο δρομολογητής είναι πολύ μακριά από το ντουλάπι.",
+    "CL_DV_WM_offline_title": "Η συσκευή σας είναι εκτός σύνδεσης",
+    "CL_CF_FM_create_recipe": "Δημιουργήστε συνταγή"
 }
