--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "La iluminación de todos los íconos clave se apaga y \"P\"\ncomienza a parpadear; la red de este dispositivo\nestá ahora abierta para conectarse, durante 5 minutos.\nHaga clic en SIGUIENTE para continuar.",
     "cooling_config_wifi_step1": "Configure el dispositivo para el funcionamiento normal.\nToque el ícono de Wi-Fi durante aproximadamente 3\nsegundos.\nEl símbolo de Wi-Fi comenzará a parpadear y aparecerá '0'\nen la pantalla. Ha ingresado al menú de\nconexión de red.",
     "cooling_config_wifi_step2": "Para habilitar el Wi-Fi en el dispositivo, toque la tecla de\nenfriamiento intensivo o congelación. La\npantalla mostrará brevemente '01' y cambiará a\n'02' automáticamente.\nEl Wi-Fi está listo para conectarse.",
-    "cooling_config_wifi_step3": "Navegue con las teclas de flecha para elegir 'S'.\nConfirme 'S' tocando la tecla de\nenfriamiento intensivo o congelación.\nLa tecla de enfriamiento intensivo o congelación comenzará a\nparpadear; la red de este dispositivo está\nahora abierta para conectarse, durante 3 minutos.\nHaga clic en SIGUIENTE para continuar.",
+    "cooling_config_wifi_step3": "Navegue con las teclas de flecha para elegir 'S'.\nConfirme 'S' tocando la tecla de\nenfriamiento intensivo o congelación.\nLa tecla de enfriamiento intensivo o congelación comenzará a\nparpadear; la red de este dispositivo está\nahora abierta para conectarse, durante 5 minutos.\nHaga clic en SIGUIENTE para continuar.",
     "cooling_config_wifi_step1_pair": "Configure el dispositivo para el funcionamiento normal.\nToque el ícono de Wi-Fi durante aproximadamente 3\nsegundos.\nEl símbolo de Wi-Fi comenzará a parpadear y aparecerá '0'\nen la pantalla. Ha ingresado al menú de\nconexión de red.",
     "cooling_config_wifi_step2_pair": "Navega con las teclas de flecha y selecciona \"P\". Confirma \"P\" tocando la tecla de enfriamiento/congelación intensivos. La tecla de enfriamiento/congelación intensivos comenzará a parpadear. La red del dispositivo ahora está abierta para el emparejamiento durante 3 minutos. Haz clic en SIGUIENTE para continuar.",
     "dw_config_wifi_step1": "Encienda el aparato. Navegue con las teclas de flecha\nhacia la configuración. Presione el ícono de MENÚ para ingresar\na la configuración.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "CONTRASTE DE LA PANTALLA",
     "washer_atag_detergent_tab": "TAB Detergente",
     "send_and_start": "ENVIAR Y COMENZAR",
-    "language_english_gb": "INGLÉS_GB",
+    "language_english_gb": "INGLÉS GB",
     "language_swedish": "SUECO (SV)",
     "language_danish": "Danés (DA)",
     "language_norwegian": "NORUEGO (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIANO (IT)",
     "language_dutch": "HOLANDÉS (NL)",
     "language_french": "FRANCÉS (FR)",
-    "language_english_us": "ESPAÑOL (ES)",
+    "language_english_us": "INGLÉS (EN)",
     "language_spanish": "Español (ES)",
     "language_russian": "RUSO (RU)",
     "language_traditional_chinese": "CHINO_TRADICIONAL (ZH)",
     "language_polish": "POLACO (PL)",
     "language_japanese": "JAPONÉS (JA)",
-    "language_english_au": "INGLÉS_AU (EN)",
+    "language_english_au": "INGLÉS AU (EN)",
     "language_slovenian": "ESLOVENO (SL)",
     "language_estonian": "ESTONIO (ET)",
     "language_latvian": "LETONIO (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "El plato se cocina con una combinación de microondas y aire caliente, lo que acorta el tiempo de cocción. Esta función se utiliza para cocinar pastel de carne, patatas, pasteles y tartas.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "El plato se cocina con una combinación de microondas, grill y ventilador. Esto acorta el tiempo de cocción. Adecuado para cocinar gratinados de patatas, pollo asado y trozos de carne más pequeños.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "El plato se cocina con una combinación de microondas, calor superior e inferior y ventilador. Esto acorta el tiempo de cocción. Adecuado para cocinar tartas, pan y piezas de carne más grandes.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "El plato se cocina con una combinación de microondas, calor superior y ventilador. Esto acorta el tiempo de cocción. Adecuado para cocinar verduras y alimentos congelados como lasaña. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "El plato se cocina con una combinación de microondas, calor superior y ventilador. Esto acorta el tiempo de cocción. Adecuado para cocinar verduras y alimentos congelados como lasaña. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Configure el brillo de la pantalla de su refrigerador.",
+    "CL_DV_RF_modes_tips": "Se pueden configurar modos especiales para distintas ocasiones. Decide qué modos deben estar activos. No se pueden usar varios modos al mismo tiempo.",
+    "CL_DV_RF_eco_mode_desc": "Cuando el modo ecológico está habilitado, la temperatura del refrigerador y del congelador se establecerá en las temperaturas más eficientes energéticamente.",
+    "CL_DV_RF_holiday_mode_desc": "Cuando se activa el modo vacaciones, la temperatura del compartimento superior se establece en 15 °C. El congelador permanece en la temperatura establecida anteriormente.",
+    "CL_DV_RF_party_mode_desc": "Cuando el modo fiesta está activado, todos los compartimentos se enfriarán al máximo. El modo fiesta se desactivará automáticamente después de 24 horas.",
+    "CL_DV_RF_cleaning_mode_desc": "El modo de limpieza permite una limpieza cómoda del compartimento de refrigeración.",
+    "CL_DV_RF_sabbath_mode_desc": "El modo sabático estará activo durante 72 horas.\nPulse * durante 3 segundos para desactivarlo durante este ciclo. Se repite semanalmente.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Mantenga presionado el botón \"Timer\" para iniciar la configuración de la red. Cuando el indicador WIFI parpadee, podrá conectarse al WIFI. Después de 3 minutos, el estado se cancelará si no hay configuración de red y la luz indicadora se apagará. Si necesita volver a conectar el WIFI, mantenga presionado el botón \"Timer\" para iniciar nuevamente la configuración de la red. El indicador WIFI parpadeará nuevamente.",
+    "CL_DV_DW_washing_progress": "Lavado en proceso....",
+    "CL_DV_DW_washing_in_running": "El lavado en ## está en marcha",
+    "CL_DV_DW_washing_paused": "Lavado en pausa",
+    "CL_DV_DW_washing_in_paused": "El lavado en ## ha sido pausado",
+    "CL_DV_RF_set_this_temperature": "Establezca esta temperatura",
+    "CL_DV_TD_drying_in_progress": "Secado en progreso...",
+    "CL_DV_TD_drying_in_x_is_running": "El secado en ## está en marcha",
+    "CL_DV_TD_drying_in_x_is_paused": "El secado en ## se ha pausado",
+    "CL_DV_TD_drying_in_x_complete": "Se ha completado el secado en ##",
+    "CL_DV_TD_drying_done": "El ciclo está finalizado",
+    "CL_DV_WM_washing_in_complete": "El lavado en ## se ha completado",
+    "CL_DV_RF_switch_to_eco_mode": "Cambiar al modo ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Debido a la inactividad del aparato le recomendamos cambiar al modo ECO.",
+    "CL_DV_RF_start_eco_mode": "Iniciar modo ECO",
+    "CL_CF_AS_support": "Apoyo",
+    "CL_DV_OV_remote_start": "ARRANQUE REMOTO",
+    "CL_DV_OV_remote_start_enable_tips": "Para habilitar el inicio remoto, confirme en el horno presionando la perilla.",
+    "CL_CF_CO_device_runs_normal": "Su dispositivo funciona en condiciones normales.",
+    "CL_CF_CO_device_needs_attention": "El dispositivo necesita atención.",
+    "CL_DV_RF_next_cleaning_will_be": "La próxima limpieza será **",
+    "CL_DV_RF_last_clean_was": "La última limpieza fue **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "El dispositivo necesita atención.",
+    "CL_CF_AS_run_normal_condition": "Su dispositivo funciona en condiciones normales.",
+    "CL_DV_WM_offline_content1": "Verifique si su electrodoméstico está enchufado y si tiene energía.",
+    "CL_DV_WM_offline_content2": "Asegúrese de que su gabinete esté conectado a una red inalámbrica local.",
+    "CL_DV_WM_offline_content3": "Verifique la intensidad de la señal WiFi. Si la señal es baja, es posible que el enrutador esté demasiado lejos del gabinete.",
+    "CL_DV_WM_offline_title": "Su dispositivo está fuera de línea",
+    "CL_CF_FM_create_recipe": "Crear receta"
 }
