--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "چراغ نماد همه کلیدها خاموش می‌شود و «S» شروع به چشمک زدن می‌کند، اکنون شبکه این دستگاه برای اتصال به مدت 5 دقیقه باز است. برای ادامه، روی «بعدی» کلیک کنید.",
     "cooling_config_wifi_step1": "دستگاه را روی عملکرد عادی تنظیم کنید. نماد Wi-Fi را به مدت تقریباً 3 ثانیه لمس کنید. نماد Wi-Fi شروع به چشمک زدن می‌کند و «0» در نمایشگر نمایان می‌شود. وارد منوی اتصال شبکه شدید.",
     "cooling_config_wifi_step2": "برای فعال کردن Wi-Fi در دستگاه، کلید منجمد‌سازی یا سرمایش شدید را لمس کنید. نمایشگر به‌زودی «01» را نشان خواهد داد و به‌طور خودکار به «02» تغییر می‌کند. Wi-Fi آماده اتصال است.",
-    "cooling_config_wifi_step3": "با کلیدهای جهت دار حرکت کنید و \"S\" را انتخاب کنید.\n\"S\" را با ضربه زدن روی کلید خنک کننده/انجماد شدید تأیید کنید.\nکلید خنک کننده/انجماد شدید شروع به چشمک زدن می کند. شبکه دستگاه اکنون به مدت 3 دقیقه برای اتصال باز است.",
+    "cooling_config_wifi_step3": "با کلیدهای جهت دار حرکت کنید و \"S\" را انتخاب کنید.\n\"S\" را با ضربه زدن روی کلید خنک کننده/انجماد شدید تأیید کنید.\nکلید خنک کننده/انجماد شدید شروع به چشمک زدن می کند. شبکه دستگاه اکنون به مدت 5 دقیقه برای اتصال باز است.",
     "cooling_config_wifi_step1_pair": "دستگاه را روی عملکرد عادی تنظیم کنید. نماد Wi-Fi را به مدت تقریباً 3 ثانیه لمس کنید. نماد Wi-Fi شروع به چشمک زدن می‌کند و «0» در نمایشگر نمایان می‌شود. وارد منوی اتصال شبکه شدید.",
     "cooling_config_wifi_step2_pair": "با کلیدهای جهت دار حرکت کنید و \"P\" را انتخاب کنید. \"P\" را با ضربه زدن روی کلید خنک کننده/انجماد شدید تأیید کنید. کلید خنک کننده/انجماد شدید شروع به چشمک زدن می کند. شبکه دستگاه اکنون برای جفت شدن به مدت 3 دقیقه باز است. برای ادامه روی NEXT کلیک کنید.",
     "dw_config_wifi_step1": "دستگاه را روشن کنید. برای تنظیمات، با کلید‌های پیکان پیمایش کنید. برای ورود به تنظیمات، نماد «منو» را فشار دهید.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "این غذا با ترکیبی از مایکروویو و هوای گرم طبخ می شود. این کار زمان پخت را کوتاه می کند. از این عملکرد برای پخت نان گوشت، سیب زمینی، شیرینی و کیک استفاده می شود.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "این غذا با ترکیبی از مایکروویو، گریل و پنکه طبخ می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت گراتن سیب زمینی، کباب مرغ و تکه های کوچکتر گوشت.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "این غذا با ترکیبی از مایکروویو، حرارت بالا و پایین و فن پخته می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت تارت، نان و تکه های بزرگتر گوشت.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "این غذا با ترکیبی از مایکروویو، حرارت بالا و فن طبخ می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت سبزیجات و غذاهای منجمد مانند لازانیا. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "این غذا با ترکیبی از مایکروویو، حرارت بالا و فن طبخ می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت سبزیجات و غذاهای منجمد مانند لازانیا. ",
+    "CL_DV_RF_display_brightness_setting_tips": "روشنایی صفحه نمایش یخچال خود را تنظیم کنید.",
+    "CL_DV_RF_modes_tips": "حالت های ویژه را می توان برای موقعیت های مختلف تنظیم کرد. تصمیم بگیرید که کدام حالت ها باید فعال باشند. چند حالت را نمی توان به طور همزمان استفاده کرد.",
+    "CL_DV_RF_eco_mode_desc": "هنگامی که حالت سازگار با محیط زیست فعال است، دمای کولر و فریزر روی بیشتر دماهای کم مصرف تنظیم می شود.",
+    "CL_DV_RF_holiday_mode_desc": "هنگامی که حالت تعطیلات فعال است، دمای محفظه بالایی روی 15 درجه سانتیگراد تنظیم می شود. فریزر در مجموعه قبلی خود باقی می ماند.",
+    "CL_DV_RF_party_mode_desc": "هنگامی که حالت مهمانی فعال است، تمام محفظه ها به حداکثر خنک کننده می روند. حالت مهمانی پس از 24 ساعت به طور خودکار غیرفعال می شود.",
+    "CL_DV_RF_cleaning_mode_desc": "حالت تمیز کردن امکان تمیز کردن راحت محفظه خنک کننده را فراهم می کند.",
+    "CL_DV_RF_sabbath_mode_desc": "حالت Sabbath به مدت 72 ساعت فعال خواهد بود. * را به مدت 3 ثانیه فشار دهید تا در این چرخه غیرفعال شود. حالت Sabbath هر هفته تکرار می شود.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "هنگامی که نشانگر WIFI چشمک می زند، دکمه «تایمر» را برای شروع پیکربندی شبکه به مدت طولانی فشار دهید. می توانید وای فای را وصل کنید. پس از 3 دقیقه، اگر پیکربندی شبکه وجود نداشته باشد و چراغ نشانگر خاموش باشد، وضعیت لغو می شود. اگر نیاز به اتصال مجدد WIFI دارید، دکمه «تایمر» را به مدت طولانی فشار دهید تا پیکربندی شبکه دوباره شروع شود، نشانگر WIFI دوباره چشمک می زند.",
+    "CL_DV_DW_washing_progress": "شستشو در حال انجام است...",
+    "CL_DV_DW_washing_in_running": "شستشو در ## در حال اجراست",
+    "CL_DV_DW_washing_paused": "شستشو متوقف شد",
+    "CL_DV_DW_washing_in_paused": "شستشو در ## متوقف شده است",
+    "CL_DV_RF_set_this_temperature": "این دما را تنظیم کنید",
+    "CL_DV_TD_drying_in_progress": "خشک کردن در حال انجام است...",
+    "CL_DV_TD_drying_in_x_is_running": "خشک کردن در ## در حال انجام است",
+    "CL_DV_TD_drying_in_x_is_paused": "خشک کردن در ## متوقف شده است",
+    "CL_DV_TD_drying_in_x_complete": "خشک کردن در ## به پایان رسید",
+    "CL_DV_TD_drying_done": "خشک کردن انجام شد",
+    "CL_DV_WM_washing_in_complete": "شستشو در ## تکمیل شد",
+    "CL_DV_RF_switch_to_eco_mode": "به حالت ECO بروید",
+    "CL_DV_RF_switch_to_eco_mode_tips": "به دلیل عدم فعالیت در دستگاه، توصیه می کنیم به حالت ECO بروید.",
+    "CL_DV_RF_start_eco_mode": "حالت ECO را شروع کنید",
+    "CL_CF_AS_support": "پشتیبانی کنید",
+    "CL_DV_OV_remote_start": "شروع از راه دور",
+    "CL_DV_OV_remote_start_enable_tips": "برای فعال کردن راه‌اندازی از راه دور، لطفاً روی فر را با فشار دادن دکمه تأیید کنید.",
+    "CL_CF_CO_device_runs_normal": "دستگاه شما در شرایط عادی کار می کند.",
+    "CL_CF_CO_device_needs_attention": "دستگاه نیاز به توجه دارد.",
+    "CL_DV_RF_next_cleaning_will_be": "پاکسازی بعدی خواهد بود **",
+    "CL_DV_RF_last_clean_was": "آخرین نظافت بود **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "دستگاه نیاز به توجه دارد.",
+    "CL_CF_AS_run_normal_condition": "دستگاه شما در شرایط عادی کار می کند.",
+    "CL_DV_WM_offline_content1": "بررسی کنید که دستگاه شما متصل شده و برق روشن است.",
+    "CL_DV_WM_offline_content2": "مطمئن شوید که کابینت شما به یک شبکه بی سیم محلی متصل است.",
+    "CL_DV_WM_offline_content3": "قدرت سیگنال WiFi خود را بررسی کنید. اگر سیگنال ضعیف است، ممکن است روتر از کابینت خیلی دور باشد.",
+    "CL_DV_WM_offline_title": "دستگاه شما آفلاین است",
+    "CL_CF_FM_create_recipe": "دستور پخت را ایجاد کنید"
 }
