--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Kaikkien pääkuvakkeiden valo sammuu ja\"P\"\nalkaa vilkkua, tämän laitteen verkko\non nyt valmis kytkettäväksi 5 minuutin ajan.\nKlikkaa SEURAAVA jatkaaksesi.",
     "cooling_config_wifi_step1": "Aseta laite normaaliin tilaan.\nPaina Wi-Fi-kuvaketta noin 3\nsekunnin ajan.\nWi-Fi-kuvake alkaa vilkkua ja'0'\nilmestyy näytölle. Siirryit\nverkkoyhteysvalikkoon.",
     "cooling_config_wifi_step2": "Ottaaksesi Wi-Fin käyttöön laitteessa paina\ntehojäähdytys- tai jäädytyspainiketta. Näytölle\ntulee pian näkyviin'01'ja se muuttuu\n'02'automaattisesti.\nWi-Fi on valmis yhteyden muodostamista varten.",
-    "cooling_config_wifi_step3": "Siirry nuolipainikkeilla valitaksesi'S'.\nVahvista'S'painamalla tehojäähdytys- tai\njäädytyspainiketta.\nTehojäähdytys- tai -jäädytyspainike alkaa\nvilkkua; tämän laitteen verkko on\nnyt avoinna yhteyden muodostamista varten 3 minuutin ajan.\nKlikkaa SEURAAVA jatkaaksesi.",
+    "cooling_config_wifi_step3": "Siirry nuolipainikkeilla valitaksesi'S'.\nVahvista'S'painamalla tehojäähdytys- tai\njäädytyspainiketta.\nTehojäähdytys- tai -jäädytyspainike alkaa\nvilkkua; tämän laitteen verkko on\nnyt avoinna yhteyden muodostamista varten 5 minuutin ajan.\nKlikkaa SEURAAVA jatkaaksesi.",
     "cooling_config_wifi_step1_pair": "Aseta laite normaaliin tilaan.\nPaina Wi-Fi-kuvaketta noin 3\nsekunnin ajan.\nWi-Fi-kuvake alkaa vilkkua ja'0'\nilmestyy näytölle. Siirryit\nverkkoyhteysvalikkoon.",
     "cooling_config_wifi_step2_pair": "Navigoi nuolinäppäimillä ja valitse \"P\". Vahvista \"P\" napauttamalla tehojäähdytys/jäädytyspainiketta. Intensiivisen jäähdytyksen/pakastuksen painike alkaa vilkkua. Laiteverkko on nyt avoinna pariliitoksen muodostamista varten 3 minuutin ajan. Napsauta SEURAAVA jatkaaksesi.",
     "dw_config_wifi_step1": "Kytke laite päälle. Siirry asetuksiin\nnuolipainikkeilla. Paina valikkokuvaketta siirtyäksesi\nasetuksiin.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "NÄYTÖN KONTRASTI",
     "washer_atag_detergent_tab": "Pesuaine TAB",
     "send_and_start": "LÄHETÄ & KÄYNNISTÄ",
-    "language_english_gb": "ENGLANTI_IB (EN)",
+    "language_english_gb": "ENGLANTI IB (EN)",
     "language_swedish": "RUOTSI (SV)",
     "language_danish": "TANSKA (DA)",
     "language_norwegian": "NORJA (EI)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIA (IT)",
     "language_dutch": "HOLLANTI (NL)",
     "language_french": "RANSKA (FR)",
-    "language_english_us": "ENGLANTI US (FI)",
+    "language_english_us": "ENGLANTI US (EN)",
     "language_spanish": "ESPANJA (ES)",
     "language_russian": "VENÄJÄ (RU)",
     "language_traditional_chinese": "PERINTEINEN KIINA (ZH)",
     "language_polish": "PUOLA (PL)",
     "language_japanese": "JAPANI (KYLLÄ)",
-    "language_english_au": "ENGLISH_AU (FI)",
+    "language_english_au": "ENGLISH AU (EN)",
     "language_slovenian": "SLOVENIA (SL)",
     "language_estonian": "VIRO (ET)",
     "language_latvian": "LATVIA (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Ruoka kypsennetään mikroaaltojen ja kuuman ilman yhdistelmällä. Tämä lyhentää kypsennysaikaa. Tätä toimintoa käytetään lihamurekkeen, perunoiden, leivonnaisten ja kakkujen valmistamiseen.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Ruoka kypsennetään käyttämällä mikroaaltouunia, grilliä ja tuuletinta. Tämä lyhentää kypsennysaikaa. Sopii perunagratiinin, kanapaistin ja pienempien lihapalojen kypsentämiseen.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Ruoka kypsennetään käyttämällä mikroaaltouunia, ylä- ja alalämpöä sekä tuuletinta. Tämä lyhentää kypsennysaikaa. Sopii torttujen, leivän ja suurempien lihapalojen paistamiseen.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Ruoka kypsennetään käyttämällä mikroaaltouunia, ylälämpöä ja tuuletinta. Tämä lyhentää kypsennysaikaa. Soveltuu vihannesten ja pakasteruokien, kuten lasagnen, kypsentämiseen."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Ruoka kypsennetään käyttämällä mikroaaltouunia, ylälämpöä ja tuuletinta. Tämä lyhentää kypsennysaikaa. Soveltuu vihannesten ja pakasteruokien, kuten lasagnen, kypsentämiseen.",
+    "CL_DV_RF_display_brightness_setting_tips": "Aseta jääkaapin näytön kirkkaus.",
+    "CL_DV_RF_modes_tips": "Erikoistilat voidaan asettaa eri tilanteisiin. Päätä, mitkä tilat ovat aktiivisia. Useita tiloja ei voi käyttää samanaikaisesti.",
+    "CL_DV_RF_eco_mode_desc": "Kun eco-tila on käytössä, jäähdyttimen ja pakastimen lämpötila asetetaan energiatehokkaimpiin lämpötiloihin.",
+    "CL_DV_RF_holiday_mode_desc": "Kun lomatila on käytössä, yläosaston lämpötila on asetettu 15°C:een. Pakastin pysyy entisessä tilassaan.",
+    "CL_DV_RF_party_mode_desc": "Kun juhlatila on käytössä, kaikki osastot menevät maksimijäähdytykseen. Juhlatila poistetaan automaattisesti käytöstä 24 tunnin kuluttua.",
+    "CL_DV_RF_cleaning_mode_desc": "Puhdistustila mahdollistaa jäähdytystilan helpon puhdistamisen. ",
+    "CL_DV_RF_sabbath_mode_desc": "Sapattitila on käytössä 72 tuntia.\nVoit poistaa sen käytöstä tämän jakson aikana painamalla * 3 sekunnin ajan. Toistuu viikoittain.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Paina pitkään “Timer”-painiketta aloittaaksesi verkon konfiguroinnin, kun WIFI-ilmaisin vilkkuu. voit yhdistää WIFI:n. 3 minuutin kuluttua tila peruuntuu, jos verkkoasetuksia ei ole määritetty ja merkkivalo ei pala. Jos sinun on yhdistettävä WIFI uudelleen, paina pitkään “Timer”-painiketta aloittaaksesi verkon määrityksen uudelleen, WIFI-ilmaisin vilkkuu uudelleen.",
+    "CL_DV_DW_washing_progress": "Pesu käynnissä...",
+    "CL_DV_DW_washing_in_running": "Pesu ##:ssa on käynnissä",
+    "CL_DV_DW_washing_paused": "Pesu keskeytetty",
+    "CL_DV_DW_washing_in_paused": "Pesu paikassa ## on keskeytetty",
+    "CL_DV_RF_set_this_temperature": "Aseta tämä lämpötila",
+    "CL_DV_TD_drying_in_progress": "Kuivaus käynnissä...",
+    "CL_DV_TD_drying_in_x_is_running": "Kuivaus ## on käynnissä",
+    "CL_DV_TD_drying_in_x_is_paused": "Kuivaus ## on keskeytetty",
+    "CL_DV_TD_drying_in_x_complete": "Kuivaus ## on valmis",
+    "CL_DV_TD_drying_done": "Kuivaus on valmis",
+    "CL_DV_WM_washing_in_complete": "Pesu ## on valmis",
+    "CL_DV_RF_switch_to_eco_mode": "Vaihda ECO-tilaan",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Koska laite ei ole käytössä, suosittelemme vaihtamaan ECO-tilaan.",
+    "CL_DV_RF_start_eco_mode": "Käynnistä ECO-tila",
+    "CL_CF_AS_support": "Tukea",
+    "CL_DV_OV_remote_start": "ETÄKÄYNNISTYS",
+    "CL_DV_OV_remote_start_enable_tips": "Ota etäkäynnistys käyttöön vahvistamalla uuni painamalla nuppia.",
+    "CL_CF_CO_device_runs_normal": "Laitteesi toimii normaalissa kunnossa.",
+    "CL_CF_CO_device_needs_attention": "Laite vaatii huomiota.",
+    "CL_DV_RF_next_cleaning_will_be": "Seuraava siivous on **",
+    "CL_DV_RF_last_clean_was": "Viimeisin siivous oli **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Laite vaatii huomiota.",
+    "CL_CF_AS_run_normal_condition": "Laitteesi toimii normaalissa kunnossa.",
+    "CL_DV_WM_offline_content1": "Tarkista, onko laitteesi kytketty pistorasiaan ja virta on päällä.",
+    "CL_DV_WM_offline_content2": "Varmista, että kaappisi on yhdistetty paikalliseen langattomaan verkkoon.",
+    "CL_DV_WM_offline_content3": "Tarkista WiFi-signaalin vahvuus. Jos signaali on heikko, saattaa olla, että reititin on liian kaukana kaapista.",
+    "CL_DV_WM_offline_title": "Laitteesi on offline-tilassa",
+    "CL_CF_FM_create_recipe": "Luo resepti"
 }
