--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "L’éclairage de toutes les icônes des touches s’éteint et\"P\"\ncommence à clignoter, le réseau de cet appareil\nest maintenant ouvert pour se connecter, pendant 5 minutes.\nCliquez sur SUIVANT pour continuer.",
     "cooling_config_wifi_step1": "Réglez l’appareil sur un fonctionnement normal.\nAppuyez sur l’icône Wi-Fi pendant environ 3\nsecondes.\nLe symbole Wi-Fi commence à clignoter et'0'\napparaît dans l’affichage. Vous avez accédé au menu de connexion au réseau\n.",
     "cooling_config_wifi_step2": "Pour activer le W-iFi sur l’appareil, appuyez sur la touche de refroidissement intensif\nou la touche de congélation. L’écran\ns’affiche brièvement'01'et change à\n'02'automatiquement.\nLe Wi-Fi est prêt pour la connexion.",
-    "cooling_config_wifi_step3": "Naviguez avec les touches fléchées pour choisir'S'.\nConfirmez'S'en appuyant sur la touche de refroidissement\nintensif ou de congélation.\nLa touche de refroidissement intensif ou de congélation commence\nà clignoter ; le réseau de cet appareil est\nmaintenant ouvert pour se connecter, pendant 3 minutes.\nCliquez sur SUIVANT pour continuer.",
+    "cooling_config_wifi_step3": "Naviguez avec les touches fléchées pour choisir'S'.\nConfirmez'S'en appuyant sur la touche de refroidissement\nintensif ou de congélation.\nLa touche de refroidissement intensif ou de congélation commence\nà clignoter ; le réseau de cet appareil est\nmaintenant ouvert pour se connecter, pendant 5 minutes.\nCliquez sur SUIVANT pour continuer.",
     "cooling_config_wifi_step1_pair": "Réglez l’appareil sur un fonctionnement normal.\nAppuyez sur l’icône Wi-Fi pendant environ 3\nsecondes.\nLe symbole Wi-Fi commence à clignoter et'0'\napparaît dans l’affichage. Vous avez accédé au menu de connexion au réseau\n.",
     "cooling_config_wifi_step2_pair": "Naviguez avec les touches fléchées et sélectionnez « P ». Confirmez « P » en appuyant sur la touche de refroidissement/congélation intensive. La touche de refroidissement/congélation intensive commencera à clignoter. Le réseau de l'appareil est maintenant ouvert pour l'appairage pendant 3 minutes. Cliquez sur SUIVANT pour continuer.",
     "dw_config_wifi_step1": "Mettez l’appareil en marche. Naviguez avec les touches\nfléchées jusqu’aux réglages. Appuyez sur l’icône MENU pour accéder aux réglages\n.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "CONTRASTE D'AFFICHAGE",
     "washer_atag_detergent_tab": "ONGLET Détergent",
     "send_and_start": "ENVOIS ET COMMENCE",
-    "language_english_gb": "ANGLAIS_GB (EN)",
+    "language_english_gb": "ANGLAIS GB (EN)",
     "language_swedish": "SUÉDOIS (SV)",
     "language_danish": "Danois (DA)",
     "language_norwegian": "NORVÉGIEN (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIEN (IT)",
     "language_dutch": "NÉERLANDAIS (NL)",
     "language_french": "FRANÇAIS (FR)",
-    "language_english_us": "ANGLAIS_US (EN)",
+    "language_english_us": "ANGLAIS US (EN)",
     "language_spanish": "ESPAGNOL (ES)",
     "language_russian": "RUSSE (RU)",
     "language_traditional_chinese": "CHINOIS TRADITIONNEL (ZH)",
     "language_polish": "POLONAIS (PL)",
     "language_japanese": "JAPONAIS (JA)",
-    "language_english_au": "ANGLAIS_AU (EN)",
+    "language_english_au": "ANGLAIS AU (EN)",
     "language_slovenian": "SLOVÈNE (SL)",
     "language_estonian": "ESTONIEN (ET)",
     "language_latvian": "LETTON (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Le plat est cuit en combinant micro-ondes et air chaud. Cela réduit le temps de cuisson. Cette fonction est utilisée pour cuire les pains de viande, les pommes de terre, les pâtisseries et les gâteaux.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Le plat est cuit en combinant micro-ondes, gril et chaleur tournante. Le temps de cuisson est réduit. Convient pour la cuisson des gratins de pommes de terre, des poulets rôtis et des petites pièces de viande.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Le plat est cuit en combinant micro-ondes, voûte, sole et chaleur tournante. Le temps de cuisson est réduit. Convient pour la cuisson des tartes, du pain et des grosses pièces de viande.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Le plat est cuit en combinant micro-ondes, voûte et chaleur tournante. Le temps de cuisson est réduit. Convient pour la cuisson des légumes et des aliments surgelés comme les lasagnes."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Le plat est cuit en combinant micro-ondes, voûte et chaleur tournante. Le temps de cuisson est réduit. Convient pour la cuisson des légumes et des aliments surgelés comme les lasagnes.",
+    "CL_DV_RF_display_brightness_setting_tips": "Réglez la luminosité de l’écran de votre réfrigérateur.",
+    "CL_DV_RF_modes_tips": "Des modes spéciaux peuvent être définis pour différentes occasions. Décidez quels modes doivent être actifs. Plusieurs modes ne peuvent pas être utilisés en même temps.",
+    "CL_DV_RF_eco_mode_desc": "Lorsque le mode éco est activé, la température du réfrigérateur et du congélateur sera réglée sur les températures les plus économes en énergie.",
+    "CL_DV_RF_holiday_mode_desc": "Lorsque le mode vacances est activé, la température du compartiment supérieur est réglée sur 15°C. Le congélateur reste à la température réglée précédemment.",
+    "CL_DV_RF_party_mode_desc": "Lorsque le mode fête est activé, tous les compartiments passent en mode refroidissement maximal. Le mode fête sera automatiquement désactivé après 24 heures.",
+    "CL_DV_RF_cleaning_mode_desc": "Le mode Nettoyage permet un nettoyage confortable du compartiment réfrigérant.",
+    "CL_DV_RF_sabbath_mode_desc": "Le mode sabbat sera actif pendant 72 heures.\nAppuyez sur * pendant 3 s pour le désactiver pendant ce cycle. Se répète chaque semaine.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Appuyez longuement sur le bouton « Timer » pour démarrer la configuration du réseau, lorsque le voyant WIFI clignote, vous pouvez vous connecter au WIFI. Après 3 minutes, le statut sera annulé s'il n'y a pas de configuration réseau et le voyant lumineux est éteint. Si vous devez vous reconnecter au WIFI, appuyez longuement sur le bouton « Timer » pour redémarrer la configuration du réseau, le voyant WIFI clignotera à nouveau.",
+    "CL_DV_DW_washing_progress": "Lavage en cours...",
+    "CL_DV_DW_washing_in_running": "Le lavage à ## est en cours",
+    "CL_DV_DW_washing_paused": "Lavage en pause",
+    "CL_DV_DW_washing_in_paused": "Le lavage à ## a été interrompu",
+    "CL_DV_RF_set_this_temperature": "Régler cette température",
+    "CL_DV_TD_drying_in_progress": "Séchage en cours...",
+    "CL_DV_TD_drying_in_x_is_running": "Le séchage dans ## est en cours",
+    "CL_DV_TD_drying_in_x_is_paused": "Le séchage à ## a été interrompu",
+    "CL_DV_TD_drying_in_x_complete": "Le séchage en ## est terminé",
+    "CL_DV_TD_drying_done": "Votre séchage est terminé",
+    "CL_DV_WM_washing_in_complete": "Le lavage à ## est terminé",
+    "CL_DV_RF_switch_to_eco_mode": "Passer en mode ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "En raison de l'inactivité de l'appareil, nous vous recommandons de passer en mode ECO.",
+    "CL_DV_RF_start_eco_mode": "Démarrer le mode ECO",
+    "CL_CF_AS_support": "Soutien",
+    "CL_DV_OV_remote_start": "DÉMARRAGE À DISTANCE",
+    "CL_DV_OV_remote_start_enable_tips": "Pour activer le démarrage à distance, veuillez confirmer sur le four en appuyant sur le bouton.",
+    "CL_CF_CO_device_runs_normal": "Votre appareil fonctionne dans des conditions normales.",
+    "CL_CF_CO_device_needs_attention": "L'appareil a besoin d'attention.",
+    "CL_DV_RF_next_cleaning_will_be": "Le prochain nettoyage sera **",
+    "CL_DV_RF_last_clean_was": "Le dernier nettoyage était **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "L'appareil a besoin d'attention.",
+    "CL_CF_AS_run_normal_condition": "Votre appareil fonctionne dans des conditions normales.",
+    "CL_DV_WM_offline_content1": "Vérifiez si votre appareil est branché et que l'alimentation est allumée.",
+    "CL_DV_WM_offline_content2": "Assurez-vous que votre cave est connectée à un réseau sans fil local.",
+    "CL_DV_WM_offline_content3": "Vérifiez la force du signal WiFi. Si le signal est faible, il se peut que le routeur soit trop éloigné de la cave.",
+    "CL_DV_WM_offline_title": "Votre appareil est hors ligne",
+    "CL_CF_FM_create_recipe": "Créer une recette"
 }
