--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "התאורה של כל סמלי המפתח נכבית וה-\"P\" מתחיל להבהב, הרשת של מכשיר זה פתוחה כעת להתאמה למשך 3 דקות.\nלחץ על NEXT כדי להמשיך.",
     "cooling_config_wifi_step1": "הגדר את המכשיר לתנאי הפעלה רגילים. הקש והחזק את סמל ה-Wi-Fi למשך 3 שניות עד שתשמע צפצוף. סמל ה-Wi-Fi יתחיל להבהב. נכנסת לתפריט חיבור הרשת.",
     "cooling_config_wifi_step2": "אם \"02\" מוצג, דלג על שלב זה.\nאם \"0\" מוצג, הקש על מקש הקירור/הקפאה האינטנסיבי כדי להפעיל Wi-Fi במכשיר.\nהתצוגה תציג לזמן קצר \"01\" ותשנה ל-\"02\" באופן אוטומטי.",
-    "cooling_config_wifi_step3": "נווט עם מקשי החצים ובחר \"S\".\nאשר \"S\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי.\nמקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשיר פתוחה כעת לחיבור למשך 3 דקות.",
+    "cooling_config_wifi_step3": "נווט עם מקשי החצים ובחר \"S\".\nאשר \"S\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי.\nמקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשיר פתוחה כעת לחיבור למשך 5 דקות.",
     "cooling_config_wifi_step1_pair": "הגדר את המכשיר לתנאי הפעלה רגילים. הקש והחזק את סמל ה-Wi-Fi למשך 3 שניות עד שתשמע צפצוף. סמל ה-Wi-Fi יתחיל להבהב, ויופיע \"05\". נכנסת לתפריט חיבור הרשת.",
     "cooling_config_wifi_step2_pair": "נווט עם מקשי החצים ובחר \"P\". אשר את \"P\" על ידי הקשה על מקש קירור/הקפאה אינטנסיבי. מקש הקירור/הקפאה האינטנסיבי יתחיל להבהב. רשת המכשירים פתוחה כעת להתאמה למשך 3 דקות. לחץ על NEXT כדי להמשיך.",
     "dw_config_wifi_step1": "הפעל את המכשיר. נווט עם מקשי החצים להגדרות. לחץ על סמל MENU כדי להיכנס להגדרות.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "המנה מבושלת בשילוב של מיקרוגלים ואוויר חם. זה מקצר את זמן הבישול. פונקציה זו משמשת לבישול כיכר בשר, תפוחי אדמה, מאפים ועוגות.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, גריל ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול גרטן תפוחי אדמה, צלי עוף ונתחי בשר קטנים יותר.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, חום עליון ותחתון ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול טארטים, לחם ונתחי בשר גדולים יותר.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, חום עליון ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול ירקות ומזונות קפואים כמו לזניה. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, חום עליון ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול ירקות ומזונות קפואים כמו לזניה. ",
+    "CL_DV_RF_display_brightness_setting_tips": "הגדר את הבהירות של תצוגת המקרר שלך.",
+    "CL_DV_RF_modes_tips": "ניתן להגדיר מצבים מיוחדים לאירועים שונים. החלט אילו מצבים צריכים להיות פעילים. לא ניתן להשתמש במספר מצבים בו זמנית.",
+    "CL_DV_RF_eco_mode_desc": "כאשר מצב אקולוגי מופעל, הטמפרטורה של הצידנית והמקפיא תוגדר לרוב הטמפרטורות החסכוניות באנרגיה.",
+    "CL_DV_RF_holiday_mode_desc": "כאשר מצב חג מופעל, הטמפרטורה של התא העליון מוגדרת ל-15 מעלות צלזיוס. המקפיא נשאר בסט הקודם שלו.",
+    "CL_DV_RF_party_mode_desc": "כאשר מצב מסיבה מופעל, כל התאים יעברו לקירור מקסימלי. מצב מסיבה יושבת אוטומטית לאחר 24 שעות.",
+    "CL_DV_RF_cleaning_mode_desc": "מצב ניקוי מאפשר ניקוי נוח של תא הקירור.",
+    "CL_DV_RF_sabbath_mode_desc": "מצב השבת יהיה פעיל למשך 72 שעות. לחץ על * למשך 3 שניות כדי לבטל במהלך מחזור זה. מצב השבת חוזר על עצמו מדי שבוע.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "לחץ לחיצה ארוכה על כפתור \"טיימר\" כדי להתחיל את תצורת הרשת, כאשר מחוון ה-WIFI מהבהב. אתה יכול לחבר את ה-WIFI. לאחר 3 דקות, המצב יבוטל אם אין תצורת רשת, ונורית החיווי כבויה. אם אתה צריך לחבר מחדש את ה-WIFI, לחץ לחיצה ארוכה על כפתור \"טיימר\" כדי להתחיל שוב את תצורת הרשת, מחוון ה-WIFI יהבהב שוב.",
+    "CL_DV_DW_washing_progress": "הכביסה בעיצומה...",
+    "CL_DV_DW_washing_in_running": "הכביסה ב-## פועלת",
+    "CL_DV_DW_washing_paused": "הכביסה הושהתה",
+    "CL_DV_DW_washing_in_paused": "הכביסה ב-## הושהתה",
+    "CL_DV_RF_set_this_temperature": "הגדר את הטמפרטורה הזו",
+    "CL_DV_TD_drying_in_progress": "הייבוש בעיצומו...",
+    "CL_DV_TD_drying_in_x_is_running": "הייבוש ב-## פועל",
+    "CL_DV_TD_drying_in_x_is_paused": "הייבוש בעוד ## הושהה",
+    "CL_DV_TD_drying_in_x_complete": "הייבוש ב-## הושלם",
+    "CL_DV_TD_drying_done": "הייבוש הושלם",
+    "CL_DV_WM_washing_in_complete": "הכביסה ב-## הושלמה",
+    "CL_DV_RF_switch_to_eco_mode": "עבור למצב ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "בגלל חוסר פעילות במכשיר, אנו ממליצים לעבור למצב ECO.",
+    "CL_DV_RF_start_eco_mode": "הפעל את מצב ECO",
+    "CL_CF_AS_support": "תְמִיכָה",
+    "CL_DV_OV_remote_start": "התחלה מרחוק",
+    "CL_DV_OV_remote_start_enable_tips": "כדי לאפשר הפעלה מרחוק, נא לאשר בתנור על ידי לחיצה על הכפתור.",
+    "CL_CF_CO_device_runs_normal": "המכשיר שלך פועל במצב רגיל.",
+    "CL_CF_CO_device_needs_attention": "המכשיר זקוק לתשומת לב.",
+    "CL_DV_RF_next_cleaning_will_be": "הניקוי הבא יהיה **",
+    "CL_DV_RF_last_clean_was": "הניקוי האחרון היה **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "המכשיר זקוק לתשומת לב.",
+    "CL_CF_AS_run_normal_condition": "המכשיר שלך פועל במצב רגיל.",
+    "CL_DV_WM_offline_content1": "בדוק אם המכשיר מחובר והכוח מופעל.",
+    "CL_DV_WM_offline_content2": "ודא שהארון שלך מחובר לרשת אלחוטית מקומית.",
+    "CL_DV_WM_offline_content3": "בדוק את חוזק האות האלחוטי של ה-WiFi. אם האות חלש, ייתכן שהראוטר נמצא רחוק מדי מהארון.",
+    "CL_DV_WM_offline_title": "המכשיר שלך במצב לא מקוון",
+    "CL_CF_FM_create_recipe": "צור מתכון"
 }
