--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "सभी कुंजी चिह्नों की रोशनी बंद हो जाती है और \"पी\" झपकने लगता है, इस उपकरण का नेटवर्क अब 3 मिनट के लिए पेयरिंग के लिए खुला है।\nजारी रखने के लिए अगले पर क्लिक करें।",
     "cooling_config_wifi_step1": "डिवाइस को सामान्य परिचालन स्थितियों पर सेट करें। जब तक आपको बीप न सुनाई दे, तब तक वाई-फ़ाई सिंबल को 3 सेकंड तक टैप करके रखें। वाई-फाई सिंबल ब्लिंक करना शुरू कर देगा। आपने नेटवर्क कनेक्शन मेनू दर्ज किया।",
     "cooling_config_wifi_step2": "यदि \"02\" प्रदर्शित होता है, तो इस चरण को छोड़ दें।\nयदि \"0\" प्रदर्शित होता है, तो डिवाइस पर वाई-फाई सक्षम करने के लिए गहन कूलिंग/फ्रीजिंग कुंजी को टैप करें।\nडिस्प्ले संक्षेप में \"01\" दिखाएगा और स्वचालित रूप से \"02\" में बदल जाएगा।",
-    "cooling_config_wifi_step3": "तीर कुंजियों से नेविगेट करें और \"S\" चुनें।\nगहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"एस\" की पुष्टि करें।\nगहन शीतलन/फ्रीजिंग कुंजी झपकने लगेगी। डिवाइस नेटवर्क अब 3 मिनट के लिए कनेक्शन के लिए खुला है।",
+    "cooling_config_wifi_step3": "तीर कुंजियों से नेविगेट करें और \"S\" चुनें।\nगहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"एस\" की पुष्टि करें।\nगहन शीतलन/फ्रीजिंग कुंजी झपकने लगेगी। डिवाइस नेटवर्क अब 5 मिनट के लिए कनेक्शन के लिए खुला है।",
     "cooling_config_wifi_step1_pair": "डिवाइस को सामान्य परिचालन स्थितियों पर सेट करें। जब तक आपको बीप न सुनाई दे, तब तक वाई-फ़ाई सिंबल को 3 सेकंड तक टैप करके रखें। वाई-फाई प्रतीक झपकना शुरू हो जाएगा और \"05\" दिखाई देगा। आपने नेटवर्क कनेक्शन मेनू दर्ज किया।",
     "cooling_config_wifi_step2_pair": "तीर कुंजियों से नेविगेट करें और \"P\" चुनें। गहन शीतलन/फ्रीजिंग कुंजी को टैप करके \"P\" की पुष्टि करें। गहन शीतलन/फ्रीजिंग कुंजी ब्लिंक करना शुरू कर देगी। डिवाइस नेटवर्क अब 3 मिनट के लिए युग्मन के लिए खुला है। जारी रखने के लिए NEXT पर क्लिक करें।",
     "dw_config_wifi_step1": "उपकरण चालू करें. सेटिंग पर तीर कुंजियों से नेविगेट करें. सेटिंग्स दर्ज करने के लिए मेनू आइकन दबाएँ।",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "यह व्यंजन माइक्रोवेव और गर्म हवा के संयोजन से पकाया जाता है। इससे खाना पकाने का समय कम हो जाता है। इस फ़ंक्शन का उपयोग मीट लोफ़, आलू, पेस्ट्री और केक पकाने के लिए किया जाता है।",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "यह डिश माइक्रोवेव, ग्रिल और पंखे के संयोजन से पकाई जाती है। इससे खाना पकाने का समय कम हो जाता है। आलू ग्रेटिन, चिकन रोस्ट और मांस के छोटे टुकड़े पकाने के लिए उपयुक्त है।",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "यह व्यंजन माइक्रोवेव, ऊपरी और निचली गर्मी और पंखे के संयोजन से पकाया जाता है। इससे खाना पकाने का समय कम हो जाता है। टार्ट्स, ब्रेड और मांस के बड़े टुकड़ों को पकाने के लिए उपयुक्त है।",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "यह व्यंजन माइक्रोवेव, ऊपरी ताप और पंखे के संयोजन से पकाया जाता है। इससे खाना पकाने का समय कम हो जाता है। यह सब्ज़ियाँ और लसग्ना जैसे जमे हुए खाद्य पदार्थ पकाने के लिए उपयुक्त है। "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "यह व्यंजन माइक्रोवेव, ऊपरी ताप और पंखे के संयोजन से पकाया जाता है। इससे खाना पकाने का समय कम हो जाता है। यह सब्ज़ियाँ और लसग्ना जैसे जमे हुए खाद्य पदार्थ पकाने के लिए उपयुक्त है। ",
+    "CL_DV_RF_display_brightness_setting_tips": "अपने फ्रिज के डिस्प्ले की चमक सेट करें।",
+    "CL_DV_RF_modes_tips": "अलग-अलग मौकों के लिए खास मोड सेट किए जा सकते हैं। तय करें कि कौन से मोड सक्रिय होने चाहिए। एक ही समय में कई मोड का इस्तेमाल नहीं किया जा सकता।",
+    "CL_DV_RF_eco_mode_desc": "जब इको मोड सक्षम किया जाता है, तो कूलर और फ्रीजर का तापमान सबसे अधिक ऊर्जा कुशल तापमान पर सेट किया जाएगा।",
+    "CL_DV_RF_holiday_mode_desc": "जब हॉलिडे मोड चालू होता है, तो ऊपरी डिब्बे का तापमान 15°C पर सेट हो जाता है। फ़्रीज़र अपने पिछले सेट पर ही रहता है।",
+    "CL_DV_RF_party_mode_desc": "जब पार्टी मोड चालू होगा, तो सभी डिब्बे अधिकतम शीतलन पर चले जाएँगे। पार्टी मोड 24 घंटे के बाद स्वचालित रूप से बंद हो जाएगा।",
+    "CL_DV_RF_cleaning_mode_desc": "सफाई मोड शीतलन डिब्बे की आरामदायक सफाई की अनुमति देता है।",
+    "CL_DV_RF_sabbath_mode_desc": "सब्बाथ मोड 72 घंटों तक सक्रिय रहेगा। इस चक्र के दौरान निष्क्रिय करने के लिए 3 सेकंड के लिए * दबाएँ। सब्बाथ मोड साप्ताहिक रूप से दोहराया जाता है।",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "नेटवर्क कॉन्फ़िगरेशन शुरू करने के लिए \"टाइमर\" बटन को लंबे समय तक दबाएं, जब वाईफ़ाई संकेतक चमकता है। आप वाईफ़ाई कनेक्ट कर सकते हैं। 3 मिनट के बाद, यदि कोई नेटवर्क कॉन्फ़िगरेशन नहीं है, और संकेतक प्रकाश बंद है, तो स्थिति रद्द कर दी जाएगी। यदि आपको वाईफ़ाई को फिर से कनेक्ट करने की आवश्यकता है, तो नेटवर्क कॉन्फ़िगरेशन को फिर से शुरू करने के लिए \"टाइमर\" बटन को लंबे समय तक दबाएं, वाईफ़ाई संकेतक फिर से चमक जाएगा।",
+    "CL_DV_DW_washing_progress": "धुलाई जारी है...",
+    "CL_DV_DW_washing_in_running": "## में धुलाई चल रही है",
+    "CL_DV_DW_washing_paused": "धुलाई रोक दी गई",
+    "CL_DV_DW_washing_in_paused": "## में धुलाई रोक दी गई है",
+    "CL_DV_RF_set_this_temperature": "यह तापमान सेट करें",
+    "CL_DV_TD_drying_in_progress": "सुखाने का काम जारी है...",
+    "CL_DV_TD_drying_in_x_is_running": "## में सुखाने का काम चल रहा है",
+    "CL_DV_TD_drying_in_x_is_paused": "## में सुखाने का कार्य रोक दिया गया है",
+    "CL_DV_TD_drying_in_x_complete": "## में सुखाने का काम पूरा हो गया है",
+    "CL_DV_TD_drying_done": "सुखाई हो चुकी है",
+    "CL_DV_WM_washing_in_complete": "## में धुलाई पूरी हो गई है",
+    "CL_DV_RF_switch_to_eco_mode": "ECO मोड पर स्विच करें",
+    "CL_DV_RF_switch_to_eco_mode_tips": "उपकरण पर निष्क्रियता के कारण हम आपको ECO मोड पर स्विच करने की सलाह देते हैं।",
+    "CL_DV_RF_start_eco_mode": "ECO मोड प्रारंभ करें",
+    "CL_CF_AS_support": "सहायता",
+    "CL_DV_OV_remote_start": "रिमोट स्टार्ट",
+    "CL_DV_OV_remote_start_enable_tips": "रिमोट स्टार्ट सक्षम करने के लिए, कृपया घुंडी दबाकर ओवन की पुष्टि करें।",
+    "CL_CF_CO_device_runs_normal": "आपका डिवाइस सामान्य स्थिति में चलता है.",
+    "CL_CF_CO_device_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
+    "CL_DV_RF_next_cleaning_will_be": "अगली सफ़ाई ** होगी",
+    "CL_DV_RF_last_clean_was": "पिछली सफ़ाई ** थी",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "डिवाइस पर ध्यान देने की आवश्यकता है।",
+    "CL_CF_AS_run_normal_condition": "आपका डिवाइस सामान्य स्थिति में चलता है.",
+    "CL_DV_WM_offline_content1": "यह सुनिश्चित करें कि आपका यंत्र प्लग इन किया गया है और पावर चालू है।",
+    "CL_DV_WM_offline_content2": "सुनिश्चित करें कि आपका कैबिनेट स्थानीय वायरलेस नेटवर्क से कनेक्ट है।",
+    "CL_DV_WM_offline_content3": "अपने WiFi सिग्नल की ताकत की जांच करें। यदि सिग्नल कम है, तो यह हो सकता है कि राउटर कैबिनेट से बहुत दूर है।",
+    "CL_DV_WM_offline_title": "आपका डिवाइस ऑफ़लाइन है",
+    "CL_CF_FM_create_recipe": "रेसिपी बनाएं"
 }
