--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Az összes ikon világítása kialszik, az \"S\" villogni kezd, a készülék hálózata ezzel  készen áll a csatlakozásra, 5 percen keresztül. A folytatáshoz kattintson a NEXT-re.",
     "cooling_config_wifi_step1": "Állítsa a készüléket normál működés üzemmódba Érintse meg és tartsa benyomva a  Wi-Fi ikont  körülbelül 3 másodpercig. A Wi-Fi ikon villogni kezd és a kijelzőn a \"O' jelenik meg. Ezzel belépett a hálózati csatlakozás menübe.",
     "cooling_config_wifi_step2": "A Wi-Fi engedélyezéséhez érintse meg az intenzív hűtés vagy fagyasztás gombot. A kijelzőn hamarosan megjelenik a „01” és automatikusan '02 értékre vált. A Wi-Fi készen áll a csatlakozásra.",
-    "cooling_config_wifi_step3": "A nyíl gombok segítségével navigáljon az \"S\" kiválasztására. Hagyja jóvá az \"S\" kiválasztását az intenzív hűtés vagy fagyasztás gomb érintésével. Az intenzív hűtés vagy fagyasztás gomb villogni kezd; a készülék hálózata ezzel készen áll a csatlakozásra, 3 percen keresztül. A folytatáshoz kattintson a NEXT-re.",
+    "cooling_config_wifi_step3": "A nyíl gombok segítségével navigáljon az \"S\" kiválasztására. Hagyja jóvá az \"S\" kiválasztását az intenzív hűtés vagy fagyasztás gomb érintésével. Az intenzív hűtés vagy fagyasztás gomb villogni kezd; a készülék hálózata ezzel készen áll a csatlakozásra, 5 percen keresztül. A folytatáshoz kattintson a NEXT-re.",
     "cooling_config_wifi_step1_pair": "Állítsa a készüléket normál működés üzemmódba Érintse meg és tartsa benyomva a  Wi-Fi ikont  körülbelül 3 másodpercig. A Wi-Fi ikon villogni kezd és a kijelzőn a \"O' jelenik meg. Ezzel belépett a hálózati csatlakozás menübe.",
     "cooling_config_wifi_step2_pair": "Navigáljon a nyílbillentyűkkel, és válassza a „P” lehetőséget. Erősítse meg a \"P\"-t az intenzív hűtés/fagyasztás gomb megérintésével. Az intenzív hűtés/fagyasztás gomb villogni kezd. Az eszköz hálózata most 3 percig párosításra nyitva áll. A folytatáshoz kattintson a KÖVETKEZŐ gombra.",
     "dw_config_wifi_step1": "Kapcsolja BE a készüléket. A nyíl gombok segítségével navigáljon a beállításokra. Nyomja meg a MENÜ ikont a beállításokba való belépéshez.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Az étel mikrohullámú sütő és forró levegő kombinációjával készül. Ez lerövidíti a főzési időt. Ez a funkció húscipők, burgonya, péksütemények és sütemények sütéséhez használható.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Az étel mikrohullámú sütő, grill és ventilátor kombinációjával készül. Ez lerövidíti a főzési időt. Alkalmas burgonya gratin, csirkesült és kisebb húsdarabok főzésére.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Az ételt mikrohullámú sütő, felső és alsó hő és ventilátor kombinációjával készítik. Ez lerövidíti a főzési időt. Alkalmas torták, kenyér és nagyobb húsdarabok sütésére.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Az étel mikrohullámú sütő, felső hő és ventilátor kombinációjával készül. Ez lerövidíti a főzési időt. Alkalmas zöldségek és fagyasztott ételek, például lasagne főzésére. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Az étel mikrohullámú sütő, felső hő és ventilátor kombinációjával készül. Ez lerövidíti a főzési időt. Alkalmas zöldségek és fagyasztott ételek, például lasagne főzésére. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Állítsa be a hűtőszekrény kijelzőjének fényerejét.",
+    "CL_DV_RF_modes_tips": "Különféle alkalmakra speciális üzemmódok állíthatók be. Döntse el, mely módok legyenek aktívak. Több mód nem használható egyszerre.",
+    "CL_DV_RF_eco_mode_desc": "Ha az öko mód engedélyezve van, a hűtő és a fagyasztó hőmérséklete a legtöbb energiahatékony hőmérsékletre lesz beállítva.",
+    "CL_DV_RF_holiday_mode_desc": "Ha a szabadság üzemmód be van kapcsolva, a felső rekesz hőmérséklete 15°C-ra van állítva. A fagyasztó az előző beállításában marad.",
+    "CL_DV_RF_party_mode_desc": "Ha a buli mód engedélyezve van, minden rekesz maximális hűtésre megy át. A Party mód 24 óra elteltével automatikusan kikapcsol.",
+    "CL_DV_RF_cleaning_mode_desc": "A Tisztítási mód lehetővé teszi a hűtőtér kényelmes tisztítását.",
+    "CL_DV_RF_sabbath_mode_desc": "A szombat üzemmód 72 óráig lesz aktív. Nyomja meg a * gombot 3 másodpercig, hogy kikapcsolja a ciklus alatt. A szombat üzemmód hetente ismétlődik.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Nyomja meg hosszan a „Timer” gombot a hálózati konfiguráció elindításához, amikor a WIFI jelzőfény villog. csatlakoztathatja a WIFI-t. 3 perc elteltével az állapot törlődik, ha nincs hálózati konfiguráció, és a jelzőfény nem világít. Ha újra kell csatlakoznia a WIFI-hez, nyomja meg hosszan a „Timer” gombot a hálózati konfigurálás újraindításához, ekkor a WIFI jelzőfény ismét villogni kezd.",
+    "CL_DV_DW_washing_progress": "Mosás folyamatban...",
+    "CL_DV_DW_washing_in_running": "A ##-ban történő mosás folyamatban van",
+    "CL_DV_DW_washing_paused": "A mosás szünetel",
+    "CL_DV_DW_washing_in_paused": "A mosás ##-ban szünetel",
+    "CL_DV_RF_set_this_temperature": "Állítsa be ezt a hőmérsékletet",
+    "CL_DV_TD_drying_in_progress": "Szárítás folyamatban...",
+    "CL_DV_TD_drying_in_x_is_running": "A szárítás ##-ban fut",
+    "CL_DV_TD_drying_in_x_is_paused": "A szárítás ##-ban szünetel",
+    "CL_DV_TD_drying_in_x_complete": "A szárítás ##-ban befejeződött",
+    "CL_DV_TD_drying_done": "A szárítás kész",
+    "CL_DV_WM_washing_in_complete": "A mosás ##-ban befejeződött",
+    "CL_DV_RF_switch_to_eco_mode": "Váltson ECO módba",
+    "CL_DV_RF_switch_to_eco_mode_tips": "A készülék inaktivitása miatt javasoljuk, hogy váltson ECO módba.",
+    "CL_DV_RF_start_eco_mode": "Indítsa el az ECO módot",
+    "CL_CF_AS_support": "Támogatás",
+    "CL_DV_OV_remote_start": "TÁVINDÍTÁS",
+    "CL_DV_OV_remote_start_enable_tips": "A távindítás engedélyezéséhez erősítse meg a sütőn a gombot a gomb megnyomásával.",
+    "CL_CF_CO_device_runs_normal": "A készülék normál állapotban működik.",
+    "CL_CF_CO_device_needs_attention": "A készülék figyelmet igényel.",
+    "CL_DV_RF_next_cleaning_will_be": "A következő takarítás **",
+    "CL_DV_RF_last_clean_was": "Az utolsó takarítás **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "A készülék figyelmet igényel.",
+    "CL_CF_AS_run_normal_condition": "A készülék normál állapotban működik.",
+    "CL_DV_WM_offline_content1": "Ellenőrizze, hogy a készülék csatlakozik-e és be van-e kapcsolva az áram.",
+    "CL_DV_WM_offline_content2": "Győződjön meg róla, hogy a szekrény csatlakozik-e egy helyi vezeték nélküli hálózathoz.",
+    "CL_DV_WM_offline_content3": "Ellenőrizze a WiFi jel erősségét. Ha a jel gyenge, lehet, hogy a router túl messze van a szekrénytől.",
+    "CL_DV_WM_offline_title": "Eszköze offline állapotban van",
+    "CL_CF_FM_create_recipe": "Hozzon létre receptet"
 }
