--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Penerangan semua ikon tombol padam dan “P” mulai berkedip, jaringan alat ini sekarang terbuka untuk pemasangan selama 3 menit.\nKlik BERIKUTNYA untuk melanjutkan.",
     "cooling_config_wifi_step1": "Atur perangkat ke kondisi pengoperasian normal. Ketuk dan tahan simbol Wi-Fi selama 3 detik hingga Anda mendengar bunyi bip. Simbol Wi-Fi akan mulai berkedip. Anda masuk ke menu koneksi jaringan.",
     "cooling_config_wifi_step2": "Jika \"02\" ditampilkan, lewati langkah ini.\nJika \"0\" ditampilkan, ketuk tombol pendinginan/pembekuan intensif untuk mengaktifkan Wi-Fi di perangkat.\nLayar akan menampilkan \"01\" sebentar dan berubah menjadi \"02\" secara otomatis.",
-    "cooling_config_wifi_step3": "Navigasi dengan tombol panah dan pilih \"S\".\nKonfirmasikan \"S\" dengan mengetuk tombol pendinginan/pembekuan intensif.\nTombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat sekarang terbuka untuk koneksi selama 3 menit.",
+    "cooling_config_wifi_step3": "Navigasi dengan tombol panah dan pilih \"S\".\nKonfirmasikan \"S\" dengan mengetuk tombol pendinginan/pembekuan intensif.\nTombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat sekarang terbuka untuk koneksi selama 5 menit.",
     "cooling_config_wifi_step1_pair": "Atur perangkat ke kondisi pengoperasian normal. Ketuk dan tahan simbol Wi-Fi selama 3 detik hingga Anda mendengar bunyi bip. Simbol Wi-Fi akan mulai berkedip dan \"05\" akan muncul. Anda masuk ke menu koneksi jaringan.",
     "cooling_config_wifi_step2_pair": "Navigasi dengan tombol panah dan pilih \"P\". Konfirmasikan \"P\" dengan mengetuk tombol pendinginan/pembekuan intensif. Tombol pendinginan/pembekuan intensif akan mulai berkedip. Jaringan perangkat kini terbuka untuk pemasangan selama 3 menit. Klik LANJUTKAN untuk melanjutkan.",
     "dw_config_wifi_step1": "Nyalakan alat. Navigasi dengan tombol panah ke pengaturan. Tekan ikon MENU untuk masuk ke pengaturan.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "KONTRAS TAMPILAN",
     "washer_atag_detergent_tab": "TAB Deterjen",
     "send_and_start": "Kirim dan mulai",
-    "language_english_gb": "BAHASA INGGRIS_IR (EN)",
+    "language_english_gb": "BAHASA INGGRIS IR (EN)",
     "language_swedish": "SWEDIA (SV)",
     "language_danish": "Denmark (DA)",
     "language_norwegian": "NORWEGIA (TIDAK)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Hidangan ini dimasak dengan kombinasi gelombang mikro dan udara panas. Ini mempersingkat waktu memasak. Fungsi ini digunakan untuk memasak daging cincang, kentang, kue kering, dan kue.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Hidangan ini dimasak dengan kombinasi microwave, panggangan, dan kipas angin. Ini mempersingkat waktu memasak. Cocok untuk memasak kentang gratin, ayam panggang, dan potongan daging kecil.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Hidangan ini dimasak dengan kombinasi microwave, panas atas dan bawah, serta kipas. Ini mempersingkat waktu memasak. Cocok untuk memasak kue tart, roti, dan potongan daging yang lebih besar.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Hidangan ini dimasak dengan kombinasi microwave, api atas, dan kipas. Ini mempersingkat waktu memasak. Cocok untuk memasak sayuran dan makanan beku seperti lasagna. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Hidangan ini dimasak dengan kombinasi microwave, api atas, dan kipas. Ini mempersingkat waktu memasak. Cocok untuk memasak sayuran dan makanan beku seperti lasagna. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Atur kecerahan layar kulkas Anda.",
+    "CL_DV_RF_modes_tips": "Mode khusus dapat diatur untuk berbagai kesempatan. Tentukan mode mana yang harus diaktifkan. Beberapa mode tidak dapat digunakan secara bersamaan.",
+    "CL_DV_RF_eco_mode_desc": "Saat mode ramah lingkungan diaktifkan, suhu pendingin dan freezer akan diatur ke suhu paling hemat energi.",
+    "CL_DV_RF_holiday_mode_desc": "Saat mode liburan diaktifkan, suhu kompartemen atas diatur ke 15°C. Freezer tetap pada suhu yang telah ditetapkan sebelumnya.",
+    "CL_DV_RF_party_mode_desc": "Saat mode pesta diaktifkan, semua kompartemen akan mencapai pendinginan maksimum. Mode pesta akan otomatis dinonaktifkan setelah 24 jam.",
+    "CL_DV_RF_cleaning_mode_desc": "Mode pembersihan memungkinkan pembersihan kompartemen pendingin yang nyaman.",
+    "CL_DV_RF_sabbath_mode_desc": "Mode Sabat akan aktif selama 72 jam. Tekan * selama 3 detik untuk menonaktifkannya selama siklus ini. Mode Sabat diulang setiap minggu.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Tekan lama tombol “Timer” untuk memulai konfigurasi jaringan, saat indikator WIFI berkedip. Anda dapat menghubungkan WIFI. Setelah 3 menit, status akan dibatalkan jika tidak ada konfigurasi jaringan, dan lampu indikator mati. Jika Anda perlu menghubungkan kembali WIFI, tekan lama tombol “Timer” untuk memulai konfigurasi jaringan lagi, indikator WIFI akan berkedip lagi.",
+    "CL_DV_DW_washing_progress": "Sedang dicuci...",
+    "CL_DV_DW_washing_in_running": "Pencucian di ## sedang berjalan",
+    "CL_DV_DW_washing_paused": "Pencucian dihentikan sementara",
+    "CL_DV_DW_washing_in_paused": "Pencucian di ## telah dijeda",
+    "CL_DV_RF_set_this_temperature": "Atur suhu ini",
+    "CL_DV_TD_drying_in_progress": "Sedang dikeringkan...",
+    "CL_DV_TD_drying_in_x_is_running": "Pengeringan di ## sedang berjalan",
+    "CL_DV_TD_drying_in_x_is_paused": "Pengeringan di ## telah dihentikan sementara",
+    "CL_DV_TD_drying_in_x_complete": "Pengeringan di ## telah selesai",
+    "CL_DV_TD_drying_done": "Pengetuaan telah selesa",
+    "CL_DV_WM_washing_in_complete": "Pencucian di ## telah selesai",
+    "CL_DV_RF_switch_to_eco_mode": "Beralih ke mode ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Karena tidak ada aktivitas pada alat, kami sarankan Anda beralih ke mode ECO.",
+    "CL_DV_RF_start_eco_mode": "Mulai mode ECO",
+    "CL_CF_AS_support": "Mendukung",
+    "CL_DV_OV_remote_start": "MULAI JARAK JAUH",
+    "CL_DV_OV_remote_start_enable_tips": "Untuk mengaktifkan start jarak jauh, harap konfirmasikan pada oven dengan menekan kenop.",
+    "CL_CF_CO_device_runs_normal": "Perangkat Anda berjalan dalam kondisi normal.",
+    "CL_CF_CO_device_needs_attention": "Perangkat ini perlu perhatian.",
+    "CL_DV_RF_next_cleaning_will_be": "Pembersihan selanjutnya akan **",
+    "CL_DV_RF_last_clean_was": "Pembersihan terakhir adalah **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Perangkat ini perlu perhatian.",
+    "CL_CF_AS_run_normal_condition": "Perangkat Anda berjalan dalam kondisi normal.",
+    "CL_DV_WM_offline_content1": "Periksa apakah perangkat Anda terhubung dan daya sudah dinyalakan.",
+    "CL_DV_WM_offline_content2": "Pastikan kabinet Anda terhubung ke jaringan nirkabel lokal.",
+    "CL_DV_WM_offline_content3": "Periksa kekuatan sinyal WiFi Anda. Jika sinyal lemah, mungkin router terlalu jauh dari kabinet.",
+    "CL_DV_WM_offline_title": "Perangkat Anda sedang offline",
+    "CL_CF_FM_create_recipe": "Buat resep"
 }
