--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "L'illuminazione di tutte le icone dei tasti si spegne e \"P\" inizia a lampeggiare; la rete di questo apparecchio è ora aperta per l'accoppiamento per 3 minuti.\nFare clic su NEXT per continuare.",
     "cooling_config_wifi_step1": "Impostare il dispositivo in condizioni di funzionamento normali. Toccare e tenere premuto il simbolo Wi-Fi per 3 secondi finché non si sente un segnale acustico. Il simbolo Wi-Fi inizia a lampeggiare. Si è entrati nel menu di connessione alla rete.",
     "cooling_config_wifi_step2": "Se viene visualizzato \"02\", saltare questo passaggio.\nSe viene visualizzato \"0\", toccare il tasto di raffreddamento/congelamento intensivo per attivare il Wi-Fi sul dispositivo.\nIl display visualizza brevemente \"01\" e passa automaticamente a \"02\".\nIl Wi-Fi è pronto per la connessione.",
-    "cooling_config_wifi_step3": "Navigare con i tasti freccia e selezionare \"S\".\nConfermare \"S\" toccando il tasto di raffreddamento/congelamento intensivo.\nIl tasto di raffreddamento/congelamento intensivo inizia a lampeggiare. La rete del dispositivo è ora aperta alla connessione per 3 minuti.",
+    "cooling_config_wifi_step3": "Navigare con i tasti freccia e selezionare \"S\".\nConfermare \"S\" toccando il tasto di raffreddamento/congelamento intensivo.\nIl tasto di raffreddamento/congelamento intensivo inizia a lampeggiare. La rete del dispositivo è ora aperta alla connessione per 5 minuti.",
     "cooling_config_wifi_step1_pair": "Impostare il dispositivo in condizioni di funzionamento normali. Toccare e tenere premuto il simbolo Wi-Fi per 3 secondi finché non si sente un segnale acustico. Il simbolo Wi-Fi inizia a lampeggiare e appare \"05\". Si è entrati nel menu di connessione alla rete.",
     "cooling_config_wifi_step2_pair": "Navigare con i tasti freccia e selezionare \"P\". Confermare \"P\" toccando il tasto di raffreddamento/congelamento intensivo. Il tasto di raffreddamento/congelamento intensivo inizia a lampeggiare. La rete del dispositivo è ora aperta per l'accoppiamento per 3 minuti. Fare clic su NEXT per continuare.",
     "dw_config_wifi_step1": "Accendere l'apparecchio. Navigare con i tasti freccia fino alle impostazioni. Premere l'icona MENU per accedere alle impostazioni.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "CONTRASTO DEL DISPLAY",
     "washer_atag_detergent_tab": "Detergente SCHEDA",
     "send_and_start": "INVIA E AVVIA",
-    "language_english_gb": "INGLESE_GB (EN)",
+    "language_english_gb": "INGLESE GB (EN)",
     "language_swedish": "SVEDESE (SV)",
     "language_danish": "Danese (DA)",
     "language_norwegian": "NORVEGESE (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIANO (IT)",
     "language_dutch": "OLANDESE (NL)",
     "language_french": "FRANCESE (FR)",
-    "language_english_us": "INGLESE_USA (EN)",
+    "language_english_us": "INGLESE USA (EN)",
     "language_spanish": "Spagnolo (ES)",
     "language_russian": "RUSSO (RU)",
     "language_traditional_chinese": "CINESE_TRADIZIONALE (ZH)",
     "language_polish": "POLACCO (PL)",
     "language_japanese": "GIAPPONESE (JA)",
-    "language_english_au": "INGLESE_AU (EN)",
+    "language_english_au": "INGLESE AU (EN)",
     "language_slovenian": "SLOVENO (SL)",
     "language_estonian": "ESTONE (ET)",
     "language_latvian": "LETTONE (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Il piatto viene cucinato con una combinazione di microonde e aria calda. Ciò riduce il tempo di cottura. Questa funzione viene utilizzata per cucinare polpettoni, patate, dolciumi e torte.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Il piatto viene cucinato con una combinazione di microonde, griglia e ventola. Questo accorcia i tempi di cottura. Adatto per cucinare gratin di patate, arrosti di pollo e tagli di carne più piccoli.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Il piatto viene cucinato con una combinazione di microonde, calore superiore e inferiore e ventola. Questo accorcia i tempi di cottura. Adatta per cucinare crostate, pane e tagli di carne più grandi.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Il piatto viene cucinato con una combinazione di microonde, calore superiore e ventola. Questo accorcia i tempi di cottura. Adatta per cucinare verdure e cibi surgelati come le lasagne. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Il piatto viene cucinato con una combinazione di microonde, calore superiore e ventola. Questo accorcia i tempi di cottura. Adatta per cucinare verdure e cibi surgelati come le lasagne. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Imposta la luminosità del display del tuo frigorifero.",
+    "CL_DV_RF_modes_tips": "È possibile impostare modalità speciali per diverse occasioni. Decidi quali modalità devono essere attive. Non è possibile utilizzare più modalità contemporaneamente.",
+    "CL_DV_RF_eco_mode_desc": "Quando la modalità eco è abilitata, la temperatura del frigorifero e del congelatore verrà impostata sulle temperature più efficienti dal punto di vista energetico.",
+    "CL_DV_RF_holiday_mode_desc": "Quando la modalità vacanza è abilitata, la temperatura del vano superiore è impostata a 15°C. Il freezer rimane impostato sulla temperatura precedente.",
+    "CL_DV_RF_party_mode_desc": "Quando la modalità party è abilitata, tutti i compartimenti passeranno al raffreddamento massimo. La modalità party verrà automaticamente disattivata dopo 24 ore.",
+    "CL_DV_RF_cleaning_mode_desc": "La modalità Pulizia consente una comoda pulizia del vano frigorifero.",
+    "CL_DV_RF_sabbath_mode_desc": "La modalità Sabbath sarà attiva per 72 ore.\nPremi * per 3 secondi per disattivarla durante questo ciclo. Si ripete settimanalmente.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Premere a lungo il pulsante \"Timer\" per avviare la configurazione di rete, quando l'indicatore WIFI lampeggia. è possibile connettere il WIFI. Dopo 3 minuti, lo stato verrà annullato se non è presente alcuna configurazione di rete e la spia è spenta. Se è necessario ricollegare il WIFI, premere a lungo il pulsante \"Timer\" per avviare nuovamente la configurazione di rete, l'indicatore WIFI lampeggerà di nuovo.",
+    "CL_DV_DW_washing_progress": "Lavaggio in corso...",
+    "CL_DV_DW_washing_in_running": "Il lavaggio in ## è in corso",
+    "CL_DV_DW_washing_paused": "Lavaggio in pausa",
+    "CL_DV_DW_washing_in_paused": "Il lavaggio in ## è stato sospeso",
+    "CL_DV_RF_set_this_temperature": "Imposta questa temperatura",
+    "CL_DV_TD_drying_in_progress": "Asciugatura in corso...",
+    "CL_DV_TD_drying_in_x_is_running": "L'asciugatura in ## è in esecuzione",
+    "CL_DV_TD_drying_in_x_is_paused": "L'asciugatura in ## è stata sospesa",
+    "CL_DV_TD_drying_in_x_complete": "L'asciugatura in ## è stata completata",
+    "CL_DV_TD_drying_done": "L’asciugatura è fatta",
+    "CL_DV_WM_washing_in_complete": "Il lavaggio a ## è stato completato",
+    "CL_DV_RF_switch_to_eco_mode": "Passa alla modalità ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "A causa dell'inattività dell'apparecchio, si consiglia di passare alla modalità ECO.",
+    "CL_DV_RF_start_eco_mode": "Avvia la modalità ECO",
+    "CL_CF_AS_support": "Supporto",
+    "CL_DV_OV_remote_start": "AVVIO DA REMOTO",
+    "CL_DV_OV_remote_start_enable_tips": "Per abilitare l'avvio remoto, confermare sul forno premendo la manopola.",
+    "CL_CF_CO_device_runs_normal": "Il dispositivo funziona in condizioni normali.",
+    "CL_CF_CO_device_needs_attention": "Il dispositivo necessita di attenzione.",
+    "CL_DV_RF_next_cleaning_will_be": "La prossima pulizia sarà **",
+    "CL_DV_RF_last_clean_was": "L'ultima pulizia è stata **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Il dispositivo necessita di attenzione.",
+    "CL_CF_AS_run_normal_condition": "Il dispositivo funziona in condizioni normali.",
+    "CL_DV_WM_offline_content1": "Verifica se il tuo elettrodomestico è collegato alla presa e se l’alimentazione è accesa.",
+    "CL_DV_WM_offline_content2": "Assicurati che il tuo armadietto sia collegato a una rete wireless locale.",
+    "CL_DV_WM_offline_content3": "Controlla la potenza del segnale WiFi. Se il segnale è debole, potrebbe essere che il router sia troppo lontano dall’armadietto.",
+    "CL_DV_WM_offline_title": "Il tuo dispositivo è offline",
+    "CL_CF_FM_create_recipe": "Crea ricetta"
 }
