--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Сенсорлардың барлығының жарығы сөнеді және ”Р” символы жыпылықтай бастайды. Бұл аспаптың желісі 5 минут ішінде қосылу үшін ашылған, Жалғастыру үшін «ОДАН ӘРІ» батырмасын басыңыз.",
     "cooling_config_wifi_step1": "Аспапты қалыпты жұмыс режиміне ауыстырыңыз. Wi-Fi белгісін басып, 3 секунд ұстаңыз. Wi-Fi индикаторы жыпылықтай бастайды, дисплейде «0» символы пайда болады. Желіге қосылу мәзіріне кірдіңіз.",
     "cooling_config_wifi_step2": "Аспаптағы Wi-Fi қосу үшін қарқынды салқындату немесе жылдам қатыру пернесін басыңыз. Дисплейде «01» мәні жанады және автоматты түрде «02» мәніне өзгереді. Wi-Fi қосылуға дайын.",
-    "cooling_config_wifi_step3": "Стрелкалары бар пернелердің көмегімен «S» таңдаңыз. Қарқынды салқындату немесе жылдам қатыру пернесін басу арқылы «S» растаңыз. Қарқынды салқындату немесе қатыру пернесі жыпылықтай бастайды. Бұл аспаптың желісі 3 минут ішінде қосылу үшін ашылған, Жалғастыру үшін «ОДАН ӘРІ» батырмасын басыңыз.",
+    "cooling_config_wifi_step3": "Стрелкалары бар пернелердің көмегімен «S» таңдаңыз. Қарқынды салқындату немесе жылдам қатыру пернесін басу арқылы «S» растаңыз. Қарқынды салқындату немесе қатыру пернесі жыпылықтай бастайды. Бұл аспаптың желісі 5 минут ішінде қосылу үшін ашылған, Жалғастыру үшін «ОДАН ӘРІ» батырмасын басыңыз.",
     "cooling_config_wifi_step1_pair": "Аспапты қалыпты жұмыс режиміне ауыстырыңыз. Wi-Fi белгісін басып, 3 секунд ұстаңыз. Wi-Fi индикаторы жыпылықтай бастайды, дисплейде «0» символы пайда болады. Желіге қосылу мәзіріне кірдіңіз.",
     "cooling_config_wifi_step2_pair": "Көрсеткі пернелермен шарлаңыз және «P» таңдаңыз. Қарқынды салқындату/мұздату пернесін түрту арқылы «P» сөзін растаңыз. Қарқынды салқындату/мұздату пернесі жыпылықтай бастайды. Құрылғы желісі енді жұптастыру үшін 3 минутқа ашық. Жалғастыру үшін КЕЛЕСІ түймесін басыңыз.",
     "dw_config_wifi_step1": "Аспапты қосыңыз. Стрелкалары бар перненің көмегімен баптауларға ауысыңыз. Баптауларға кіру үшін МӘЗІР белгісін басыңыз.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "КОНТРАСТТЫ КӨРСЕТУ",
     "washer_atag_detergent_tab": "Жуғыш зат қойындысы",
     "send_and_start": "ЖІБЕРУ ЖӘНЕ БАСТАУ",
-    "language_english_gb": "АҒЫЛШЫН_Ұб (EN)",
+    "language_english_gb": "АҒЫЛШЫН Ұб (EN)",
     "language_swedish": "ШВЕД (SV)",
     "language_danish": "ДАН (ДА)",
     "language_norwegian": "НОРВЕГИЯ (ЖОҚ)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Ыдыс микротолқынды пеш пен ыстық ауаның қосындысымен дайындалады. Бұл пісіру уақытын қысқартады. Бұл функция ет нан, картоп, кондитер және торттарды пісіру үшін қолданылады.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Ыдыс микротолқынды пеш, гриль және желдеткіш комбинациясы арқылы дайындалады. Бұл пісіру уақытын қысқартады. Картоп гратинін, қуырылған тауық етін және еттің кішкене бөліктерін пісіруге жарайды.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Ыдыс микротолқынды пеш, үстіңгі және астыңғы жылу және желдеткіштің үйлесімімен дайындалады. Бұл пісіру уақытын қысқартады. Торттар, нан және үлкенірек ет кесектерін пісіруге жарайды.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Ыдыс микротолқынды пешті, үстіңгі қыздыруды және желдеткішті біріктіріп пісіреді. Бұл пісіру уақытын қысқартады. Көкөністерді және лазанья сияқты мұздатылған тағамдарды пісіруге жарайды. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Ыдыс микротолқынды пешті, үстіңгі қыздыруды және желдеткішті біріктіріп пісіреді. Бұл пісіру уақытын қысқартады. Көкөністерді және лазанья сияқты мұздатылған тағамдарды пісіруге жарайды. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Тоңазытқыш дисплейінің жарықтығын орнатыңыз.",
+    "CL_DV_RF_modes_tips": "Арнайы режимдерді әртүрлі жағдайларға орнатуға болады. Қай режимдер белсенді болуы керектігін шешіңіз. Бірнеше режимді бір уақытта пайдалану мүмкін емес.",
+    "CL_DV_RF_eco_mode_desc": "Эко режимі қосылғанда, салқындатқыш пен мұздатқыштың температурасы ең қуатты үнемдейтін температураларға орнатылады.",
+    "CL_DV_RF_holiday_mode_desc": "Демалыс режимі қосылғанда, үстіңгі бөліктің температурасы 15°C-қа орнатылады. Мұздатқыш бұрынғы жинағында қалады.",
+    "CL_DV_RF_party_mode_desc": "Кеш режимі қосылғанда, барлық бөлімдер максималды салқындату режиміне өтеді. Кеш режимі 24 сағаттан кейін автоматты түрде өшіріледі.",
+    "CL_DV_RF_cleaning_mode_desc": "Тазалау режимі салқындату бөлімін ыңғайлы тазалауға мүмкіндік береді. ",
+    "CL_DV_RF_sabbath_mode_desc": "Демалыс режимі 72 сағат қосулы болады.\nОсы цикл кезінде оны өшіру үшін * түймесін 3 секунд басыңыз. Апта сайын қайталанады.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "WIFI индикаторы жыпылықтаған кезде желі конфигурациясын бастау үшін «Таймер» түймесін ұзақ басып тұрыңыз. WIFI қосуға болады. 3 минуттан кейін желі конфигурациясы болмаса және индикатор шамы өшсе, күй жойылады. WIFI қайта қосу қажет болса, желі конфигурациясын қайта бастау үшін «Таймер» түймесін ұзақ басып тұрыңыз, WIFI индикаторы қайтадан жыпылықтайды.",
+    "CL_DV_DW_washing_progress": "Жуу жүріп жатыр...",
+    "CL_DV_DW_washing_in_running": "## ішінде жуу жүріп жатыр",
+    "CL_DV_DW_washing_paused": "Жуу кідіртілді",
+    "CL_DV_DW_washing_in_paused": "## ішінде жуу кідіртілді",
+    "CL_DV_RF_set_this_temperature": "Осы температураны орнатыңыз",
+    "CL_DV_TD_drying_in_progress": "Кептіру жүріп жатыр...",
+    "CL_DV_TD_drying_in_x_is_running": "## ішінде кептіру жүріп жатыр",
+    "CL_DV_TD_drying_in_x_is_paused": "## ішінде кептіру кідіртілді",
+    "CL_DV_TD_drying_in_x_complete": "## ішінде кептіру аяқталды",
+    "CL_DV_TD_drying_done": "Құрғызу аяқталды",
+    "CL_DV_WM_washing_in_complete": "## жылы жуу аяқталды",
+    "CL_DV_RF_switch_to_eco_mode": "ЭКО режиміне ауысу",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Құрылғының әрекетсіздігіне байланысты ECO режиміне ауысуды ұсынамыз.",
+    "CL_DV_RF_start_eco_mode": "ECO режимін іске қосыңыз",
+    "CL_CF_AS_support": "Қолдау",
+    "CL_DV_OV_remote_start": "ҚАШЫҚТАН БАСТАУ",
+    "CL_DV_OV_remote_start_enable_tips": "Қашықтан іске қосуды қосу үшін тұтқаны басу арқылы пеште растаңыз.",
+    "CL_CF_CO_device_runs_normal": "Құрылғы қалыпты жағдайда жұмыс істейді.",
+    "CL_CF_CO_device_needs_attention": "Құрылғы назар аударуды қажет етеді.",
+    "CL_DV_RF_next_cleaning_will_be": "Келесі тазалау ** болады",
+    "CL_DV_RF_last_clean_was": "Соңғы тазалау ** болды",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Құрылғы назар аударуды қажет етеді.",
+    "CL_CF_AS_run_normal_condition": "Құрылғы қалыпты жағдайда жұмыс істейді.",
+    "CL_DV_WM_offline_content1": "Құрылғының салымын тексеріңіз және қуатты болуын тексеріңіз.",
+    "CL_DV_WM_offline_content2": "Шкафты жергілікті қосылғанын тексеріңіз.",
+    "CL_DV_WM_offline_content3": "WiFi сигналының күшін тексеріңіз. Сигнал төмен болса, роутер шкафтан тым артық болуы мүмкін.",
+    "CL_DV_WM_offline_title": "Құрылғыңыз желіден тыс",
+    "CL_CF_FM_create_recipe": "Рецепт жасау"
 }
