--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "모든 키 아이콘의 조명이 꺼지고 \"P\"가 깜박이기 시작합니다. 이제 이 제품의 네트워크가 3분 동안 페어링을 위해 열려 있습니다.\n계속하려면 다음을 클릭하세요.",
     "cooling_config_wifi_step1": "장치를 정상적인 작동 조건으로 설정하십시오. 신호음이 들릴 때까지 Wi-Fi 기호를 3초간 길게 탭하세요. Wi-Fi 기호가 깜박이기 시작합니다. 네트워크 연결 메뉴에 들어갔습니다.",
     "cooling_config_wifi_step2": "\"02\"가 표시되면 이 단계를 건너뜁니다.\n\"0\"이 표시되면 집중냉방/냉동 버튼을 눌러 기기의 Wi-Fi를 활성화하세요.\n디스플레이에 \"01\"이 잠시 표시되었다가 자동으로 \"02\"로 변경됩니다.",
-    "cooling_config_wifi_step3": "화살표 키를 사용하여 탐색하고 \"S\"를 선택합니다.\n집중냉방/냉동 키를 눌러 \"S\"를 확인하세요.\n집중냉방/냉동 버튼이 깜박이기 시작합니다. 이제 장치 네트워크가 3분 동안 연결을 위해 열려 있습니다.",
+    "cooling_config_wifi_step3": "화살표 키를 사용하여 탐색하고 \"S\"를 선택합니다.\n집중냉방/냉동 키를 눌러 \"S\"를 확인하세요.\n집중냉방/냉동 버튼이 깜박이기 시작합니다. 이제 장치 네트워크가 5분 동안 연결을 위해 열려 있습니다.",
     "cooling_config_wifi_step1_pair": "장치를 정상적인 작동 조건으로 설정하십시오. 신호음이 들릴 때까지 Wi-Fi 기호를 3초간 길게 탭하세요. Wi-Fi 기호가 깜박이기 시작하고 \"05\"가 나타납니다. 네트워크 연결 메뉴에 들어갔습니다.",
     "cooling_config_wifi_step2_pair": "화살표 키로 탐색하고 \"P\"를 선택합니다. 집중 냉각/냉동 키를 탭하여 \"P\"를 확인합니다. 집중 냉각/냉동 키가 깜박이기 시작합니다. 이제 장치 네트워크가 3분 동안 페어링을 위해 열려 있습니다. 다음을 클릭하여 계속합니다.",
     "dw_config_wifi_step1": "기기를 켜십시오. 화살표 키를 사용하여 설정으로 이동합니다. 메뉴 아이콘을 눌러 설정으로 들어갑니다.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "이 요리는 마이크로파와 뜨거운 공기를 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 이 기능은 미트로프, 감자, 페이스트리, 케이크를 조리하는 데 사용됩니다.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "이 요리는 전자레인지, 그릴, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 감자 그라탕, 치킨 로스트, 작은 고기 조각을 조리하는 데 적합합니다.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "이 요리는 전자레인지, 상하부 열, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 타르트, 빵, 큰 고기 조각을 조리하는 데 적합합니다.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "이 요리는 전자레인지, 탑 히터, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 야채와 라자냐와 같은 냉동 식품을 조리하는 데 적합합니다. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "이 요리는 전자레인지, 탑 히터, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 야채와 라자냐와 같은 냉동 식품을 조리하는 데 적합합니다. ",
+    "CL_DV_RF_display_brightness_setting_tips": "냉장고 디스플레이의 밝기를 설정하세요.",
+    "CL_DV_RF_modes_tips": "다양한 경우에 대해 특별 모드를 설정할 수 있습니다. 어떤 모드를 활성화해야 하는지 결정하세요. 여러 모드를 동시에 사용할 수 없습니다.",
+    "CL_DV_RF_eco_mode_desc": "에코 모드가 활성화되면 냉장고와 냉동고의 온도가 가장 에너지 효율적인 온도로 설정됩니다.",
+    "CL_DV_RF_holiday_mode_desc": "휴일 모드가 활성화되면 상단 칸의 온도는 15°C로 설정됩니다. 냉동고는 이전 설정으로 유지됩니다.",
+    "CL_DV_RF_party_mode_desc": "파티 모드가 활성화되면 모든 칸이 최대 냉각으로 전환됩니다. 파티 모드는 24시간 후 자동으로 비활성화됩니다.",
+    "CL_DV_RF_cleaning_mode_desc": "세척 모드를 사용하면 냉각실을 편안하게 세척할 수 있습니다.",
+    "CL_DV_RF_sabbath_mode_desc": "안식일 모드는 72시간 동안 활성화됩니다. 이 주기 동안 비활성화하려면 *를 3초 동안 누르세요. 안식일 모드는 매주 반복됩니다.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "\"타이머\" 버튼을 길게 눌러 네트워크 구성을 시작하면 WIFI 표시등이 깜박입니다. WIFI를 연결할 수 있습니다. 3분 후 네트워크 구성이 없으면 상태가 취소되고 표시등이 꺼집니다. WIFI를 다시 연결해야 하는 경우 \"타이머\" 버튼을 길게 눌러 네트워크 구성을 다시 시작하면 WIFI 표시등이 다시 깜박입니다.",
+    "CL_DV_DW_washing_progress": "세탁 중...",
+    "CL_DV_DW_washing_in_running": "##에서 세탁이 진행 중입니다.",
+    "CL_DV_DW_washing_paused": "세탁이 일시 중지되었습니다",
+    "CL_DV_DW_washing_in_paused": "##에서 세탁이 일시 중지되었습니다.",
+    "CL_DV_RF_set_this_temperature": "이 온도를 설정하세요",
+    "CL_DV_TD_drying_in_progress": "건조 중입니다...",
+    "CL_DV_TD_drying_in_x_is_running": "##에서 건조가 진행 중입니다.",
+    "CL_DV_TD_drying_in_x_is_paused": "##의 건조가 일시 중지되었습니다.",
+    "CL_DV_TD_drying_in_x_complete": "##의 건조가 완료되었습니다.",
+    "CL_DV_TD_drying_done": "건조가 완료되었습니다",
+    "CL_DV_WM_washing_in_complete": "##의 세탁이 완료되었습니다.",
+    "CL_DV_RF_switch_to_eco_mode": "ECO 모드로 전환",
+    "CL_DV_RF_switch_to_eco_mode_tips": "기기가 사용되지 않으므로 ECO 모드로 전환하는 것이 좋습니다.",
+    "CL_DV_RF_start_eco_mode": "ECO 모드 시작",
+    "CL_CF_AS_support": "지원하다",
+    "CL_DV_OV_remote_start": "원격 시작",
+    "CL_DV_OV_remote_start_enable_tips": "원격 시작을 활성화하려면 오븐의 손잡이를 눌러 확인하세요.",
+    "CL_CF_CO_device_runs_normal": "귀하의 기기는 정상적인 상태에서 작동합니다.",
+    "CL_CF_CO_device_needs_attention": "장치에 주의가 필요합니다.",
+    "CL_DV_RF_next_cleaning_will_be": "다음 청소는 **입니다",
+    "CL_DV_RF_last_clean_was": "마지막 청소는 **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "장치에 주의가 필요합니다.",
+    "CL_CF_AS_run_normal_condition": "귀하의 기기는 정상적인 상태에서 작동합니다.",
+    "CL_DV_WM_offline_content1": "기기가 연결되어 있고 전원이 켜져 있는지 확인하세요.",
+    "CL_DV_WM_offline_content2": "캐비닛이 로컬 무선 네트워크에 연결되어 있는지 확인하세요.",
+    "CL_DV_WM_offline_content3": "WiFi 신호 강도를 확인하세요. 신호가 약하다면 라우터가 캐비닛에서 너무 멀리 떨어져 있는 것일 수 있습니다.",
+    "CL_DV_WM_offline_title": "귀하의 기기는 오프라인 상태입니다.",
+    "CL_CF_FM_create_recipe": "레시피 만들기"
 }
