--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Осветлувањето на сите клучни икони се гаси и „P“ почнува да трепка, мрежата на овој апарат сега е отворена за спарување 3 минути.\nКликнете СЛЕДНО за да продолжите.",
     "cooling_config_wifi_step1": "Поставете го уредот на нормални работни услови. Допрете го и задржете го симболот Wi-Fi 3 секунди додека не слушнете звучен сигнал. Симболот за Wi-Fi ќе почне да трепка. Влеговте во менито за мрежна врска.",
     "cooling_config_wifi_step2": "Ако се прикаже „02“, прескокнете го овој чекор.\nАко се прикаже „0“, допрете го копчето за интензивно ладење/замрзнување за да овозможите Wi-Fi на уредот.\nНа екранот накратко ќе се прикаже „01“ и автоматски ќе се смени во „02“.",
-    "cooling_config_wifi_step3": "Навигирајте со копчињата со стрелки и изберете „S“.\nПотврдете „S“ со допирање на копчето за интензивно ладење/замрзнување.\nКопчето за интензивно ладење/замрзнување ќе почне да трепка. Мрежата на уредот сега е отворена за поврзување 3 минути.",
+    "cooling_config_wifi_step3": "Навигирајте со копчињата со стрелки и изберете „S“.\nПотврдете „S“ со допирање на копчето за интензивно ладење/замрзнување.\nКопчето за интензивно ладење/замрзнување ќе почне да трепка. Мрежата на уредот сега е отворена за поврзување 5 минути.",
     "cooling_config_wifi_step1_pair": "Поставете го уредот на нормални работни услови. Допрете го и задржете го симболот Wi-Fi 3 секунди додека не слушнете звучен сигнал. Симболот за Wi-Fi ќе почне да трепка и ќе се појави „05“. Влеговте во менито за мрежна врска.",
     "cooling_config_wifi_step2_pair": "Движете се со копчињата со стрелки и изберете \"P\". Потврдете „P“ со допирање на копчето за интензивно ладење/замрзнување. Копчето за интензивно ладење/замрзнување ќе почне да трепка. Мрежата на уредот сега е отворена за спарување 3 минути. Кликнете СЛЕДНО за да продолжите.",
     "dw_config_wifi_step1": "ВКЛУЧЕТЕ го апаратот. Навигирајте со копчињата со стрелки до поставките. Притиснете MENU иконата за да ги внесете поставките.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "ПРИКАЖИ КОНТРАСТ",
     "washer_atag_detergent_tab": "Детергент TAB",
     "send_and_start": "ИСПРАТИ И ПОЧНИ",
-    "language_english_gb": "АНГЛИСКИ_ВБ (EN)",
+    "language_english_gb": "АНГЛИСКИ ВБ (EN)",
     "language_swedish": "ШВЕДСКИ (SV)",
     "language_danish": "ДАНСКИ (ДА)",
     "language_norwegian": "НОРВЕГИСКИ (НЕ)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Јадењето се готви со комбинација на микробранови и топол воздух. Ова го скратува времето за готвење. Оваа функција се користи за готвење леб од месо, компири, колачи и колачи.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Јадењето се готви со комбинација од микробранова печка, скара и вентилатор. Ова го скратува времето за готвење. Погоден за готвење гратин од компир, пилешко печење и помали парчиња месо.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Јадењето се готви со комбинација на микробранова печка, горната и долната топлина и вентилаторот. Ова го скратува времето за готвење. Погоден за готвење курви, леб и поголеми парчиња месо.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Јадењето се готви со комбинација на микробранова печка, топол оган и вентилатор. Ова го скратува времето за готвење. Погоден за готвење зеленчук и замрзната храна како лазањи. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Јадењето се готви со комбинација на микробранова печка, топол оган и вентилатор. Ова го скратува времето за готвење. Погоден за готвење зеленчук и замрзната храна како лазањи. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Поставете ја осветленоста на екранот на вашиот фрижидер.",
+    "CL_DV_RF_modes_tips": "Специјални режими може да се постават за различни прилики. Одлучете кои режими треба да бидат активни. Повеќе режими не може да се користат истовремено.",
+    "CL_DV_RF_eco_mode_desc": "Кога е овозможен еко режимот, температурата на ладилникот и замрзнувачот ќе се постават на најефикасните енергетски температури.",
+    "CL_DV_RF_holiday_mode_desc": "Кога е овозможен режим на одмор, температурата на горната преграда е поставена на 15°C. Замрзнувачот останува во претходниот сет.",
+    "CL_DV_RF_party_mode_desc": "Кога е овозможен режимот за забава, сите прегради ќе одат на максимално ладење. Режимот за забава автоматски ќе се оневозможи по 24 часа.",
+    "CL_DV_RF_cleaning_mode_desc": "Режимот за чистење овозможува удобно чистење на одделот за ладење.",
+    "CL_DV_RF_sabbath_mode_desc": "Сабатниот режим ќе биде активен 72 часа. Притиснете * 3 секунди за да го деактивирате во текот на овој циклус. Сабатниот режим се повторува неделно.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Долго притиснете го копчето „Тајмер“ за да ја стартувате мрежната конфигурација, кога индикаторот WIFI трепка. можете да го поврзете WIFI. По 3 минути, статусот ќе се откаже ако нема мрежна конфигурација, а индикаторското светло е исклучено. Ако треба повторно да го поврзете WIFI, долго притиснете го копчето „Тајмер“ за повторно да ја стартувате мрежната конфигурација, индикаторот WIFI повторно ќе трепка.",
+    "CL_DV_DW_washing_progress": "Во тек е перење...",
+    "CL_DV_DW_washing_in_running": "Перењето во ## работи",
+    "CL_DV_DW_washing_paused": "Миењето е паузирано",
+    "CL_DV_DW_washing_in_paused": "Перењето во ## е паузирано",
+    "CL_DV_RF_set_this_temperature": "Поставете ја оваа температура",
+    "CL_DV_TD_drying_in_progress": "Во тек е сушење...",
+    "CL_DV_TD_drying_in_x_is_running": "Сушењето во ## работи",
+    "CL_DV_TD_drying_in_x_is_paused": "Сушењето во ## е паузирано",
+    "CL_DV_TD_drying_in_x_complete": "Сушењето во ## е завршено",
+    "CL_DV_TD_drying_done": "Сушењето е завршено",
+    "CL_DV_WM_washing_in_complete": "Перењето во ## е завршено",
+    "CL_DV_RF_switch_to_eco_mode": "Префрлете се на режимот ЕКО",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Поради неактивноста на апаратот, ви препорачуваме да се префрлите на режимот ЕКО.",
+    "CL_DV_RF_start_eco_mode": "Вклучете го режимот ЕКО",
+    "CL_CF_AS_support": "Поддршка",
+    "CL_DV_OV_remote_start": "ДАЛЕЧЕН СТАРТ",
+    "CL_DV_OV_remote_start_enable_tips": "За да овозможите далечинско стартување, ве молиме потврдете ја рерната со притискање на копчето.",
+    "CL_CF_CO_device_runs_normal": "Вашиот уред работи во нормална состојба.",
+    "CL_CF_CO_device_needs_attention": "На уредот му треба внимание.",
+    "CL_DV_RF_next_cleaning_will_be": "Следното чистење ќе биде **",
+    "CL_DV_RF_last_clean_was": "Последното чистење беше **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "На уредот му треба внимание.",
+    "CL_CF_AS_run_normal_condition": "Вашиот уред работи во нормална состојба.",
+    "CL_DV_WM_offline_content1": "Проверете дали уредот е приклучен и дали има струја.",
+    "CL_DV_WM_offline_content2": "Внимавајте да вашиот шкаф е поврзан со локална безжична мрежа.",
+    "CL_DV_WM_offline_content3": "Проверете ја силата на WiFi сигналот. Ако сигналот е слаб, можеби рутерот е премногу далеку од шкафот.",
+    "CL_DV_WM_offline_title": "Вашиот уред е офлајн",
+    "CL_CF_FM_create_recipe": "Создадете рецепт"
 }
