--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Pencahayaan semua ikon utama padam dan \"P\" mula berkelip, rangkaian perkakas ini kini dibuka untuk berpasangan selama 3 minit.\nKlik SETERUSNYA untuk meneruskan.",
     "cooling_config_wifi_step1": "Tetapkan peranti kepada keadaan operasi biasa. Ketik dan tahan simbol Wi-Fi selama 3 saat sehingga anda mendengar bunyi bip. Simbol Wi-Fi akan mula berkelip. Anda telah memasuki menu sambungan rangkaian.",
     "cooling_config_wifi_step2": "Jika \"02\" dipaparkan, langkau langkah ini.\nJika \"0\" dipaparkan, ketik kekunci penyejukan/pembekuan intensif untuk mendayakan Wi-Fi pada peranti.\nPaparan akan menunjukkan \"01\" secara ringkas dan bertukar kepada \"02\" secara automatik.",
-    "cooling_config_wifi_step3": "Navigasi dengan kekunci anak panah dan pilih \"S\".\nSahkan \"S\" dengan mengetik kekunci penyejukan/pembekuan intensif.\nKunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk sambungan selama 3 minit.",
+    "cooling_config_wifi_step3": "Navigasi dengan kekunci anak panah dan pilih \"S\".\nSahkan \"S\" dengan mengetik kekunci penyejukan/pembekuan intensif.\nKunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk sambungan selama 5 minit.",
     "cooling_config_wifi_step1_pair": "Tetapkan peranti kepada keadaan operasi biasa. Ketik dan tahan simbol Wi-Fi selama 3 saat sehingga anda mendengar bunyi bip. Simbol Wi-Fi akan mula berkelip, dan \"05\" akan muncul. Anda telah memasuki menu sambungan rangkaian.",
     "cooling_config_wifi_step2_pair": "Navigasi dengan kekunci anak panah dan pilih \"P\". Sahkan \"P\" dengan mengetik kekunci penyejukan/pembekuan intensif. Kunci penyejukan/pembekuan intensif akan mula berkelip. Rangkaian peranti kini dibuka untuk berpasangan selama 3 minit. Klik SETERUSNYA untuk meneruskan.",
     "dw_config_wifi_step1": "HIDUPKAN perkakas. Navigasi dengan kekunci anak panah ke tetapan. Tekan ikon MENU untuk memasukkan tetapan.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "PAPARAN KONTRAS",
     "washer_atag_detergent_tab": "TAB detergen",
     "send_and_start": "HANTAR & MULAKAN",
-    "language_english_gb": "BAHASA INGGERIS_GB (EN)",
+    "language_english_gb": "BAHASA INGGERIS GB (EN)",
     "language_swedish": "SWEDISH (SV)",
     "language_danish": "DANISH (DA)",
     "language_norwegian": "NORWEGIAN (TIDAK)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Hidangan ini dimasak dengan gabungan ketuhar gelombang mikro dan udara panas. Ini memendekkan masa memasak. Fungsi ini digunakan untuk memasak roti daging, kentang, pastri dan kek.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Hidangan ini dimasak dengan gabungan ketuhar gelombang mikro, gril dan kipas. Ini memendekkan masa memasak. Sesuai untuk memasak gratin kentang, panggang ayam dan kepingan daging yang lebih kecil.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Hidangan ini dimasak dengan gabungan ketuhar gelombang mikro, api atas dan bawah serta kipas. Ini memendekkan masa memasak. Sesuai untuk memasak tart, roti dan kepingan daging yang lebih besar.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Hidangan ini dimasak dengan gabungan ketuhar gelombang mikro, api atas dan kipas. Ini memendekkan masa memasak. Sesuai untuk memasak sayur-sayuran dan makanan sejuk beku seperti lasagne. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Hidangan ini dimasak dengan gabungan ketuhar gelombang mikro, api atas dan kipas. Ini memendekkan masa memasak. Sesuai untuk memasak sayur-sayuran dan makanan sejuk beku seperti lasagne. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Tetapkan kecerahan paparan peti sejuk anda.",
+    "CL_DV_RF_modes_tips": "Mod khas boleh ditetapkan untuk majlis yang berbeza. Tentukan mod mana yang harus aktif. Berbilang mod tidak boleh digunakan pada masa yang sama.",
+    "CL_DV_RF_eco_mode_desc": "Apabila mod eko didayakan, suhu penyejuk dan penyejuk beku akan ditetapkan kepada kebanyakan suhu cekap tenaga.",
+    "CL_DV_RF_holiday_mode_desc": "Apabila mod cuti didayakan, suhu petak atas ditetapkan kepada 15°C. Peti beku kekal dalam set sebelumnya.",
+    "CL_DV_RF_party_mode_desc": "Apabila mod parti didayakan, semua petak akan menjadi penyejukan maksimum. Mod parti akan dilumpuhkan secara automatik selepas 24 jam.",
+    "CL_DV_RF_cleaning_mode_desc": "Mod pembersihan membolehkan pembersihan selesa pada petak penyejukan.",
+    "CL_DV_RF_sabbath_mode_desc": "Mod Sabat akan aktif selama 72 jam. Tekan * selama 3 saat untuk menyahaktifkan semasa kitaran ini. Mod Sabat berulang setiap minggu.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Tekan lama butang \"Pemasa\" untuk memulakan konfigurasi rangkaian, apabila penunjuk WIFI berkelip. anda boleh menyambungkan WIFI. Selepas 3 minit, status akan dibatalkan jika tiada konfigurasi rangkaian dan lampu penunjuk dimatikan. Jika anda perlu menyambung semula WIFI, tekan lama butang \"Pemasa\" untuk memulakan konfigurasi rangkaian sekali lagi, penunjuk WIFI akan berkelip semula.",
+    "CL_DV_DW_washing_progress": "Pencucian sedang dijalankan...",
+    "CL_DV_DW_washing_in_running": "Mencuci dalam ## sedang berjalan",
+    "CL_DV_DW_washing_paused": "Mencuci dijeda",
+    "CL_DV_DW_washing_in_paused": "Mencuci dalam ## telah dijeda",
+    "CL_DV_RF_set_this_temperature": "Tetapkan suhu ini",
+    "CL_DV_TD_drying_in_progress": "Pengeringan sedang berjalan...",
+    "CL_DV_TD_drying_in_x_is_running": "Pengeringan dalam ## sedang berjalan",
+    "CL_DV_TD_drying_in_x_is_paused": "Pengeringan dalam ## telah dijeda",
+    "CL_DV_TD_drying_in_x_complete": "Pengeringan dalam ## telah selesai",
+    "CL_DV_TD_drying_done": "Pengeringan sudah selesai",
+    "CL_DV_WM_washing_in_complete": "Mencuci dalam ## telah selesai",
+    "CL_DV_RF_switch_to_eco_mode": "Tukar kepada mod ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Disebabkan ketidakaktifan pada perkakas, kami mengesyorkan anda bertukar kepada mod ECO.",
+    "CL_DV_RF_start_eco_mode": "Mulakan mod ECO",
+    "CL_CF_AS_support": "Sokongan",
+    "CL_DV_OV_remote_start": "MULA JAUH",
+    "CL_DV_OV_remote_start_enable_tips": "Untuk mendayakan mula jauh, sila sahkan pada ketuhar dengan menekan tombol.",
+    "CL_CF_CO_device_runs_normal": "Peranti anda berjalan dalam keadaan normal.",
+    "CL_CF_CO_device_needs_attention": "Peranti memerlukan perhatian.",
+    "CL_DV_RF_next_cleaning_will_be": "Pembersihan seterusnya ialah **",
+    "CL_DV_RF_last_clean_was": "Pembersihan terakhir ialah **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Peranti memerlukan perhatian.",
+    "CL_CF_AS_run_normal_condition": "Peranti anda berjalan dalam keadaan normal.",
+    "CL_DV_WM_offline_content1": "Periksa sama ada peralatan anda disambungkan dan kuasa dihidupkan.",
+    "CL_DV_WM_offline_content2": "Pastikan almari anda disambungkan ke rangkaian tanpa wayar tempatan.",
+    "CL_DV_WM_offline_content3": "Periksa kekuatan isyarat WiFi anda. Jika isyarat lemah, mungkin berlaku kerana router terlalu jauh dari almari.",
+    "CL_DV_WM_offline_title": "Peranti anda di luar talian",
+    "CL_CF_FM_create_recipe": "Buat resipi"
 }
