--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "De verlichting van alle toetsen gaan uit en \"S\" begint te knipperen. Het netwerk van het apparaat is nu beschikbaar om te verbinden gedurende 5 minuten. Klik op VOLGENDE om door te gaan.",
     "cooling_config_wifi_step1": "Druk ongeveer 3 seconden op het Wi-Fi symbool. Het Wi-Fi symbool begint te knipperen en status '0' verschijnt op het display. U bent in het menu Netwerkverbinding.",
     "cooling_config_wifi_step2": "Om het apparaat met het Wi-Fi te verbinden drukt u op de toets 'intensief koelen of vriezen'. Het display toont kort de status '01'  en verandert automatisch in '02'. Het apparaat is klaar om verbinding te maken met uw Wi-Finetwerk.",
-    "cooling_config_wifi_step3": "Navigeer met de pijltjestoetsen om 'S' te kiezen. Bevestig 'S' door de toets 'intensief koelen of vriezen' aan te raken. De toets 'intensief koelen of vriezen' begint te knipperen: het netwerk van dit apparaat is nu, gedurende 3 minuten, open om verbinding mee te maken. Klik op VOLGENDE om verder te gaan.",
+    "cooling_config_wifi_step3": "Navigeer met de pijltjestoetsen om 'S' te kiezen. Bevestig 'S' door de toets 'intensief koelen of vriezen' aan te raken. De toets 'intensief koelen of vriezen' begint te knipperen: het netwerk van dit apparaat is nu, gedurende 5 minuten, open om verbinding mee te maken. Klik op VOLGENDE om verder te gaan.",
     "cooling_config_wifi_step1_pair": "Druk ongeveer 3 seconden op het Wi-Fi symbool. Het Wi-Fi symbool begint te knipperen en status '0' verschijnt op het display. U bent in het netwerkverbindingsmenu.",
     "cooling_config_wifi_step2_pair": "Navigeer met de pijltjestoetsen en selecteer \"P\". Bevestig \"P\" door op de intensieve koel-/vriestoets te tikken. De intensieve koel-/vriestoets begint te knipperen. Het netwerk van het apparaat is nu 3 minuten open voor koppeling. Klik op VOLGENDE om door te gaan.",
     "dw_config_wifi_step1": "Schakel het apparaat in. Navigeer met de pijltjestoetsen naar de instellingen. Druk op de programmamodusknop om de instellingen te openen.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "DISPLAYCONTRAST",
     "washer_atag_detergent_tab": "Wasmiddel TAB",
     "send_and_start": "VERZENDEN & BEGINNEN",
-    "language_english_gb": "ENGELS_GB (EN)",
+    "language_english_gb": "ENGELS GB (EN)",
     "language_swedish": "ZWEEDS (SV)",
     "language_danish": "Deens (DA)",
     "language_norwegian": "NOORS (NO)",
@@ -1013,7 +1013,7 @@
     "language_traditional_chinese": "TRADITIONEEL CHINEES (ZH)",
     "language_polish": "POOLS (PL)",
     "language_japanese": "JAPANS (JA)",
-    "language_english_au": "ENGELS_AU (EN)",
+    "language_english_au": "ENGELS AU (EN)",
     "language_slovenian": "SLOVEENS (SL)",
     "language_estonian": "ESTLAND (ET)",
     "language_latvian": "LETLAND (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Het gerecht wordt bereid met een combinatie van microgolven en hete lucht. Dit verkort de kooktijd. Deze functie wordt gebruikt om gehaktbrood, aardappelen, gebak en taarten te bereiden.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Het gerecht wordt bereid met een combinatie van microgolven, de grill en de ventilator. Dit verkort de kooktijd. Geschikt voor het bereiden van aardappelgratin, gebraden kip en kleinere stukken vlees.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Het gerecht wordt bereid met een combinatie van microgolven, boven- en onderwarmte en de ventilator. Dit verkort de kooktijd. Geschikt voor het bereiden van gebak, brood en grotere stukken vlees.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Het gerecht wordt bereid met een combinatie van microgolven, bovenwarmte en de ventilator. Dit verkort de kooktijd. Geschikt voor het bereiden van groenten en diepvriesproducten als lasagne."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Het gerecht wordt bereid met een combinatie van microgolven, bovenwarmte en de ventilator. Dit verkort de kooktijd. Geschikt voor het bereiden van groenten en diepvriesproducten als lasagne.",
+    "CL_DV_RF_display_brightness_setting_tips": "Stel de helderheid van het display van uw koelkast in.",
+    "CL_DV_RF_modes_tips": "Speciale modi kunnen worden ingesteld voor verschillende gelegenheden. Bepaal welke modi actief moeten zijn. Meerdere modi kunnen niet tegelijkertijd worden gebruikt.",
+    "CL_DV_RF_eco_mode_desc": "Wanneer de eco-modus is ingeschakeld, worden de temperaturen van de koel- en vrieskast ingesteld op de meest energiezuinige temperaturen.",
+    "CL_DV_RF_holiday_mode_desc": "Wanneer de vakantiemodus is ingeschakeld, wordt de temperatuur van het bovenste compartiment ingesteld op 15°C. De vriezer blijft op de vorige instelling.",
+    "CL_DV_RF_party_mode_desc": "Wanneer de partymodus is ingeschakeld, gaan alle compartimenten naar maximale koeling. De partymodus wordt na 24 uur automatisch uitgeschakeld.",
+    "CL_DV_RF_cleaning_mode_desc": "Met de reinigingsmodus kunt u het koelvak eenvoudig reinigen.",
+    "CL_DV_RF_sabbath_mode_desc": "De sabbatmodus blijft 72 uur actief.\nDruk 3 seconden op * om de modus tijdens deze cyclus te deactiveren. Herhaalt zich wekelijks.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Druk lang op de knop \"Timer\" om de netwerkconfiguratie te starten, wanneer de WIFI-indicator knippert. U kunt de WIFI verbinden. Na 3 minuten wordt de status geannuleerd als er geen netwerkconfiguratie is en het indicatielampje uit is. Als u de WIFI opnieuw moet verbinden, drukt u lang op de knop \"Timer\" om de netwerkconfiguratie opnieuw te starten, de WIFI-indicator knippert opnieuw.",
+    "CL_DV_DW_washing_progress": "Wassen bezig...",
+    "CL_DV_DW_washing_in_running": "Wassen in ## is bezig",
+    "CL_DV_DW_washing_paused": "Wassen gepauzeerd",
+    "CL_DV_DW_washing_in_paused": "Wassen in ## is gepauzeerd",
+    "CL_DV_RF_set_this_temperature": "Stel deze temperatuur in",
+    "CL_DV_TD_drying_in_progress": "Het drogen is bezig...",
+    "CL_DV_TD_drying_in_x_is_running": "Drogen in ## is bezig",
+    "CL_DV_TD_drying_in_x_is_paused": "Drogen in ## is gepauzeerd",
+    "CL_DV_TD_drying_in_x_complete": "Het drogen in ## is voltooid",
+    "CL_DV_TD_drying_done": "De kleding is al droog",
+    "CL_DV_WM_washing_in_complete": "Wassen in ## is voltooid",
+    "CL_DV_RF_switch_to_eco_mode": "Overschakelen naar ECO-modus",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Omdat het apparaat niet actief is, adviseren wij u om over te schakelen naar de ECO-modus.",
+    "CL_DV_RF_start_eco_mode": "ECO-modus starten",
+    "CL_CF_AS_support": "Steun",
+    "CL_DV_OV_remote_start": "START OP AFSTAND",
+    "CL_DV_OV_remote_start_enable_tips": "Om het op afstand starten in te schakelen, bevestigt u dit door op de knop van de oven te drukken.",
+    "CL_CF_CO_device_runs_normal": "Uw apparaat functioneert normaal.",
+    "CL_CF_CO_device_needs_attention": "Het apparaat heeft aandacht nodig.",
+    "CL_DV_RF_next_cleaning_will_be": "Volgende schoonmaak is **",
+    "CL_DV_RF_last_clean_was": "Laatste schoonmaak was **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Het apparaat heeft aandacht nodig.",
+    "CL_CF_AS_run_normal_condition": "Uw apparaat functioneert normaal.",
+    "CL_DV_WM_offline_content1": "Controleer of je wijnkast aangesloten is en of de stroom is ingeschakeld",
+    "CL_DV_WM_offline_content2": "Zorg ervoor dat je wijnkast verbonden is met een netwerk.",
+    "CL_DV_WM_offline_content3": "Controleer de sterkte van het WiFi-signaal. Als het signaal zwak is, kan het zijn dat de router te ver van de wijnkast staat.",
+    "CL_DV_WM_offline_title": "Uw apparaat is offline",
+    "CL_CF_FM_create_recipe": "Recept maken"
 }
