--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "A iluminação de todos os ícones apaga-se e \"P\" começa a piscar, a rede deste aparelho está agora aberta para emparelhamento durante 3 minutos.\nClique em SEGUINTE para continuar.",
     "cooling_config_wifi_step1": "Coloque o dispositivo em condições normais de funcionamento. Mantenha premido o símbolo de Wi-Fi durante 3 segundos até ouvir um sinal sonoro. O símbolo começa a piscar. Entrou no menu de ligação de rede.",
     "cooling_config_wifi_step2": "Se for apresentado \"02\", salte esta etapa.\nSe for apresentado \"0\", clique no botão de arrefecimento/congelamento intensivo para ativar o Wi-Fi no aparelho.\nO painel mostra brevemente \"01\" e muda automaticamente para \"02\".\nO Wi-Fi está pronto para ser ligado.",
-    "cooling_config_wifi_step3": "Utilize as teclas de seta para selecionar \"S\".\nConfirme \"S\" pressionando na tecla de arrefecimento/congelamento intensivo.\nA tecla de arrefecimento/congelamento intensivo começa a piscar. A rede do aparelho está agora aberta para ligação durante 3 minutos.",
+    "cooling_config_wifi_step3": "Utilize as teclas de seta para selecionar \"S\".\nConfirme \"S\" pressionando na tecla de arrefecimento/congelamento intensivo.\nA tecla de arrefecimento/congelamento intensivo começa a piscar. A rede do aparelho está agora aberta para ligação durante 5 minutos.",
     "cooling_config_wifi_step1_pair": "Coloque o dispositivo em condições normais de funcionamento. Mantenha premido o símbolo de Wi-Fi durante 3 segundos até ouvir um sinal sonoro. O símbolo começa a piscar e aparece \"05\". Entrou no menu de ligação de rede.",
     "cooling_config_wifi_step2_pair": "Com os botões de seta selecione \"P\". Confirmar \"P\" clicando no botão de arrefecimento/congelamento intensivo. O botão começa a piscar. A rede do aparelho está agora aberta para o emparelhamento durante 3 minutos. Clique em SEGUINTE para continuar.",
     "dw_config_wifi_step1": "Ligue o aparelho. Utilize os botões de seta para ir para definições. Clique no ícone MENU para aceder às definições.",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "O prato é cozinhado com uma combinação de micro-ondas e ar quente, o que encurta o tempo de cozedura. Esta função é utilizada para confecionar rolos de carne, batatas, massas e bolos.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "O prato é cozinhado com uma combinação de micro-ondas, grelhador e ventoinha, o que encurta o tempo de cozedura. Adequado para confecionar batatas gratinadas, frango assado e peças de carne mais pequenas.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "O prato é cozinhado com uma combinação de micro-ondas, calor superior/inferior e ventoinha, o que encurta o tempo de cozedura. Adequado para confecionar tartes, pão e peças de carne maiores.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "O prato é cozinhado com uma combinação de micro-ondas, calor superior e ventoinha, o que encurta o tempo de cozedura. Adequado para confecionar legumes e alimentos congelados como lasanha."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "O prato é cozinhado com uma combinação de micro-ondas, calor superior e ventoinha, o que encurta o tempo de cozedura. Adequado para confecionar legumes e alimentos congelados como lasanha.",
+    "CL_DV_RF_display_brightness_setting_tips": "Ajuste o brilho do visor da sua geladeira.",
+    "CL_DV_RF_modes_tips": "Modos especiais podem ser definidos para diferentes ocasiões. Decida quais modos devem ser ativos. Vários modos não podem ser usados ao mesmo tempo.",
+    "CL_DV_RF_eco_mode_desc": "Quando o modo econômico estiver ativado, a temperatura do refrigerador e do freezer será definida para as temperaturas mais eficientes em termos de energia.",
+    "CL_DV_RF_holiday_mode_desc": "Quando o modo férias está ativado, a temperatura do compartimento superior é definida para 15°C. O freezer permanece em sua configuração anterior.",
+    "CL_DV_RF_party_mode_desc": "Quando o modo festa estiver habilitado, todos os compartimentos irão para o resfriamento máximo. O modo festa será desabilitado automaticamente após 24 horas.",
+    "CL_DV_RF_cleaning_mode_desc": "O Modo Limpeza permite uma limpeza confortável do compartimento de arrefecimento. ",
+    "CL_DV_RF_sabbath_mode_desc": "O modo Sabbath ficará ativo por 72 horas.\nPrima * durante 3 segundos para o desativar durante este ciclo. Repete semanalmente.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Pressione longamente o botão “Timer” para iniciar a configuração de rede, quando o indicador WIFI piscar. você pode conectar o WIFI. Após 3 minutos, o status será cancelado se não houver configuração de rede, e a luz indicadora estiver apagada. Se você precisar reconectar o WIFI, pressione longamente o botão “Timer” para iniciar a configuração de rede novamente, o indicador WIFI piscará novamente.",
+    "CL_DV_DW_washing_progress": "Lavagem em andamento...",
+    "CL_DV_DW_washing_in_running": "A lavagem em ## está em andamento",
+    "CL_DV_DW_washing_paused": "Lavagem pausada",
+    "CL_DV_DW_washing_in_paused": "A lavagem em ## foi pausada",
+    "CL_DV_RF_set_this_temperature": "Defina esta temperatura",
+    "CL_DV_TD_drying_in_progress": "Secagem em andamento...",
+    "CL_DV_TD_drying_in_x_is_running": "A secagem em ## está em andamento",
+    "CL_DV_TD_drying_in_x_is_paused": "A secagem em ## foi pausada",
+    "CL_DV_TD_drying_in_x_complete": "A secagem em ## foi concluída",
+    "CL_DV_TD_drying_done": "A sua roupa está lavada",
+    "CL_DV_WM_washing_in_complete": "A lavagem em ## foi concluída",
+    "CL_DV_RF_switch_to_eco_mode": "Mudar para o modo ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Devido à inatividade do aparelho, recomendamos que você alterne para o modo ECO.",
+    "CL_DV_RF_start_eco_mode": "Iniciar modo ECO",
+    "CL_CF_AS_support": "Apoiar",
+    "CL_DV_OV_remote_start": "INÍCIO REMOTO",
+    "CL_DV_OV_remote_start_enable_tips": "Para habilitar o início remoto, confirme no forno pressionando o botão.",
+    "CL_CF_CO_device_runs_normal": "Seu dispositivo funciona em condições normais.",
+    "CL_CF_CO_device_needs_attention": "O dispositivo precisa de atenção.",
+    "CL_DV_RF_next_cleaning_will_be": "A próxima limpeza será **",
+    "CL_DV_RF_last_clean_was": "A última limpeza foi **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "O dispositivo precisa de atenção.",
+    "CL_CF_AS_run_normal_condition": "Seu dispositivo funciona em condições normais.",
+    "CL_DV_WM_offline_content1": "Verifique se o seu equipamento está ligado à corrente e se está a funcionar.",
+    "CL_DV_WM_offline_content2": "Certifique-se de que a cave de vinhos está ligada a uma rede local.",
+    "CL_DV_WM_offline_content3": "Verifique a intensidade do sinal WiFi. Se o sinal for fraco, é possível que o router esteja demasiado afastado da cave de vinhos.",
+    "CL_DV_WM_offline_title": "Seu dispositivo está offline",
+    "CL_CF_FM_create_recipe": "Criar receita"
 }
