--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Iluminarea tuturor pictogramelor cheie se stinge și \"P \" / începe să clipească, rețeaua acestui aparat / este acum deschisă pentru conectare, timp de 5 minute. / Faceți clic pe NEXT pentru a continua.",
     "cooling_config_wifi_step1": "Setați aparatul la funcționarea normală. / Atingeți pictograma Wi-Fi timp de aproximativ 3 / secunde. / Simbolul Wi-Fi începe să clipească și pe afișaj apare „0” /. Ați intrat în meniul de rețea / conexiune.",
     "cooling_config_wifi_step2": "Pentru a activa Wi-Fi pe aparat, atingeți tasta / răcire intensivă sau tasta de înghețare. Afișajul / va afișa în curând „01” și se va schimba automat în / „02” ./Wi-Fi este gata pentru conectare.",
-    "cooling_config_wifi_step3": "Navigați cu tastele săgeată pentru a alege „S” ./ Confirmați „S” atingând tasta  de răcire/intensivă sau de congelare. / Tasta de răcire intensivă sau de congelare pornește /clipește; rețeaua acestui aparat este / acum deschisă pentru conectare, timp de 3 minute. / Faceți clic pe NEXT pentru a continua.",
+    "cooling_config_wifi_step3": "Navigați cu tastele săgeată pentru a alege „S” ./ Confirmați „S” atingând tasta  de răcire/intensivă sau de congelare. / Tasta de răcire intensivă sau de congelare pornește /clipește; rețeaua acestui aparat este / acum deschisă pentru conectare, timp de 5 minute. / Faceți clic pe NEXT pentru a continua.",
     "cooling_config_wifi_step1_pair": "Setați aparatul la funcționarea normală. / Atingeți pictograma Wi-Fi timp de aproximativ 3 / secunde. / Simbolul Wi-Fi începe să clipească și pe afișaj apare „0” /. Ați intrat în meniul de rețea / conexiune.",
     "cooling_config_wifi_step2_pair": "Navigați cu tastele săgeți și selectați „P”. Confirmați „P” atingând tasta de răcire/înghețare intensivă. Tasta de răcire/înghețare intensivă va începe să clipească. Rețeaua dispozitivului este acum deschisă pentru asociere timp de 3 minute. Faceți clic pe NEXT pentru a continua.",
     "dw_config_wifi_step1": "Porniți aparatul. Navigați cu săgeți / taste la setări. Apăsați pictograma MENU pentru a introduce / setările.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "CONTRAST DISPLAY",
     "washer_atag_detergent_tab": "Detergent TAB",
     "send_and_start": "TRIMITĂ & ÎNCEPE",
-    "language_english_gb": "ENGLEZĂ_MB (EN)",
+    "language_english_gb": "ENGLEZĂ MB (EN)",
     "language_swedish": "SUEDEZĂ (SV)",
     "language_danish": "Daneză (DA)",
     "language_norwegian": "NORVEGIANĂ (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIANĂ (IT)",
     "language_dutch": "OLANDEZĂ (NL)",
     "language_french": "FRANCEZĂ (FR)",
-    "language_english_us": "ENGLISH_US (EN)",
+    "language_english_us": "ENGLISH US (EN)",
     "language_spanish": "SPANIOLĂ (ES)",
     "language_russian": "RUSĂ (RU)",
     "language_traditional_chinese": "TRADITIONAL_CHINESE (ZH)",
     "language_polish": "POLONEZĂ (PL)",
     "language_japanese": "JAPONEZĂ (JA)",
-    "language_english_au": "ENGLISH_AU (RO)",
+    "language_english_au": "ENGLISH AU (EN)",
     "language_slovenian": "SLOVENĂ (SL)",
     "language_estonian": "ESTONIAN (ET)",
     "language_latvian": "LETONĂ (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Mâncarea este gătită cu o combinație de cuptor cu microunde și aer cald. Acest lucru scurtează timpul de gătire. Această funcție este utilizată pentru a găti pâine de carne, cartofi, produse de patiserie și prăjituri.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Mâncarea este gătită cu o combinație de cuptor cu microunde, grătar și ventilator. Acest lucru scurtează timpul de gătire. Potrivit pentru gătit gratinat de cartofi, friptură de pui și bucăți mai mici de carne.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Mâncarea este gătită cu o combinație de cuptor cu microunde, căldură superioară și inferioară și ventilator. Acest lucru scurtează timpul de gătire. Potrivit pentru gătit tarte, pâine și bucăți mai mari de carne.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Mâncarea este gătită cu o combinație de cuptor cu microunde, căldură superioară și ventilator. Acest lucru scurtează timpul de gătire. Potrivit pentru gătit legume și alimente congelate precum lasagna. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Mâncarea este gătită cu o combinație de cuptor cu microunde, căldură superioară și ventilator. Acest lucru scurtează timpul de gătire. Potrivit pentru gătit legume și alimente congelate precum lasagna. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Setați luminozitatea ecranului frigiderului.",
+    "CL_DV_RF_modes_tips": "Moduri speciale pot fi setate pentru diferite ocazii. Decideți ce moduri ar trebui să fie active. Mai multe moduri nu pot fi utilizate în același timp.",
+    "CL_DV_RF_eco_mode_desc": "Când modul eco este activat, temperatura răcitorului și congelatorului va fi setată la cele mai eficiente temperaturi energetice.",
+    "CL_DV_RF_holiday_mode_desc": "Când modul vacanță este activat, temperatura compartimentului superior este setată la 15°C. Congelatorul rămâne în setarea anterioară.",
+    "CL_DV_RF_party_mode_desc": "Când modul petrecere este activat, toate compartimentele vor trece la răcire maximă. Modul petrecere va fi dezactivat automat după 24 de ore.",
+    "CL_DV_RF_cleaning_mode_desc": "Modul de curățare permite curățarea confortabilă a compartimentului de răcire.",
+    "CL_DV_RF_sabbath_mode_desc": "Modul Sabat va fi activ timp de 72 de ore. Apăsați * timp de 3 secunde pentru a dezactiva în timpul acestui ciclu. Modul Sabat se repetă săptămânal.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Apăsați lung butonul „Timer” pentru a porni configurarea rețelei, când indicatorul WIFI clipește. poti conecta WIFI-ul. După 3 minute, starea va fi anulată dacă nu există o configurație de rețea, iar indicatorul luminos este stins. Dacă trebuie să reconectați WIFI, apăsați lung butonul „Timer” pentru a porni din nou configurarea rețelei, indicatorul WIFI va clipi din nou.",
+    "CL_DV_DW_washing_progress": "Spălare în curs...",
+    "CL_DV_DW_washing_in_running": "Spălarea în ## rulează",
+    "CL_DV_DW_washing_paused": "Spălarea a fost întreruptă",
+    "CL_DV_DW_washing_in_paused": "Spălarea în ## a fost întreruptă",
+    "CL_DV_RF_set_this_temperature": "Setați această temperatură",
+    "CL_DV_TD_drying_in_progress": "Uscarea in curs...",
+    "CL_DV_TD_drying_in_x_is_running": "Uscarea în ## rulează",
+    "CL_DV_TD_drying_in_x_is_paused": "Uscarea în ## a fost întreruptă",
+    "CL_DV_TD_drying_in_x_complete": "Uscarea în ## a fost finalizată",
+    "CL_DV_TD_drying_done": "Uscarea este gata",
+    "CL_DV_WM_washing_in_complete": "Spălarea în ## a fost finalizată",
+    "CL_DV_RF_switch_to_eco_mode": "Comutați în modul ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Din cauza inactivității aparatului, vă recomandăm să treceți în modul ECO.",
+    "CL_DV_RF_start_eco_mode": "Porniți modul ECO",
+    "CL_CF_AS_support": "Sprijin",
+    "CL_DV_OV_remote_start": "PORNIRE DE LA DISTANTA",
+    "CL_DV_OV_remote_start_enable_tips": "Pentru a activa pornirea de la distanță, vă rugăm să confirmați pe cuptor apăsând butonul.",
+    "CL_CF_CO_device_runs_normal": "Aparatul dumneavoastră funcționează în stare normală.",
+    "CL_CF_CO_device_needs_attention": "Dispozitivul necesită atenție.",
+    "CL_DV_RF_next_cleaning_will_be": "Următoarea curățare va fi **",
+    "CL_DV_RF_last_clean_was": "Ultima curatenie a fost **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Dispozitivul necesită atenție.",
+    "CL_CF_AS_run_normal_condition": "Aparatul dumneavoastră funcționează în stare normală.",
+    "CL_DV_WM_offline_content1": "Verificați dacă aparatul dumneavoastră este conectat la priză și dacă alimentarea este pornită.",
+    "CL_DV_WM_offline_content2": "Asigurați-vă că dulapul dumneavoastră este conectat la o rețea locală wireless.",
+    "CL_DV_WM_offline_content3": "Verificați puterea semnalului WiFi. Dacă semnalul este slab, este posibil ca routerul să fie prea departe de dulap.",
+    "CL_DV_WM_offline_title": "Dispozitivul dvs. este offline",
+    "CL_CF_FM_create_recipe": "Creați rețetă"
 }
