--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Подсветка всех сенсоров погаснет, и начнет мигать символ «P». Сеть этого прибора открыта для подключения в течение 5 минут. Нажмите «ДАЛЕЕ», чтобы продолжить.",
     "cooling_config_wifi_step1": "Переведите прибор в нормальный режим работы. Нажмите и удерживайте 3 секунды значок Wi-Fi. Начнет мигать индикатор Wi-Fi. Вы вошли в меню подключения к сети.",
     "cooling_config_wifi_step2": "Если на дисплее отображается «02», пропустите этот шаг. Если отображается «0», нажмите клавишу интенсивного охлаждения или быстрого замораживания, чтобы включить Wi-Fi на приборе. На дисплее на короткое время отобразится «01» и автоматически изменится на «02». Wi-Fi готов к подключению.",
-    "cooling_config_wifi_step3": "Перемещайтесь с помощью клавиш со стрелками и выберите «S».\nПодтвердите «S», нажав кнопку интенсивного охлаждения/заморозки.\nКлавиша интенсивного охлаждения/заморозки начнет мигать. Сеть устройства теперь открыта для подключения в течение 3 минут.",
+    "cooling_config_wifi_step3": "Перемещайтесь с помощью клавиш со стрелками и выберите «S».\nПодтвердите «S», нажав кнопку интенсивного охлаждения/заморозки.\nКлавиша интенсивного охлаждения/заморозки начнет мигать. Сеть устройства теперь открыта для подключения в течение 5 минут.",
     "cooling_config_wifi_step1_pair": "Переведите прибор в нормальный режим работы. Нажмите и удерживайте 3 секунды значок Wi-Fi. Начнет мигать индикатор Wi-Fi, и на дисплее появится символ «0». Вы вошли в меню подключения к сети.",
     "cooling_config_wifi_step2_pair": "Перемещайтесь с помощью клавиш со стрелками и выберите «P». Подтвердите «P», нажав клавишу интенсивного охлаждения/заморозки. Клавиша интенсивного охлаждения/заморозки начнет мигать. Теперь сеть устройства открыта для сопряжения в течение 3 минут. Нажмите «ДАЛЕЕ», чтобы продолжить.",
     "dw_config_wifi_step1": "Включите прибор. Перейдите к настройкам с помощью клавиш со стрелками. Нажмите значок МЕНЮ, чтобы войти в настройки.",
@@ -1013,7 +1013,7 @@
     "language_traditional_chinese": "КИТАЙСКИЙ (традиционный) (ZH)",
     "language_polish": "ПОЛЬСКИЙ (PL)",
     "language_japanese": "ЯПОНСКИЙ (JA)",
-    "language_english_au": "АНГЛИЙСКИЙ (Австралия) (EN)",
+    "language_english_au": "АНГЛИЙСКИЙ (EN)",
     "language_slovenian": "СЛОВЕНСКИЙ (SL)",
     "language_estonian": "ЭСТОНСКИЙ (ET)",
     "language_latvian": "ЛАТВИЙСКИЙ (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Приготовление с помощью комбинации микроволн и горячего воздуха. Это сокращает время приготовления. Используется для приготовления мясных рулетов, картофеля, выпечки и тортов.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Приготовление с помощью комбинации микроволн, гриля и вентилятора. Это сокращает время приготовления. Подходит для приготовления картофельного гратена, запекания курицы и небольших кусков мяса.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Приготовление с помощью комбинации микроволн, верхнего и нижнего нагревательных элементов и вентилятора. Это сокращает время приготовления. Подходит для приготовления пирогов, хлеба и больших кусков мяса.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Приготовление с помощью комбинации микроволн, верхнего нагревательного элемента и вентилятора. Это сокращает время приготовления. Подходит для приготовления овощей и замороженных продуктов, например, лазаньи."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Приготовление с помощью комбинации микроволн, верхнего нагревательного элемента и вентилятора. Это сокращает время приготовления. Подходит для приготовления овощей и замороженных продуктов, например, лазаньи.",
+    "CL_DV_RF_display_brightness_setting_tips": "Настройте яркость дисплея холодильника.",
+    "CL_DV_RF_modes_tips": "Специальные режимы могут быть установлены для разных случаев. Решите, какие режимы должны быть активны. Несколько режимов не могут использоваться одновременно.",
+    "CL_DV_RF_eco_mode_desc": "При включении эко-режима температура в холодильнике и морозильнике будет установлена на уровне, наиболее эффективном с точки зрения энергосбережения.",
+    "CL_DV_RF_holiday_mode_desc": "При включении режима «Отпуск» температура верхнего отделения устанавливается на 15°C. Морозильная камера остается на прежних настройках.",
+    "CL_DV_RF_party_mode_desc": "При включении режима вечеринки все отсеки перейдут на максимальное охлаждение. Режим вечеринки автоматически отключится через 24 часа.",
+    "CL_DV_RF_cleaning_mode_desc": "Режим очистки обеспечивает комфортную очистку холодильного отделения. ",
+    "CL_DV_RF_sabbath_mode_desc": "Режим шаббата будет активен в течение 72 часов. \nНажмите * и удерживайте 3 сек., чтобы выключить его во время этого цикла. Повторяется еженедельно.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Нажмите и удерживайте кнопку «Таймер», чтобы начать настройку сети, когда индикатор WIFI начнет мигать, вы сможете подключиться к WIFI. Через 3 минуты статус будет отменен, если нет настройки сети, и индикатор погаснет. Если вам нужно повторно подключить WIFI, нажмите и удерживайте кнопку «Таймер», чтобы снова начать настройку сети, индикатор WIFI снова начнет мигать.",
+    "CL_DV_DW_washing_progress": "Идет стирка...",
+    "CL_DV_DW_washing_in_running": "Стирка в ## идет",
+    "CL_DV_DW_washing_paused": "Стирка приостановлена",
+    "CL_DV_DW_washing_in_paused": "Стирка в ## приостановлена",
+    "CL_DV_RF_set_this_temperature": "Установите эту температуру",
+    "CL_DV_TD_drying_in_progress": "Идет сушка...",
+    "CL_DV_TD_drying_in_x_is_running": "Сушка в ## идет",
+    "CL_DV_TD_drying_in_x_is_paused": "Сушка в ## приостановлена",
+    "CL_DV_TD_drying_in_x_complete": "Сушка в ## завершена",
+    "CL_DV_TD_drying_done": "Сушка закончена",
+    "CL_DV_WM_washing_in_complete": "Стирка в ## завершена.",
+    "CL_DV_RF_switch_to_eco_mode": "Переключиться в режим ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "В связи с бездействием прибора мы рекомендуем вам переключиться в режим ECO.",
+    "CL_DV_RF_start_eco_mode": "Запустить режим ECO",
+    "CL_CF_AS_support": "Поддерживать",
+    "CL_DV_OV_remote_start": "УДАЛЕННЫЙ ЗАПУСК",
+    "CL_DV_OV_remote_start_enable_tips": "Чтобы включить дистанционный запуск, подтвердите это нажатием на ручку духовки.",
+    "CL_CF_CO_device_runs_normal": "Ваше устройство работает в нормальном состоянии.",
+    "CL_CF_CO_device_needs_attention": "Устройство требует внимания.",
+    "CL_DV_RF_next_cleaning_will_be": "Следующая уборка будет **",
+    "CL_DV_RF_last_clean_was": "Последняя уборка была **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Устройство требует внимания.",
+    "CL_CF_AS_run_normal_condition": "Ваше устройство работает в нормальном состоянии.",
+    "CL_DV_WM_offline_content1": "Проверьте, подключен ли ваш прибор и включена ли питание.",
+    "CL_DV_WM_offline_content2": "Убедитесь, что ваш шкаф подключен к локальной беспроводной сети.",
+    "CL_DV_WM_offline_content3": "Проверьте силу сигнала WiFi. Если сигнал слабый, возможно, роутер находится слишком далеко от шкафа.",
+    "CL_DV_WM_offline_title": "Ваше устройство находится в автономном режиме",
+    "CL_CF_FM_create_recipe": "Создать рецепт"
 }
