--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "KONTRAST DISPLEJA",
     "washer_atag_detergent_tab": "Čistiaci prostriedok TAB",
     "send_and_start": "ODOŠLI A SPUSTIŤ",
-    "language_english_gb": "ANGLIČTINA_VB (EN)",
+    "language_english_gb": "ANGLIČTINA VB (EN)",
     "language_swedish": "Švédčina (SV)",
     "language_danish": "Dánčina (DA)",
     "language_norwegian": "Nórčina (NO)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Jedlo sa varí kombináciou mikrovĺn a horúceho vzduchu. Tým sa skráti čas varenia. Táto funkcia sa používa na pečenie sekaného, ​​zemiakov, pečiva a koláčov.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Jedlo sa pripravuje kombináciou mikrovlnnej rúry, grilu a ventilátora. Tým sa skráti čas varenia. Vhodné na pečenie zemiakov, kuracích pečienok a menších kúskov mäsa.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Jedlo sa varí kombináciou mikrovlnnej rúry, horného a spodného ohrevu a ventilátora. Tým sa skráti čas varenia. Vhodné na varenie tort, chleba a väčších kusov mäsa.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Jedlo sa varí kombináciou mikrovlnnej rúry, horného ohrevu a ventilátora. Tým sa skráti čas varenia. Vhodné na varenie zeleniny a mrazených potravín, ako sú lasagne. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Jedlo sa varí kombináciou mikrovlnnej rúry, horného ohrevu a ventilátora. Tým sa skráti čas varenia. Vhodné na varenie zeleniny a mrazených potravín, ako sú lasagne. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Nastavte jas displeja vašej chladničky.",
+    "CL_DV_RF_modes_tips": "Pre rôzne príležitosti je možné nastaviť špeciálne režimy. Rozhodnite, ktoré režimy by mali byť aktívne. Nie je možné použiť viacero režimov súčasne.",
+    "CL_DV_RF_eco_mode_desc": "Keď je aktivovaný ekologický režim, teplota chladničky a mrazničky sa nastaví na energeticky najúčinnejšie teploty.",
+    "CL_DV_RF_holiday_mode_desc": "Keď je povolený dovolenkový režim, teplota hornej priehradky je nastavená na 15 °C. Mraznička zostane v pôvodnom nastavení.",
+    "CL_DV_RF_party_mode_desc": "Keď je aktivovaný režim večierok, všetky priehradky prejdú na maximálne chladenie. Párty režim sa automaticky vypne po 24 hodinách.",
+    "CL_DV_RF_cleaning_mode_desc": "Režim čistenia umožňuje pohodlné čistenie chladiaceho priestoru.",
+    "CL_DV_RF_sabbath_mode_desc": "Sabbath režim bude aktívny 72 hodín.\nStlačením * na 3 sekundy ho počas tohto cyklu deaktivujete. Opakuje sa týždenne.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Dlhým stlačením tlačidla „Časovač“ spustíte konfiguráciu siete, keď indikátor WIFI bliká. môžete pripojiť WIFI. Po 3 minútach sa stav zruší, ak nie je konfigurácia siete, a kontrolka zhasne. Ak potrebujete znova pripojiť WIFI, dlhým stlačením tlačidla „Timer“ znova spustite konfiguráciu siete, indikátor WIFI bude znova blikať.",
+    "CL_DV_DW_washing_progress": "Prebieha pranie...",
+    "CL_DV_DW_washing_in_running": "Pranie v ## beží",
+    "CL_DV_DW_washing_paused": "Umývanie pozastavené",
+    "CL_DV_DW_washing_in_paused": "Pranie v ## bolo pozastavené",
+    "CL_DV_RF_set_this_temperature": "Nastavte túto teplotu",
+    "CL_DV_TD_drying_in_progress": "Prebieha sušenie...",
+    "CL_DV_TD_drying_in_x_is_running": "Sušenie v ## beží",
+    "CL_DV_TD_drying_in_x_is_paused": "Sušenie v ## bolo pozastavené",
+    "CL_DV_TD_drying_in_x_complete": "Sušenie v ## bolo dokončené",
+    "CL_DV_TD_drying_done": "Sušenie je hotové",
+    "CL_DV_WM_washing_in_complete": "Pranie v ## bolo dokončené",
+    "CL_DV_RF_switch_to_eco_mode": "Prepnite do režimu ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Z dôvodu nečinnosti spotrebiča odporúčame prepnúť do režimu ECO.",
+    "CL_DV_RF_start_eco_mode": "Spustite režim ECO",
+    "CL_CF_AS_support": "Podpora",
+    "CL_DV_OV_remote_start": "ŠTART NA DIAĽKU",
+    "CL_DV_OV_remote_start_enable_tips": "Ak chcete aktivovať diaľkový štart, potvrďte to na rúre stlačením gombíka.",
+    "CL_CF_CO_device_runs_normal": "Vaše zariadenie beží v normálnom stave.",
+    "CL_CF_CO_device_needs_attention": "Zariadenie vyžaduje pozornosť.",
+    "CL_DV_RF_next_cleaning_will_be": "Ďalšie čistenie bude **",
+    "CL_DV_RF_last_clean_was": "Posledné čistenie bolo **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "",
+    "CL_CF_AS_run_normal_condition": "",
+    "CL_DV_WM_offline_content1": "Skontrolujte, či je vaše zariadenie zapojené a napájanie je zapnuté.",
+    "CL_DV_WM_offline_content2": "Uistite sa, že vaša skrinka je pripojená k miestnej bezdrôtovej sieti.",
+    "CL_DV_WM_offline_content3": "Skontrolujte silu vášho WiFi signálu. Ak je signál slabý, môže to znamenať, že router je príliš ďaleko od skrinky.",
+    "CL_DV_WM_offline_title": "",
+    "CL_CF_FM_create_recipe": ""
 }
