--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Osvetlitev vseh ključnih ikon se ugasne in \"P\" začne utripati, omrežje te naprave je zdaj odprto za seznanjanje za 3 minute.\nZa nadaljevanje kliknite NAPREJ.",
     "cooling_config_wifi_step1": "Napravo nastavite na običajne pogoje delovanja. Tapnite simbol Wi-Fi in ga držite 3 sekunde, dokler ne zaslišite zvočnega signala. Simbol Wi-Fi bo začel utripati. Vstopili ste v meni za omrežno povezavo.",
     "cooling_config_wifi_step2": "Če želite omogočiti Wi-Fi na aparatu, se dotaknite\ntipke za intenzivno hlajenje ali zamrzovanje. Na\nprikazovalniku se za kratek čas prikaže '01', nato pa se prikaz samodejno spremeni v\n'02'.\nOmrežje Wi-Fi je pripravljeno na povezavo.",
-    "cooling_config_wifi_step3": "S puščicama izberite 'S'.\nPotrdite 'S', tako da se dotaknete tipke za intenzivno\nhlajenje ali zamrzovanje.\nTipka za intenzivno hlajenje ali zamrzovanje začne\nutripati. Omrežje tega aparata je\nzdaj 3 minut pripravljeno za povezovanje.\nKliknite NAPREJ za nadaljevanje.",
+    "cooling_config_wifi_step3": "S puščicama izberite 'S'.\nPotrdite 'S', tako da se dotaknete tipke za intenzivno\nhlajenje ali zamrzovanje.\nTipka za intenzivno hlajenje ali zamrzovanje začne\nutripati. Omrežje tega aparata je\nzdaj 5 minut pripravljeno za povezovanje.\nKliknite NAPREJ za nadaljevanje.",
     "cooling_config_wifi_step1_pair": "Napravo nastavite na običajne pogoje delovanja. Tapnite simbol Wi-Fi in ga držite 3 sekunde, dokler ne zaslišite zvočnega signala. Simbol Wi-Fi bo začel utripati in prikazal se bo napis \"05\". Vstopili ste v meni za omrežno povezavo.",
     "cooling_config_wifi_step2_pair": "Krmarite s puščičnimi tipkami in izberite \"P\". Potrdite \"P\" tako, da tapnete tipko za intenzivno hlajenje/zamrzovanje. Tipka za intenzivno hlajenje/zamrzovanje bo začela utripati. Omrežje naprave je zdaj odprto za seznanjanje 3 minute. Za nadaljevanje kliknite NAPREJ.",
     "dw_config_wifi_step1": "VKLOPITE aparat. S puščicama\nizberite nastavitve. Pritisnite ikono MENI, da\nodprete nastavitve.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "KONTRAST ZASLONA",
     "washer_atag_detergent_tab": "Detergent TAB",
     "send_and_start": "POŠLJI IN ZAČNI",
-    "language_english_gb": "ANGLEŠKI_VB (EN)",
+    "language_english_gb": "ANGLEŠKI VB (EN)",
     "language_swedish": "ŠVEDSKI (SV)",
     "language_danish": "DANŠČINA (DA)",
     "language_norwegian": "NORVEŠKI (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "ITALIJANSKI (IT)",
     "language_dutch": "NIZOZEMSKI (NL)",
     "language_french": "FRANCOSKI (FR)",
-    "language_english_us": "ANGLEŠKI_US (EN)",
+    "language_english_us": "ANGLEŠKO US (EN)",
     "language_spanish": "ŠPANSKI (ES)",
     "language_russian": "RUSKI (RU)",
     "language_traditional_chinese": "TRADICIONALNI KITAJSKI (ZH)",
     "language_polish": "POLJSKI (PL)",
     "language_japanese": "JAPONSKI (JA)",
-    "language_english_au": "ANGLEŠKI_AU (EN)",
+    "language_english_au": "ANGLEŠKI AU (EN)",
     "language_slovenian": "SLOVENSKI (SL)",
     "language_estonian": "ESTONSKI (ET)",
     "language_latvian": "LATVIJSKI (LV)",
@@ -2590,7 +2590,7 @@
     "onholiday_start_favorite_tip": "Naprava je v počitniškem načinu, izklopite počitniški način in poskusite znova",
     "Invalid_Timer_key": "Neveljaven časovnik",
     "months": "Meseci",
-    "end_at": "Končajte pri",
+    "end_at": "Končano bo ob",
     "health": "Zdravje",
     "fridge_water_tank_install_state": "Rezervoar za vodo",
     "fridge_open_refrigerator_door_alarm": "Vrata hladilnika se normalno odpirajo in zapirajo",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Jed se kuha s kombinacijo mikrovalov in vročega zraka. To skrajša čas kuhanja. Ta funkcija se uporablja za peko mesne štruce, krompirja, peciva in tort.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Jed se pripravi s kombinacijo mikrovalovne pečice, žara in ventilatorja. To skrajša čas kuhanja. Primerna izbira za peko gratiniranega krompirja, piščančje pečenke in manjših kosov mesa.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Jed se kuha s kombinacijo mikrovalovne pečice, zgornjega in spodnjega grelnega elementa ter ventilatorja. To skrajša čas kuhanja. Primerna izbira za pripravo pit, kruha in večjih kosov mesa.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Jed se kuha s kombinacijo mikrovalovne pečice, zgornjega grelnega elementa in ventilatorja. To skrajša čas kuhanja. Primerna izbira za kuhanje zelenjave in zamrznjenih živil, kot je lazanja. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Jed se kuha s kombinacijo mikrovalovne pečice, zgornjega grelnega elementa in ventilatorja. To skrajša čas kuhanja. Primerna izbira za kuhanje zelenjave in zamrznjenih živil, kot je lazanja. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Nastavite svetlost zaslona vašega hladilnika.",
+    "CL_DV_RF_modes_tips": "Posebne načine lahko nastavite za različne priložnosti. Odločite se, kateri načini naj bodo aktivni. Več načinov ni mogoče uporabiti hkrati.",
+    "CL_DV_RF_eco_mode_desc": "Ko je omogočen ekološki način, bo temperatura hladilnika in zamrzovalnika nastavljena na najbolj energetsko učinkovite temperature.",
+    "CL_DV_RF_holiday_mode_desc": "Ko je omogočen počitniški način, je temperatura zgornjega predelka nastavljena na 15°C. Zamrzovalnik ostane na prejšnji nastavitvi.",
+    "CL_DV_RF_party_mode_desc": "Ko je omogočen način zabave, se bodo vsi predelki maksimalno ohladili. Zabavni način bo po 24 urah samodejno onemogočen.",
+    "CL_DV_RF_cleaning_mode_desc": "Način čiščenja omogoča udobno čiščenje hladilnega predelka.",
+    "CL_DV_RF_sabbath_mode_desc": "Sobotni način bo aktiven 72 ur.\nPritisnite * za 3 sekunde, da ga deaktivirate med tem ciklom. Ponavlja se tedensko.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Dolgo pritisnite gumb »Timer«, da začnete konfiguracijo omrežja, ko indikator WIFI utripa. lahko povežete WIFI. Po 3 minutah bo status preklican, če ni konfiguracije omrežja in lučka indikatorja ne sveti. Če morate znova vzpostaviti povezavo WIFI, dolgo pritisnite gumb »Timer«, da znova zaženete konfiguracijo omrežja, indikator WIFI bo znova utripal.",
+    "CL_DV_DW_washing_progress": "Pranje v teku...",
+    "CL_DV_DW_washing_in_running": "Pranje v ## teče",
+    "CL_DV_DW_washing_paused": "Pranje začasno ustavljeno",
+    "CL_DV_DW_washing_in_paused": "Pranje v ## je zaustavljeno",
+    "CL_DV_RF_set_this_temperature": "Nastavite to temperaturo",
+    "CL_DV_TD_drying_in_progress": "Sušenje v teku...",
+    "CL_DV_TD_drying_in_x_is_running": "Sušenje v ## poteka",
+    "CL_DV_TD_drying_in_x_is_paused": "Sušenje v ## je začasno ustavljeno",
+    "CL_DV_TD_drying_in_x_complete": "Sušenje v ## je končano",
+    "CL_DV_TD_drying_done": "Vaše perilo je končano",
+    "CL_DV_WM_washing_in_complete": "Pranje v ## je končano",
+    "CL_DV_RF_switch_to_eco_mode": "Preklopite v način ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Zaradi nedejavnosti aparata priporočamo, da preklopite na način ECO.",
+    "CL_DV_RF_start_eco_mode": "Zaženite način ECO",
+    "CL_CF_AS_support": "Podpora",
+    "CL_DV_OV_remote_start": "DALJINSKI ZAGON",
+    "CL_DV_OV_remote_start_enable_tips": "Če želite omogočiti daljinski zagon, potrdite na pečici s pritiskom na gumb.",
+    "CL_CF_CO_device_runs_normal": "Vaša naprava deluje v normalnem stanju.",
+    "CL_CF_CO_device_needs_attention": "Naprava potrebuje pozornost.",
+    "CL_DV_RF_next_cleaning_will_be": "Naslednje čiščenje bo **",
+    "CL_DV_RF_last_clean_was": "Zadnje čiščenje je bilo **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Naprava potrebuje pozornost.",
+    "CL_CF_AS_run_normal_condition": "Vaša naprava deluje v normalnem stanju.",
+    "CL_DV_WM_offline_content1": "Preverite, ali je vaša naprava priključena in ali je vklopljena.",
+    "CL_DV_WM_offline_content2": "Preverite, ali je omara povezana z lokalnim brezžičnim omrežjem.",
+    "CL_DV_WM_offline_content3": "Preverite moč signala WiFi. Če je signal šibek, je morda usmerjevalnik predaleč od omare.",
+    "CL_DV_WM_offline_title": "Vaša naprava je brez povezave",
+    "CL_CF_FM_create_recipe": "Ustvari recept"
 }
