--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Alla nyckelikoner slocknar och\"P\"\nblinkar. Nu är produktens nätverk\nöppet för anslutning i 5 minuter.\nKlicka på NÄSTA för att gå vidare.",
     "cooling_config_wifi_step1": "Sätt produkten i normalläge.\nTryck på ikonen för Wi-Fi i cirka 3\nsekunder.\nWi-Fi symbolen börjar blinka och'0'\nvisas på displayen. Du är nu i menyn\nför nätverksanslutning.",
     "cooling_config_wifi_step2": "För att aktivera Wi-Fi på produkten trycker du på\nknappen för intensiv kyla eller snabbinfrysning. Displayen\nvisar snart'01'och ändras till\n'02'automatiskt.\nWi-Fi är nu klart för anslutning.",
-    "cooling_config_wifi_step3": "Använd piltangenterna för att välja'S'.\nBekräfta'S'med ett tryck på knappen för\nintensiv kyla eller snabbinfrysning.\nKnappen för intensiv kyla/snabbinfrysning\nblinkar. Produktens nätverk är nu öppet\nför anslutning i 3 minuter.\nKlicka på NÄSTA för att gå vidare.",
+    "cooling_config_wifi_step3": "Använd piltangenterna för att välja'S'.\nBekräfta'S'med ett tryck på knappen för\nintensiv kyla eller snabbinfrysning.\nKnappen för intensiv kyla/snabbinfrysning\nblinkar. Produktens nätverk är nu öppet\nför anslutning i 5 minuter.\nKlicka på NÄSTA för att gå vidare.",
     "cooling_config_wifi_step1_pair": "Sätt produkten i normalläge.\nTryck på ikonen för Wi-Fi i cirka 3\nsekunder.\nWi-Fi symbolen börjar blinka och'0'\nvisas på displayen. Du är nu i menyn\nför nätverksanslutning.",
     "cooling_config_wifi_step2_pair": "Navigera med piltangenterna och välj \"P\". Bekräfta \"P\" genom att trycka på knappen för intensiv kylning/frysning. Knappen för intensiv kylning/frysning börjar blinka. Enhetsnätverket är nu öppet för ihopkoppling i 3 minuter. Klicka på NÄSTA för att fortsätta.",
     "dw_config_wifi_step1": "Slå på produkten. Gå med piltangenterna\ntill inställningar. Tryck på MENY-ikonen för att\nöppna inställningarna.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "DISPLAY KONTRAST",
     "washer_atag_detergent_tab": "Tvättmedel TAB",
     "send_and_start": "SKICKA & STARTA",
-    "language_english_gb": "ENGELSK_SB (EN)",
+    "language_english_gb": "ENGELSK SB (EN)",
     "language_swedish": "SVENSKA (SV)",
     "language_danish": "Danska (DA)",
     "language_norwegian": "NORSK (NO)",
@@ -1013,7 +1013,7 @@
     "language_traditional_chinese": "TRADITIONELL KINESISKA (ZH)",
     "language_polish": "PUTSA (PL)",
     "language_japanese": "JAPANSK (JA)",
-    "language_english_au": "ENGLISH_AU (EN)",
+    "language_english_au": "ENGLISH AU (EN)",
     "language_slovenian": "SLOVENISKA (SL)",
     "language_estonian": "ESTNISKA (ET)",
     "language_latvian": "LETTISKA (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Rätten tillagas med en kombination av mikrovågor och varmluft. Detta förkortar tillagningstiden. Denna funktion används för att tillaga köttfärslimpa, potatis, bakverk och kakor.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Rätten tillagas med en kombination av mikrovågsugn, grill och fläkt. Detta förkortar tillagningstiden. Lämplig för tillagning av potatisgratäng, kycklingstek och mindre köttbitar.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Rätten tillagas med en kombination av mikrovågsugn, över- och undervärme samt fläkt. Detta förkortar tillagningstiden. Lämplig för tillagning av tårtor, bröd och större köttbitar.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Rätten tillagas med en kombination av mikrovågsugn, övervärme och fläkt. Detta förkortar tillagningstiden. Lämplig för tillagning av grönsaker och fryst mat som lasagne."
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Rätten tillagas med en kombination av mikrovågsugn, övervärme och fläkt. Detta förkortar tillagningstiden. Lämplig för tillagning av grönsaker och fryst mat som lasagne.",
+    "CL_DV_RF_display_brightness_setting_tips": "Ställ in ljusstyrkan på din kylskåps display.",
+    "CL_DV_RF_modes_tips": "Speciallägen kan ställas in för olika tillfällen. Bestäm vilka lägen som ska vara aktiva. Flera lägen kan inte användas samtidigt.",
+    "CL_DV_RF_eco_mode_desc": "När ekoläget är aktiverat kommer temperaturen på kylaren och frysen att ställas in på de mest energieffektiva temperaturerna.",
+    "CL_DV_RF_holiday_mode_desc": "När semesterläget är aktiverat är temperaturen i det övre facket inställd på 15°C. Frysen förblir i sin tidigare uppsättning.",
+    "CL_DV_RF_party_mode_desc": "När partyläget är aktiverat kommer alla fack att gå till maximal kylning. Festläget inaktiveras automatiskt efter 24 timmar.",
+    "CL_DV_RF_cleaning_mode_desc": "Rengöringsläget möjliggör bekväm rengöring av kylfacket. ",
+    "CL_DV_RF_sabbath_mode_desc": "Sabbatsläget är aktivt i 72 timmar.\nTryck på * i 3 sekunder för att avaktivera under denna cykel. Upprepas varje vecka.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Tryck länge på \"Timer\"-knappen för att starta nätverkskonfigurationen, när WIFI-indikatorn blinkar. du kan ansluta WIFI. Efter 3 minuter kommer statusen att avbrytas om det inte finns någon nätverkskonfiguration och indikatorlampan är släckt. Om du behöver återansluta WIFI, tryck länge på \"Timer\"-knappen för att starta nätverkskonfigurationen igen, WIFI-indikatorn kommer att blinka igen.",
+    "CL_DV_DW_washing_progress": "Tvätt pågår...",
+    "CL_DV_DW_washing_in_running": "Tvätt i ## körs",
+    "CL_DV_DW_washing_paused": "Tvätten pausad",
+    "CL_DV_DW_washing_in_paused": "Tvätt i ## har pausats",
+    "CL_DV_RF_set_this_temperature": "Ställ in denna temperatur",
+    "CL_DV_TD_drying_in_progress": "Torkning pågår...",
+    "CL_DV_TD_drying_in_x_is_running": "Torkning i ## körs",
+    "CL_DV_TD_drying_in_x_is_paused": "Torkning i ## har pausats",
+    "CL_DV_TD_drying_in_x_complete": "Torkning i ## har slutförts",
+    "CL_DV_TD_drying_done": "Torkningen är klar",
+    "CL_DV_WM_washing_in_complete": "Tvätt i ## har slutförts",
+    "CL_DV_RF_switch_to_eco_mode": "Växla till ECO-läge",
+    "CL_DV_RF_switch_to_eco_mode_tips": "På grund av inaktivitet på apparaten rekommenderar vi att du byter till ECO-läge.",
+    "CL_DV_RF_start_eco_mode": "Starta ECO-läge",
+    "CL_CF_AS_support": "Stöd",
+    "CL_DV_OV_remote_start": "FJÄRRSTART",
+    "CL_DV_OV_remote_start_enable_tips": "För att aktivera fjärrstart, bekräfta på ugnen genom att trycka på knappen.",
+    "CL_CF_CO_device_runs_normal": "Din enhet fungerar i normalt skick.",
+    "CL_CF_CO_device_needs_attention": "Enheten behöver uppmärksamhet.",
+    "CL_DV_RF_next_cleaning_will_be": "Nästa städning blir **",
+    "CL_DV_RF_last_clean_was": "Senaste städningen var **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Enheten behöver uppmärksamhet.",
+    "CL_CF_AS_run_normal_condition": "Din enhet fungerar i normalt skick.",
+    "CL_DV_WM_offline_content1": "Kontrollera om din apparat är inkopplad och att strömmen är på.",
+    "CL_DV_WM_offline_content2": "Se till att ditt skåp är anslutet till ett lokalt trådlöst nätverk.",
+    "CL_DV_WM_offline_content3": "Kontrollera din WiFi-signalstyrka. Om signalen är svag kan det bero på att routern är för långt borta från skåpet.",
+    "CL_DV_WM_offline_title": "Din enhet är offline",
+    "CL_CF_FM_create_recipe": "Skapa recept"
 }
