--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Tüm tuş simgelerinin ışığı söner ve \"S\" yanıp sönmeye başlar, bu cihazın ağı şimdi 5 dakikalığına bağlanmaya açıktır. Devam etmek için İLERİ'ye tıklayın.",
     "cooling_config_wifi_step1": "Cihazı normal çalışmaya ayarlayın. Wi-Fi simgesine yaklaşık 3 saniye dokunun. Wi-Fi sembolü yanıp sönmeye başlar ve ekranda '0' görünür. Ağ bağlantısı menüsüne girdiniz.",
     "cooling_config_wifi_step2": "Cihazda Wi-Fi'yi etkinleştirmek için yoğun soğutma veya dondurma tuşuna dokunun. Ekranda kısa süre içinde '01' görüntülenecek ve otomatik olarak '02' olarak değişecektir. Wi-Fi bağlantı için hazır.",
-    "cooling_config_wifi_step3": "Ok tuşlarıyla gezinin ve \"S\"yi seçin.\nYoğun soğutma/dondurma tuşuna dokunarak \"S\"yi onaylayın.\nYoğun soğutma/dondurma tuşu yanıp sönmeye başlayacaktır. Cihaz ağı artık 3 dakika boyunca bağlantıya açıktır.",
+    "cooling_config_wifi_step3": "Ok tuşlarıyla gezinin ve \"S\"yi seçin.\nYoğun soğutma/dondurma tuşuna dokunarak \"S\"yi onaylayın.\nYoğun soğutma/dondurma tuşu yanıp sönmeye başlayacaktır. Cihaz ağı artık 5 dakika boyunca bağlantıya açıktır.",
     "cooling_config_wifi_step1_pair": "Cihazı normal çalışmaya ayarlayın. Wi-Fi simgesine yaklaşık 3 saniye dokunun. Wi-Fi sembolü yanıp sönmeye başlar ve ekranda '0' görünür. Ağ bağlantısı menüsüne girdiniz.",
     "cooling_config_wifi_step2_pair": "Ok tuşlarıyla gezinin ve \"P\"yi seçin. Yoğun soğutma/dondurma tuşuna dokunarak \"P\"yi onaylayın. Yoğun soğutma/dondurma tuşu yanıp sönmeye başlayacaktır. Cihaz ağı artık 3 dakika boyunca eşleştirme için açıktır. Devam etmek için İLERİ'ye tıklayın.",
     "dw_config_wifi_step1": "Cihazı AÇIN. Ok tuşlarıyla ayarlara gidin. Ayarlara girmek için MENÜ simgesine basın.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "EKRAN KONTRAST",
     "washer_atag_detergent_tab": "Deterjan SEKMESİ",
     "send_and_start": "GÖNDER & BAŞLAT",
-    "language_english_gb": "İNGİLİZCE_BB (EN)",
+    "language_english_gb": "İNGİLİZCE BB (EN)",
     "language_swedish": "İSVEÇÇE (SV)",
     "language_danish": "Kötü niyetli (DA)",
     "language_norwegian": "NORVEÇÇE (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "İTALYANCA (IT)",
     "language_dutch": "FLEMENKÇE (NL)",
     "language_french": "FRANSIZCA (FR)",
-    "language_english_us": "ENGİLİZCE_ABD (EN)",
+    "language_english_us": "ENGİLİZCE ABD (EN)",
     "language_spanish": "Español (ES)",
     "language_russian": "RUSÇA (RU)",
     "language_traditional_chinese": "GELENEKSEL_ÇİNCE (ZH)",
     "language_polish": "LEHÇE (PL)",
     "language_japanese": "JAPONCA (JA)",
-    "language_english_au": "ENGİLİZCE_AVUSTURALYA (EN)",
+    "language_english_au": "ENGİLİZCE AU (EN)",
     "language_slovenian": "SLOVENCE (SL)",
     "language_estonian": "ESTONYACA (ET)",
     "language_latvian": "LETONYACA (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Yemek mikrodalga ve sıcak hava kombinasyonuyla pişirilir. Bu pişirme süresini kısaltır. Bu fonksiyon köfte, patates, börek ve kek pişirmek için kullanılır.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Yemek mikrodalga, ızgara ve fan kombinasyonuyla pişirilir. Bu pişirme süresini kısaltır. Patates graten, tavuk kızartması ve daha küçük et parçaları pişirmek için uygundur.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Yemek mikrodalga, üst ve alt ısı ve fan kombinasyonuyla pişirilir. Bu pişirme süresini kısaltır. Turta, ekmek ve büyük et parçaları pişirmek için uygundur.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Yemek mikrodalga, üstten ısıtma ve fan kombinasyonuyla pişirilir. Bu pişirme süresini kısaltır. Sebzeleri ve lazanya gibi dondurulmuş yiyecekleri pişirmek için uygundur. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Yemek mikrodalga, üstten ısıtma ve fan kombinasyonuyla pişirilir. Bu pişirme süresini kısaltır. Sebzeleri ve lazanya gibi dondurulmuş yiyecekleri pişirmek için uygundur. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Buzdolabınızın ekranının parlaklığını ayarlayın.",
+    "CL_DV_RF_modes_tips": "Farklı durumlar için özel modlar ayarlanabilir. Hangi modların aktif olması gerektiğine karar verin. Birden fazla mod aynı anda kullanılamaz.",
+    "CL_DV_RF_eco_mode_desc": "Eko modu etkinleştirildiğinde, soğutucu ve dondurucunun sıcaklığı en enerji tasarruflu sıcaklıklara ayarlanır.",
+    "CL_DV_RF_holiday_mode_desc": "Tatil modu etkinleştirildiğinde, üst bölmenin sıcaklığı 15°C'ye ayarlanır. Dondurucu önceki ayarında kalır.",
+    "CL_DV_RF_party_mode_desc": "Parti modu etkinleştirildiğinde, tüm bölmeler maksimum soğutmaya geçecektir. Parti modu 24 saat sonra otomatik olarak devre dışı bırakılacaktır.",
+    "CL_DV_RF_cleaning_mode_desc": "Temizleme modu soğutma bölmesinin konforlu bir şekilde temizlenmesini sağlar.",
+    "CL_DV_RF_sabbath_mode_desc": "Sabbath modu 72 saat boyunca aktif olacaktır. Bu döngü sırasında devre dışı bırakmak için * tuşuna 3 saniye basın. Sabbath modu haftalık olarak tekrarlanır.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Ağ yapılandırmasını başlatmak için “Timer” düğmesine uzun basın, WIFI göstergesi yanıp söndüğünde. WIFI'yi bağlayabilirsiniz. 3 dakika sonra, ağ yapılandırması yoksa durum iptal edilir ve gösterge ışığı söner. WIFI'yi yeniden bağlamanız gerekirse, ağ yapılandırmasını tekrar başlatmak için “Timer” düğmesine uzun basın, WIFI göstergesi tekrar yanıp söner.",
+    "CL_DV_DW_washing_progress": "Yıkama işlemi devam ediyor...",
+    "CL_DV_DW_washing_in_running": "##'de yıkama çalışıyor",
+    "CL_DV_DW_washing_paused": "Yıkama durduruldu",
+    "CL_DV_DW_washing_in_paused": "##'de yıkama durduruldu",
+    "CL_DV_RF_set_this_temperature": "Bu sıcaklığı ayarlayın",
+    "CL_DV_TD_drying_in_progress": "Kurutma işlemi devam ediyor...",
+    "CL_DV_TD_drying_in_x_is_running": "##'de kurutma işlemi çalışıyor",
+    "CL_DV_TD_drying_in_x_is_paused": "##'de kurutma durduruldu",
+    "CL_DV_TD_drying_in_x_complete": "##'de kurutma işlemi tamamlandı",
+    "CL_DV_TD_drying_done": "Kurutma tamamlandı",
+    "CL_DV_WM_washing_in_complete": "##'de yıkama tamamlandı",
+    "CL_DV_RF_switch_to_eco_mode": "ECO moduna geç",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Cihazınızda herhangi bir aktivite olmadığından ECO moduna geçmenizi öneririz.",
+    "CL_DV_RF_start_eco_mode": "ECO modunu başlat",
+    "CL_CF_AS_support": "Destek",
+    "CL_DV_OV_remote_start": "UZAKTAN BAŞLATMA",
+    "CL_DV_OV_remote_start_enable_tips": "Uzaktan başlatmayı etkinleştirmek için lütfen fırındaki düğmeye basarak onaylayın.",
+    "CL_CF_CO_device_runs_normal": "Cihazınız normal durumda çalışmaktadır.",
+    "CL_CF_CO_device_needs_attention": "Cihazın bakıma ihtiyacı var.",
+    "CL_DV_RF_next_cleaning_will_be": "Bir sonraki temizlik ** olacak",
+    "CL_DV_RF_last_clean_was": "Son temizlik **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Cihazın bakıma ihtiyacı var.",
+    "CL_CF_AS_run_normal_condition": "Cihazınız normal durumda çalışmaktadır.",
+    "CL_DV_WM_offline_content1": "Cihazınızın takılı olduğunu ve gücünün açık olduğunu kontrol edin.",
+    "CL_DV_WM_offline_content2": "Dolabınızın yerel bir kablosuz ağa bağlı olduğundan emin olun.",
+    "CL_DV_WM_offline_content3": "WiFi sinyal gücünüzü kontrol edin. Sinyal zayıfsa, router’ın dolaptan çok uzakta olabileceği anlamına gelebilir.",
+    "CL_DV_WM_offline_title": "Cihazınız çevrimdışı",
+    "CL_CF_FM_create_recipe": "Tarif oluştur"
 }
