--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -617,7 +617,7 @@
     "hood_config_wifi_step5_pair": "Đèn của tất cả các biểu tượng phím sẽ tắt và chữ \"S\" bắt đầu nhấp nháy, mạng của thiết bị này hiện đang mở trong 5 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
     "cooling_config_wifi_step1": "Đặt thiết bị về chế độ vận hành bình thường. Chạm vào biểu tượng Wi-Fi trong khoảng 3 giây. Biểu tượng Wi-Fi bắt đầu nhấp nháy và '0' xuất hiện trên màn hình. Bạn đã vào menu kết nối mạng.",
     "cooling_config_wifi_step2": "Để bật Wi-Fi trên thiết bị, hãy chạm vào phím làm mát hoặc đóng băng sâu. Màn hình sẽ nhanh chóng hiển thị '01' và tự động thay đổi thành '02'. Wi-Fi đã sẵn sàng để kết nối.",
-    "cooling_config_wifi_step3": "Điều hướng bằng các phím mũi tên để chọn 'S'. Xác nhận 'S' bằng cách chạm vào phím làm mát hoặc đóng băng sâu. Phím làm mát hoặc đóng băng sâu bắt đầu nhấp nháy; mạng của thiết bị này hiện đang mở trong 3 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
+    "cooling_config_wifi_step3": "Điều hướng bằng các phím mũi tên để chọn 'S'. Xác nhận 'S' bằng cách chạm vào phím làm mát hoặc đóng băng sâu. Phím làm mát hoặc đóng băng sâu bắt đầu nhấp nháy; mạng của thiết bị này hiện đang mở trong 5 phút để kết nối. Nhấp vào NEXT (TIẾP THEO) để tiếp tục.",
     "cooling_config_wifi_step1_pair": "Đặt thiết bị về chế độ vận hành bình thường. Chạm vào biểu tượng Wi-Fi trong khoảng 3 giây. Biểu tượng Wi-Fi bắt đầu nhấp nháy và '0' xuất hiện trên màn hình. Bạn đã vào menu kết nối mạng.",
     "cooling_config_wifi_step2_pair": "Điều hướng bằng các phím mũi tên và chọn \"P\". Xác nhận \"P\" bằng cách nhấn phím làm mát/đông lạnh chuyên sâu. Phím làm mát/đông lạnh chuyên sâu sẽ bắt đầu nhấp nháy. Mạng thiết bị hiện đã mở để ghép nối trong 3 phút. Nhấp vào TIẾP THEO để tiếp tục.",
     "dw_config_wifi_step1": "BẬT thiết bị. Điều hướng bằng các phím mũi tên để cài đặt. Nhấn biểu tượng MENU để vào phần cài đặt.",
@@ -998,7 +998,7 @@
     "washer_atag_display_contrast": "TƯƠNG PHẢN HIỂN THỊ",
     "washer_atag_detergent_tab": "TAB chất tẩy rửa",
     "send_and_start": "THIẾT LẬP & BẮT ĐẦU",
-    "language_english_gb": "ENGLISH_GB (EN)",
+    "language_english_gb": "ENGLISH GB (EN)",
     "language_swedish": "Tiếng Thụy Điển (SV)",
     "language_danish": "Tiếng Đan mạch (DA)",
     "language_norwegian": "Tiếng Na Uy (NO)",
@@ -1007,13 +1007,13 @@
     "language_italian": "Tiếng Ý(IT)",
     "language_dutch": "Tiếng Hà Lan (NL)",
     "language_french": "Tiếng Pháp (FR)",
-    "language_english_us": "Tiếng Anh_U.S. (EN)",
+    "language_english_us": "Tiếng Anh US (EN)",
     "language_spanish": "Tiếng Tây Ban Nha (ES)",
     "language_russian": "Tiếng Nga (RU)",
     "language_traditional_chinese": "Tiếng Trung Phồn thể (ZH)",
     "language_polish": "Tiếng Ba Lan (PL)",
     "language_japanese": "Tiếng Nhật (JA)",
-    "language_english_au": "Tiếng Anh_Úc (EN)",
+    "language_english_au": "Tiếng Anh AU (EN)",
     "language_slovenian": "Tiếng Slovenia  (SL)",
     "language_estonian": "Tiếng Estonia (ET)",
     "language_latvian": "Tiếng Latvia (LV)",
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "Món ăn được nấu bằng sự kết hợp của vi sóng và không khí nóng. Điều này rút ngắn thời gian nấu. Chức năng này được sử dụng để nấu thịt viên, khoai tây, bánh ngọt và bánh nướng.",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Món ăn được nấu bằng sự kết hợp của lò vi sóng, lò nướng và quạt. Điều này rút ngắn thời gian nấu. Thích hợp để nấu khoai tây nghiền, thịt gà nướng và các miếng thịt nhỏ hơn.",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Món ăn được nấu bằng sự kết hợp của lò vi sóng, nhiệt trên và dưới và quạt. Điều này rút ngắn thời gian nấu. Thích hợp để nấu bánh tart, bánh mì và các miếng thịt lớn hơn.",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "Món ăn được nấu bằng sự kết hợp của lò vi sóng, nhiệt độ trên và quạt. Điều này rút ngắn thời gian nấu. Thích hợp để nấu rau và thực phẩm đông lạnh như lasagne. "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Món ăn được nấu bằng sự kết hợp của lò vi sóng, nhiệt độ trên và quạt. Điều này rút ngắn thời gian nấu. Thích hợp để nấu rau và thực phẩm đông lạnh như lasagne. ",
+    "CL_DV_RF_display_brightness_setting_tips": "Cài đặt độ sáng của màn hình tủ lạnh.",
+    "CL_DV_RF_modes_tips": "Có thể thiết lập các chế độ đặc biệt cho các dịp khác nhau. Quyết định chế độ nào sẽ được kích hoạt. Không thể sử dụng nhiều chế độ cùng lúc.",
+    "CL_DV_RF_eco_mode_desc": "Khi chế độ tiết kiệm được bật, nhiệt độ của tủ lạnh và tủ đông sẽ được đặt ở mức tiết kiệm năng lượng nhất.",
+    "CL_DV_RF_holiday_mode_desc": "Khi chế độ nghỉ được bật, nhiệt độ của ngăn trên cùng được đặt ở mức 15°C. Ngăn đông vẫn giữ nguyên ở mức cài đặt trước đó.",
+    "CL_DV_RF_party_mode_desc": "Khi chế độ tiệc tùng được bật, tất cả các ngăn sẽ chuyển sang chế độ làm mát tối đa. Chế độ tiệc tùng sẽ tự động tắt sau 24 giờ.",
+    "CL_DV_RF_cleaning_mode_desc": "Chế độ vệ sinh cho phép vệ sinh khoang làm mát một cách thoải mái.",
+    "CL_DV_RF_sabbath_mode_desc": "Chế độ Sabbath sẽ hoạt động trong 72 giờ. Nhấn * trong 3 giây để hủy kích hoạt trong chu kỳ này. Chế độ Sabbath lặp lại hàng tuần.",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "Nhấn và giữ nút “Timer” để bắt đầu cấu hình mạng, khi đèn báo WIFI nhấp nháy. bạn có thể kết nối WIFI. Sau 3 phút, trạng thái sẽ bị hủy nếu không có cấu hình mạng và đèn báo tắt. Nếu bạn cần kết nối lại WIFI, nhấn và giữ nút “Timer” để bắt đầu cấu hình mạng một lần nữa, đèn báo WIFI sẽ nhấp nháy lần nữa.",
+    "CL_DV_DW_washing_progress": "Đang giặt...",
+    "CL_DV_DW_washing_in_running": "Đang giặt ở ##",
+    "CL_DV_DW_washing_paused": "Đang tạm dừng giặt",
+    "CL_DV_DW_washing_in_paused": "Việc giặt ở ## đã bị tạm dừng",
+    "CL_DV_RF_set_this_temperature": "Đặt nhiệt độ này",
+    "CL_DV_TD_drying_in_progress": "Đang trong quá trình sấy khô...",
+    "CL_DV_TD_drying_in_x_is_running": "Đang sấy trong ## đang chạy",
+    "CL_DV_TD_drying_in_x_is_paused": "Quá trình sấy khô ở ## đã bị tạm dừng",
+    "CL_DV_TD_drying_in_x_complete": "Quá trình sấy khô ở ## đã hoàn tất",
+    "CL_DV_TD_drying_done": "Việc sấy đã hoàn tất",
+    "CL_DV_WM_washing_in_complete": "Việc giặt ở ## đã hoàn tất",
+    "CL_DV_RF_switch_to_eco_mode": "Chuyển sang chế độ ECO",
+    "CL_DV_RF_switch_to_eco_mode_tips": "Do thiết bị không hoạt động nên chúng tôi khuyên bạn nên chuyển sang chế độ ECO.",
+    "CL_DV_RF_start_eco_mode": "Bắt đầu chế độ ECO",
+    "CL_CF_AS_support": "Ủng hộ",
+    "CL_DV_OV_remote_start": "KHỞI ĐỘNG TỪ XA",
+    "CL_DV_OV_remote_start_enable_tips": "Để bật chức năng khởi động từ xa, vui lòng xác nhận trên lò bằng cách nhấn núm vặn.",
+    "CL_CF_CO_device_runs_normal": "Thiết bị của bạn hoạt động bình thường.",
+    "CL_CF_CO_device_needs_attention": "Thiết bị này cần được chú ý.",
+    "CL_DV_RF_next_cleaning_will_be": "Lần vệ sinh tiếp theo sẽ là **",
+    "CL_DV_RF_last_clean_was": "Lần vệ sinh cuối cùng là **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "Thiết bị này cần được chú ý.",
+    "CL_CF_AS_run_normal_condition": "Thiết bị của bạn hoạt động bình thường.",
+    "CL_DV_WM_offline_content1": "Kiểm tra xem thiết bị của bạn đã được cắm và nguồn đã được bật.",
+    "CL_DV_WM_offline_content2": "Đảm bảo tủ của bạn đã được kết nối với mạng không dây địa phương.",
+    "CL_DV_WM_offline_content3": "Kiểm tra độ mạnh của tín hiệu WiFi. Nếu tín hiệu yếu, có thể là router quá xa tủ.",
+    "CL_DV_WM_offline_title": "Thiết bị của bạn đang ngoại tuyến",
+    "CL_CF_FM_create_recipe": "Tạo công thức"
 }
