--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "此程序使用微波和熱風相結合的烹飪方式，能夠縮短烹飪時間。此程序適用於烹飪肉餅、馬鈴薯、糕點和蛋糕等。",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "此程序使用微波、頂部加熱和風扇相結合的方式烹飪可以縮短烹飪時間。適合焗馬鈴薯、烤雞和烤小塊肉。",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "此程序採用微波、頂部加熱、底部加熱和風扇相結合的方式進行烹飪，可縮短烹飪時間。適合烹飪餡餅、麵包和大塊肉等。",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、頂部加熱和風扇相結合的方式烹飪，有利於縮短烹飪時間。適合烹調蔬菜和冷凍食品（如義式千層麵等）。 "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、頂部加熱和風扇相結合的方式烹飪，有利於縮短烹飪時間。適合烹調蔬菜和冷凍食品（如義式千層麵等）。 ",
+    "CL_DV_RF_display_brightness_setting_tips": "設定冰箱顯示器的亮度。",
+    "CL_DV_RF_modes_tips": "可針對不同場合設定特殊模式。決定哪些模式應處於活動狀態。多種模式不能同時使用。",
+    "CL_DV_RF_eco_mode_desc": "啟用經濟模式後，冷卻器和冷凍室的溫度將設定為最節能的溫度。",
+    "CL_DV_RF_holiday_mode_desc": "啟用假日模式時，頂部隔間的溫度設定為 15°C。冰箱仍保持先前的設定。",
+    "CL_DV_RF_party_mode_desc": "啟用派對模式後，所有隔間都將進入最大冷卻狀態。派對模式將在 24 小時後自動停用。",
+    "CL_DV_RF_cleaning_mode_desc": "清潔模式可以舒適地清潔冷藏室。",
+    "CL_DV_RF_sabbath_mode_desc": "安息日模式將持續 72 小時。在此週期中按 * 3 秒可停用。安息日模式每週重複一次。",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "長按「定時器」按鈕開始配網，此時WIFI指示燈閃爍。你可以連接WIFI。 3分鐘後，如果沒有網路配置，則狀態取消，指示燈熄滅。若需要重新連線WIFI，長按「定時器」按鈕重新開始配網，WIFI指示燈會再次閃爍。",
+    "CL_DV_DW_washing_progress": "洗滌進行中...",
+    "CL_DV_DW_washing_in_running": "## 洗滌正在運行",
+    "CL_DV_DW_washing_paused": "洗滌暫停",
+    "CL_DV_DW_washing_in_paused": "## 洗滌已暫停",
+    "CL_DV_RF_set_this_temperature": "設定此溫度",
+    "CL_DV_TD_drying_in_progress": "乾燥正在進行中...",
+    "CL_DV_TD_drying_in_x_is_running": "## 乾燥正在運行",
+    "CL_DV_TD_drying_in_x_is_paused": "## 乾燥已暫停",
+    "CL_DV_TD_drying_in_x_complete": "##乾燥已完成",
+    "CL_DV_TD_drying_done": "烘干已完成",
+    "CL_DV_WM_washing_in_complete": "## 洗滌已完成",
+    "CL_DV_RF_switch_to_eco_mode": "切換至 ECO 模式",
+    "CL_DV_RF_switch_to_eco_mode_tips": "由於設備不活動，我們建議您切換到 ECO 模式。",
+    "CL_DV_RF_start_eco_mode": "啟動ECO模式",
+    "CL_CF_AS_support": "支援",
+    "CL_DV_OV_remote_start": "遠端啟動",
+    "CL_DV_OV_remote_start_enable_tips": "若要啟用遠端啟動，請按旋鈕在烤箱上確認。",
+    "CL_CF_CO_device_runs_normal": "您的設備運作正常。",
+    "CL_CF_CO_device_needs_attention": "該設備需要注意。",
+    "CL_DV_RF_next_cleaning_will_be": "下次清潔將是**",
+    "CL_DV_RF_last_clean_was": "上次清潔時間是**",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "該設備需要注意。",
+    "CL_CF_AS_run_normal_condition": "您的設備運作正常。",
+    "CL_DV_WM_offline_content1": "检查电源线是否连接，设备是否上电开机。",
+    "CL_DV_WM_offline_content2": "确保您的设备已连接到本地WiFi网络。",
+    "CL_DV_WM_offline_content3": "请检查WiFi信号强度。如果信号太弱，可能是由于您的酒柜距离路由器太远。",
+    "CL_DV_WM_offline_title": "您的設備處於離線狀態",
+    "CL_CF_FM_create_recipe": "創建食譜"
 }
