--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4569,5 +4569,42 @@
     "CL_DV_OV_bio24_hot_air_microwave_desc": "此程序使用微波和热风相结合的烹饪方式，能够缩短烹饪时间。此程序适用于烹饪肉饼、土豆、糕点和蛋糕等。",
     "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "此程序使用微波、顶部加热和风扇相结合的方式烹饪可以缩短烹饪时间。适合焗土豆、烤鸡和烤小块肉。",
     "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "此程序采用微波、顶部加热、底部加热和风扇相结合的方式进行烹饪，可以缩短烹饪时间。适合烹饪馅饼、面包和大块肉等。",
-    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、顶部加热和风扇相结合的方式烹饪，有利于缩短烹饪时间。适合烹饪蔬菜和冷冻食品（如意式千层面等）。 "
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、顶部加热和风扇相结合的方式烹饪，有利于缩短烹饪时间。适合烹饪蔬菜和冷冻食品（如意式千层面等）。 ",
+    "CL_DV_RF_display_brightness_setting_tips": "设置冰箱显示屏的亮度。",
+    "CL_DV_RF_modes_tips": "可以为不同场合设置特殊模式。决定应启用哪些模式。不能同时使用多种模式。",
+    "CL_DV_RF_eco_mode_desc": "当启用生态模式时，冷藏室和冷冻室的温度将设置为最节能的温度。",
+    "CL_DV_RF_holiday_mode_desc": "启用假日模式后，上层隔间的温度将设置为 15°C。冷冻室仍保持之前的设置。",
+    "CL_DV_RF_party_mode_desc": "启用派对模式后，所有隔间将进入最大制冷状态。派对模式将在 24 小时后自动禁用。",
+    "CL_DV_RF_cleaning_mode_desc": "清洁模式可以轻松清洁冷藏室。",
+    "CL_DV_RF_sabbath_mode_desc": "安息日模式将激活 72 小时。\n在此周期内，按住 * 3 秒可将其停用。每周重复一次。",
+    "CL_CF_CS_tuya_dehumidifier_cs_2": "长按“Timer”键启动配网，此时WIFI指示灯闪烁，即可连接WIFI。3分钟后若无配网则取消状态，指示灯熄灭。如需重新连接WIFI，长按“Timer”键再次启动配网，WIFI指示灯再次闪烁。",
+    "CL_DV_DW_washing_progress": "正在洗涤...",
+    "CL_DV_DW_washing_in_running": "## 的洗涤正在进行中",
+    "CL_DV_DW_washing_paused": "洗衣暂停",
+    "CL_DV_DW_washing_in_paused": "## 的洗衣服务已暂停",
+    "CL_DV_RF_set_this_temperature": "设置此温度",
+    "CL_DV_TD_drying_in_progress": "正在干燥...",
+    "CL_DV_TD_drying_in_x_is_running": "## 中的干燥正在进行中",
+    "CL_DV_TD_drying_in_x_is_paused": "## 的烘干已暂停",
+    "CL_DV_TD_drying_in_x_complete": "## 的干燥已完成",
+    "CL_DV_TD_drying_done": "烘干已完成",
+    "CL_DV_WM_washing_in_complete": "## 的洗涤已完成",
+    "CL_DV_RF_switch_to_eco_mode": "切换到 ECO 模式",
+    "CL_DV_RF_switch_to_eco_mode_tips": "由于设备处于闲置状态，我们建议您切换到 ECO 模式。",
+    "CL_DV_RF_start_eco_mode": "启动 ECO 模式",
+    "CL_CF_AS_support": "支持",
+    "CL_DV_OV_remote_start": "远程启动",
+    "CL_DV_OV_remote_start_enable_tips": "要启用远程启动，请按下烤箱上的旋钮进行确认。",
+    "CL_CF_CO_device_runs_normal": "您的设备运行正常。",
+    "CL_CF_CO_device_needs_attention": "该设备需要注意。",
+    "CL_DV_RF_next_cleaning_will_be": "下次清洁时间为 **",
+    "CL_DV_RF_last_clean_was": "上次清洁时间为 **",
+    "CL_CF_AS_cleaning_and_care_tips": "",
+    "CL_CF_AS_needs_attention": "该设备需要注意。",
+    "CL_CF_AS_run_normal_condition": "您的设备运行正常。",
+    "CL_DV_WM_offline_content1": "检查电源线是否连接，设备是否上电开机。",
+    "CL_DV_WM_offline_content2": "确保您的设备已连接到本地WiFi网络。",
+    "CL_DV_WM_offline_content3": "请检查WiFi信号强度。如果信号太弱，可能是由于您的酒柜距离路由器太远。",
+    "CL_DV_WM_offline_title": "您的设备处于离线状态",
+    "CL_CF_FM_create_recipe": "创建菜谱"
 }
